deploy: 1b5f37967fcb66216b8800f24c33ac6a15942571

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>reborn_003_Erster_Theil - 永劫回帰のツァラトゥストラ、現代に転生してまた言ったwww</title>
+        <title>reborn_003_Erster_Theil_001 - 永劫回帰のツァラトゥストラ、現代に転生してまた言ったwww</title>
 
 
         <!-- Custom HTML head -->
@@ -175,9 +175,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h3 id="悲報賢者10年のネトゲ生活に飽きてオフ会デビューを決意する"><a class="header" href="#悲報賢者10年のネトゲ生活に飽きてオフ会デビューを決意する"><strong>【悲報】賢者、10年のネトゲ生活に飽きてオフ会デビューを決意する</strong></a></h3>
-<h4 id="第一部-ツァラトゥストラの序説ッ"><a class="header" href="#第一部-ツァラトゥストラの序説ッ"><strong>第一部 ツァラトゥストラの序説ッ！</strong></a></h4>
-<p><strong>1. 伝説のコテハン、山を降りる</strong></p>
+                        <h2 id="悲報賢者10年のネトゲ生活に飽きてオフ会デビューを決意する"><a class="header" href="#悲報賢者10年のネトゲ生活に飽きてオフ会デビューを決意する">【悲報】賢者、10年のネトゲ生活に飽きてオフ会デビューを決意する</a></h2>
 <p>ツァラトゥストラが30歳になったとき、彼は決意した。「俗世間とかいうクソゲー、もうやってらんねぇ」。そう言って彼は故郷の町と、よく釣りをした湖に別れを告げ、山へと引きこもった。リアルからのログアウトである。</p>
 <p>ここで彼は、己の精神という名の果てしない沼と、誰にも邪魔されない孤独という名の快適なネット環境を享受し、10年もの間、賢者としてのレベル上げに没頭した。……というのは建前で、要はガチの引きこもりである。</p>
 <p>しかし、40歳を目前にしたある日、ついに彼の心に変化が訪れた。悟りを開いたのではない。単純に、飽きたのだ。</p>
@@ -195,7 +193,7 @@
 <p>「この溢れんばかりの杯（俺の知恵）を祝福しろ！ この水が黄金色に輝きながら流れ出し、至る所にアンタの歓喜のキラメキを運ぶように！」</p>
 <p>「見よ！ この杯は再び空になることを望んでいる！ そして俺、ツァラトゥストラは、再び『人間』になることを望んでいるのだ！」</p>
 <p>――かくして、伝説の引きこもり賢者ツァラトゥストラの、華麗なる社会復帰（没落）が始まったのであった。前途多難である。</p>
-<p><strong>2. 森のガチ勢との遭遇</strong></p>
+<h2 id="森のガチ勢との遭遇"><a class="header" href="#森のガチ勢との遭遇">森のガチ勢との遭遇</a></h2>
 <p>ツァラトゥストラは一人、意気揚々と山を下りていった。誰にも会わなかった。そりゃそうである。こんな山奥に人がいるわけがない。</p>
 <p>しかし彼が森に入ると、突如、草むらからガサガサと音を立てて一人の老人が現れた。まるで野生のポケモンのようである。老人は薬草か何かを探しに、聖なる庵から出てきたらしい。そして老人は、ツァラトゥストラを見るなり、こう言った。</p>
 <p>「おぉ、この放浪者、ワシは見覚えがあるぞ。何年か前にここを通り過ぎたな。ツァラトゥストラとかいう名前じゃったが……ずいぶんと変わったのう。あの時、お主は自分の過去の灰を山に運んできた。だが今日は、その火を谷へ運ぼうというのか？ 放火犯として捕まるのが怖くないのか？」</p>
@@ -218,34 +216,39 @@
 <p>聖者は答えた。「ワシか？ ワシは歌を作り、それを歌う。歌いながら、笑い、泣き、そして唸る。こうしてワシは神を讃えておるのじゃ」</p>
 <p>「歌い、泣き、笑い、唸ることで、ワシはワシの神である神を讃える。……で、お主は我々にどんな贈り物をくれるというのかね？」</p>
 <p>ツァラトゥストラはこれらの言葉を聞くと、聖者にさっと挨拶し、言った。「私があなたに何を差し上げられるというのですか！ いや、むしろあなたから何も奪わないために、早く立ち去らせてください！」――そして、二人はまるで子どものように笑いながら別れた。おじさん二人組の不気味な光景である。</p>
-<p>しかし、ツァラトゥストラが一人になると、彼は心の中でこう呟いた。 「（まさか……！ この森のジジイ、ネットに繋がらない生活してるからって、まだ『神は死んだ』っていう一大ミームを知らないのかよ……！）」</p>
+<p>しかし、ツァラトゥストラが一人になると、彼は心の中でこう呟いた。
+「（まさか……！ この森のジジイ、ネットに繋がらない生活してるからって、まだ『神は死んだ』っていう一大ミームを知らないのかよ……！）」</p>
 <p>情弱乙、と心の中で悪態をつくツァラトゥストラなのであった。</p>
-<p><strong>3. 市場DEBUT！ 俺の「超人」思想を聞け！</strong></p>
+<h2 id="市場debut-俺の超人思想を聞け"><a class="header" href="#市場debut-俺の超人思想を聞け">市場DEBUT！ 俺の「超人」思想を聞け！</a></h2>
 <p>ツァラトゥストラが森に隣接する次の町に着くと、市場は大変な人だかりであった。なんでも、綱渡り芸人がショーをすると告知されていたらしい。絶好の機会である。彼は人々の前に進み出て、高らかに演説を始めた。</p>
 <p>「皆さん！ 私は君たちに『超人（スーパーマン）』を教えに来ました！ 人間とは、乗り越えられるべき存在なのです！ さあ、君たちは彼を乗り越えるために、一体どんな努力をしてきましたか！？」</p>
-<p>&lt;群衆A&gt; 「え、誰このおっさん」 &lt;群衆B&gt; 「なんかヤバい勧誘じゃない？」</p>
+<p>&lt;群衆A&gt; 「え、誰このおっさん」
+&lt;群衆B&gt; 「なんかヤバい勧誘じゃない？」</p>
 <p>「これまでの全ての存在は、自分自身を超えて何かを創造してきました。それなのに君たちはどうだ！ この大いなる進化の潮流から逆行し、人間を超えるどころか、動物に逆戻りしようというのか！？」</p>
 <p>「猿が人間にとって何であるか？ 笑いの種か、あるいは痛ましい羞恥の対象でしょう。そして人間もまた、超人にとってそうあるべきなのです！ 笑いの種、あるいは痛ましい羞恥の対象に！」</p>
 <p>「君たちは蛆虫から人間への道を歩んできた。だが、君たちの中にはまだ多くの蛆虫がうごめいている！ かつて君たちは猿だった！ そして今なお、人間はどんな猿よりも猿らしいじゃないか！」</p>
-<p>&lt;群衆C&gt; 「ディスがすごい」 &lt;群衆D&gt; 「俺、猿以下だったのか…」</p>
+<p>&lt;群衆C&gt; 「ディスがすごい」
+&lt;群衆D&gt; 「俺、猿以下だったのか…」</p>
 <p>「君たちの中で最も賢い者でさえ、植物と幽霊のキメラにすぎない。だが私は君たちに幽霊や植物になれと命じているわけではない！」</p>
 <p>「見よ！ 私は君たちに『超人』を教える！ 『超人』こそが、この地上の意味なのだ！ 君たちの意志で叫びたまえ！ 『超人が地上の意味である！』と！」</p>
 <p>「兄弟たちよ、お願いだ！ どうか地上に忠実であれ！ そして、『天国が〜』とか『あの世の希望が〜』とか語るやつらを信じるな！ そいつらは毒を盛る者たちだ！ 自覚があろうとなかろうとな！」</p>
 <p>「やつらは生命を軽蔑し、死にゆく者たちであり、自ら毒に侵された者たちだ。大地はもう、そんなやつらにウンザリしている！ だからとっとと消え去るがいい！」</p>
+<p>&lt;群衆E&gt; 「口悪すぎだろ…」</p>
 <p>「かつては、神を冒涜することが最大の罪だった。しかし神は死んだ！ そして、それと共に神を冒涜していた者たちも死んだ！ 今や、大地を冒涜することが最も恐ろしいことなのだ！ 地上の意味よりも、得体の知れないものの内臓を高く評価することこそが、最大の罪なのだ！」</p>
-<p>&lt;群衆E&gt; 「内臓…？」</p>
 <p>「かつて魂は肉体を軽蔑した。その軽蔑こそが最高だと考えられていた。魂は肉体をガリガリに、醜く、飢えさせようとした。そうすることで、肉体と大地から逃れられると考えたのだ」</p>
 <p>「おお、その魂自体が、なんと痩せこけ、醜く、飢えていたことか！ そして、残酷さこそがその魂の喜びであった！」</p>
 <p>「だが兄弟たちよ、君たちに問う！ 君たちの肉体は、君たちの魂について何を語っている？ 君たちの魂は、貧困と汚れと、哀れな安楽に満ちてはいないか？」</p>
+<p>&lt;群衆A&gt; 「なんかだんだん腹立ってきたな」</p>
 <p>「まことに、人間とは汚れた川である。その汚れた川を受け入れてもなお、不浄にならないためには、海でなければならない！」</p>
 <p>「見よ！ 私は君たちに『超人』を教える！ 彼こそがその海だ！ 彼の中になら、君たちの大きな軽蔑も沈むことができる！」</p>
-<p>&lt;群衆A&gt; 「話が長い…綱渡りはまだか？」</p>
 <p>「君たちが経験しうる最高のこととは何か？ それは大いなる軽蔑の時だ！ 君たちの幸福さえもが嫌悪となり、君たちの理性や徳さえもが嫌悪となる時だ！」</p>
 <p>「君たちがこう言う時だ！ 『俺の幸福に何の意味があるんだ！ こんなの貧困と汚れと、哀れな安楽でしかない！ 俺の幸福は、存在そのものを正当化するほどのものだったはずだ！』と！」</p>
+<p>&lt;群衆B&gt; 「そんなこと言ったことねーよ」</p>
 <p>「君たちがこう言う時だ！ 『俺の理性に何の意味があるんだ！ ライオンが獲物を求めるように知識を欲しているか？ いや、これも貧困と汚れと、哀れな安楽だ！』と！」</p>
 <p>「君たちがこう言う時だ！ 『俺の徳に何の意味があるんだ！ 全然俺を狂わせてくれないじゃないか！ 善とか悪とか、もう飽きたんだよ！ 全部、貧困と汚れと、哀れな安楽だ！』と！」</p>
 <p>「君たちがこう言う時だ！ 『俺の正義に何の意味があるんだ！ 俺は燃える炭火には見えない！ だが正義の者とは燃える炭火であるはずだ！』と！」</p>
 <p>「君たちがこう言う時だ！ 『俺の憐憫に何の意味があるんだ！ 憐憫とは、人間を愛する者が釘付けにされる十字架じゃないのか？ だが俺の憐憫は磔刑なんかじゃない！』と！」</p>
+<p>&lt;群衆C&gt; 「ポエムが止まらねえ…」</p>
 <p>「君たちは、すでにそう語ったか？ すでにそう叫んだか？ ああ、君たちがそう叫ぶのを、私が聞いていたならば！」</p>
 <p>「君たちの罪じゃない――君たちのその満足感が天に向かって叫んでいる！ 君たちの罪の中にある貪欲ささえもが天に向かって叫んでいるのだ！」</p>
 <p>「君たちをその舌で舐め尽くす稲妻はどこにあるのだ！？ 君たちに接種されるべき狂気はどこにあるのだ！？」</p>
@@ -253,13 +256,40 @@
 <p>ツァラトゥストラがここまで語り終え、決めポーズをしたその時、群衆の中から一人が叫んだ。</p>
 <p>「もう綱渡り芸人の話はいいから、とっとと本人を見せろよ！」</p>
 <p>そして、すべての人々がドッとツァラトゥストラを笑った。しかし、その言葉が自分に向けられたものだと勘違いした綱渡り芸人は、（え、俺！？）と慌てて準備を始め、仕事に取り掛かったのであった。</p>
+<h2 id="綱渡り芸人と俺のポエムと"><a class="header" href="#綱渡り芸人と俺のポエムと">綱渡り芸人と俺のポエムと</a></h2>
+<p>しかしツァラトゥストラは、自分を笑う人々を見て、驚いた。（え、なんで笑われてるの？俺、なんか変なこと言ったか？）と、内弁慶の心が顔を出す。だが彼はすぐに気を取り直し、さらに熱弁をふるった。オタクはスイッチが入ると止まらないのである。</p>
+<p>「人間とは！ 動物と超人の間に張られた一本のロープなのです！ そう、深淵の上にピーンと張られた、命懸けのロープだ！」</p>
+<p>綱渡り芸人がまさにそのロープの上に足をかけようとしている。なんというタイミングの悪さであろうか。</p>
+<p>「渡るも危険！ 途中で立ち止まるも危険！ 振り返るも危険！ 全てが危険なスリルライド！ それが人生（という名の綱渡り）なのだ！」</p>
+<p>「人間が偉大なのは、彼が『橋』であって『ゴール』ではないという点にあります！ 人間が愛されるべきなのは、彼が『乗り越えていく存在』であり、『没落していく存在』だからなのです！」</p>
+<p>ツァラトゥストラは、うっとりとした表情で、ポエムの朗読を始めた。</p>
+<p>「私は愛します！ 『没落』する者としてしか生き方を知らない者たちを！ なぜなら彼らこそが、向こう岸へ渡っていく者たちだからです！」</p>
+<p>「私は愛します！ 大いなる軽蔑者たちを！ なぜなら彼らこそが大いなる崇拝者であり、彼岸への憧れを射放つ矢だからです！」</p>
+<p>「私は愛します！ 没落し、犠牲になる理由を、星の彼方に求めない者たちを！ むしろ、大地がいつか『超人』のものになるためにと、その身を大地に捧げる者たちを！」</p>
+<p>「私は愛します！ 『超人』が生きるために認識しようと欲し、そのために働く者を！ そうやって自らの没落を望む者を！」</p>
+<p>「私は愛します！ 己の徳を愛する者を！ なぜなら徳とは没落への意志であり、憧れの矢だからです！」</p>
+<p>&lt;群衆D&gt; 「『愛します』シリーズ、まだ続くの？」</p>
+<p>「私は愛します！ 精神の一滴すら自分のために残さず、完全に己の徳の精神そのものになろうとする者を！ そうして彼は精神として橋を渡るのです！」</p>
+<p>「私は愛します！ 自分の徳から性癖と運命をクリエイトする者を！ そうして彼は徳のために生き、そして死ぬことを望むのです！」</p>
+<p>「私は愛します！ 魂を浪費し、見返りを求めない者を！ 彼は常に与え、自分を保とうとしないからです！」</p>
+<p>「私は愛します！ サイコロが自分に有利に転がった時に恥じ入り、『俺はイカサマ師か？』と自問する者を！ なぜなら彼は破滅を望んでいるからです！」</p>
+<p>「私は愛します！ 未来の者たちを正当化し、過去の者たちを救済する者を！ なぜなら彼は現在の者たちによって破滅させられたいからです！」</p>
+<p>&lt;群衆E&gt; 「もうわかった！わかったから！」</p>
+<p>「私は愛します！ 己の神を愛するがゆえに、その神を罰する者を！ なぜなら彼は神の怒りによって破滅しなければならないからです！」</p>
+<p>「私は愛します！ 魂が傷つきやすく、ちょっとしたことで破滅できる者を！ そうして彼は喜んで橋を渡るのです！」</p>
+<p>「私は愛します！ 魂が溢れすぎて自分を忘れ、全てが彼の中にある者を！ かくして、全てのものが彼の没落となるのです！」</p>
+<p>「私は愛します！ 自由な精神と自由な心を持つ者を！ そういう者の頭は、ただ心の臓腑にすぎず、その心こそが彼を没落へと駆り立てるのです！」</p>
+<p>「私は愛します！ 人間という名の暗雲からポツリ、ポツリと落ちる重い雫である者たちを！ 彼らは稲妻が来ることを告げ、預言者として滅びるのです！」</p>
+<p>ツァラトゥストラは天を指さし、叫んだ。</p>
+<p>「見よ！ 私こそがその稲妻の到来を告げる者！ 暗雲から滴る重い雫！ しかし！ この稲妻の名は――『超人』と呼ばれるのだッ！！」</p>
+<p>――シーン。市場は静まり返っていた。ただ一人、綱の上でプルプル震えている芸人を除いて。</p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
 
-                            <a rel="next prefetch" href="reborn_004_Die_Reden_Zarathustras.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="reborn_003_Erster_Theil_002.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -270,7 +300,7 @@
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
 
-                    <a rel="next prefetch" href="reborn_004_Die_Reden_Zarathustras.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="reborn_003_Erster_Theil_002.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
