--- a/reborn_004_Die_Reden_Zarathustras.html
+++ b/reborn_004_Die_Reden_Zarathustras.html
@@ -175,57 +175,59 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h3 id="超絶厨二講座精神のクラスチェンジ-ラクダから獅子そして最強の赤ちゃんへ"><a class="header" href="#超絶厨二講座精神のクラスチェンジ-ラクダから獅子そして最強の赤ちゃんへ"><strong>【超絶厨二講座】精神のクラスチェンジ！ ラクダから獅子、そして最強の「赤ちゃん」へ！</strong></a></h3>
-<p>ツァラトゥストラは、自分を笑いものにした群衆をキッと睨みつけたが、すぐに（フン、愚民どもめが…）と内心で見下し、再びドヤ顔を取り戻した。彼は咳払いを一つすると、ビシッと人差し指を天に突きつけ、新たな説法を垂れ始めた。綱渡り芸人がまさに命綱の上でバランスを取ろうとしている、その真下で。芸人の迷惑など微塵も考えていないのである。</p>
-<p>「よろしいですか、皆さん！ 静粛に！ これから君たちの魂のレベルアップ方法について、特別にレクチャーしてやります！ 題して、『精神の三つの変身』！ いかにして君たちの貧弱な精神が**『ラクダ』<strong>となり、そのラクダが</strong>『獅子』<strong>にジョブチェンジし、そして最終的に、最強形態である</strong>『子ども』**へと至るか！ よく聞くのです！」</p>
-<p>&lt;群衆A&gt; 「また始まったよ、このおっさんの長話…」
-&lt;群衆B&gt; 「次はラクダと獅子と赤ん坊？ 動物園でも開く気か？」</p>
-<p>「まず！ 強靭で、耐え忍ぶ精神…そう、トッププレイヤーの精神というものは、常にヘビーなクエストを求めるものなのです！ 精神の筋トレですよ、筋トレ！ 負荷をかけなければ、魂の筋肉は成長しない！」</p>
-<p>「『何が重いんですか？』ですって？ いい質問だ！ 耐え忍ぶ精神はそう問うのです！ そして、まるで巨大な荷物を背負わんとするラクダのように、ひざまずいてこう言うのですよ！ 『さあ！ 俺に最もヘビーな試練を与えやがれ！』とね！」</p>
-<p>「では諸君！ 何が最もヘビーな試練か、教えてやろうじゃありませんか！ それを乗り越えた時、君たちは己の強さに打ち震え、恍惚の表情を浮かべることになるでしょう！」</p>
-<p>「それは！ 己の傲慢さを叩き折るために、あえて炎上覚悟で自分を卑しめることではないですか！？ 自分のインテリぶりを笑いものにするために、全力でアホなムーヴをかますことではないですか！？」</p>
-<p>&lt;群衆C&gt; 「それ、ただの自爆系ユーチューバーじゃん」</p>
-<p>「あるいは！ 己の輝かしい勝利を祝うパーティーの真っ最中に、『じゃ、俺、次のプロジェクトあるんで』とクールに立ち去ることか！？ 周りが『え、もう行くの！？』と引き留めるのを振り切って、次のステージへ…つまり、誘惑者を試すために、さらなる高みへと登ることか！？」</p>
-<p>「あるいは！ 『知識』という名のカッピカピの木の実と草だけを食料とし、『真理』のためなら魂が飢え乾いても構わないとストイックに耐え抜くことか！？ 俗な情報バラエティなど見ずに、ひたすら哲学書だけを読みふける生活ですよ！」</p>
-<p>「あるいは！ 病気で苦しんでいるときに、『大丈夫？』と寄ってくる馴れ合いの慰めをすべてブロックし、君が何を求めているかなど全く理解しようとしない、クールなハトとだけ友情を結ぶことか！？ ポッポッポー！」</p>
-<p>&lt;群衆D&gt; 「ハト！？」
-&lt;群衆E&gt; 「なんで急にハト！？ 友達いねーだけだろ！」</p>
-<p>「あるいは！ これぞ真理の水だ！と信じたなら、それがどんなに汚れた泥水であろうと飛び込み、冷たいカエルやヌメヌメのヒキガエルが這い寄ってきても、動じないことか！？ クソリプの嵐にも『ご意見ありがとうございます！』とリプを返す鋼のメンタルですよ！」</p>
-<p>「あるいは！ 我々をディスってくるアンチを愛し、ネットの亡霊が『呪ってやる…』と囁いてきても、『かかってこいよ』とその手に手を差し伸べることか！？」</p>
-<p>「これら最もヘビーな試練の数々を、耐え忍ぶ精神はすべて引き受けるのです！ そう、まるで大量の荷物を背負って砂漠へと急ぐラクダのように！ かくして精神は、己だけの孤独な砂漠へと旅立つのであった！」</p>
-<p>と、ツァラトゥストラは一人、壮大なBGMを脳内で再生しながら語る。もちろん、周りにはそんなものは聞こえない。</p>
-<p>「しかし！ その最も孤独な砂漠の果てで、第二の変身が起こります！ ここで精神は、ついに**『獅子』**へとクラスチェンジするのです！ ガオー！ 自由をその手に掴み取り、己自身の砂漠の王となるために！」</p>
-<p>「獅子となった精神は、己の最後の主人を探し求める。そう、ラスボスです！ そのラスボスとは、勝利のために戦うべき、最後の神…その名も**『大いなる竜』**だ！」</p>
-<p>&lt;群衆A&gt; 「ドラゴン！？ 急にファンタジーが始まったぞ！」
-&lt;群衆B&gt; 「このおっさん、さては昨日の夜、変なキノコでも食ったな…」</p>
-<p>「精神がもはや『主人』とも『神』とも呼びたくない、その大いなる竜とは何か！？ その竜の名は**『汝（なんじ）、なすべし』<strong>だ！ そう、</strong>『お前はこうするべきだ』ドラゴン**ですよ！」</p>
-<p>「そのドラゴンは、金ピカの鱗に覆われた獣として、君たちの行く手を阻む！ そして、その一枚一枚の鱗には、こう金色に輝いているのです！<strong>『常識』！『普通』！『みんなやってる』！『親の期待』！『世間体』！</strong>」</p>
-<p>「千年の価値が、これらの鱗でキラキラと輝いている！ そして、全ての竜の中で最も強大なそのドラゴンは、こう言い放つ！ 『この世の全ての価値は、ワシのうちに輝いておる！』と！」</p>
-<p>「『全ての価値はすでに創造済みじゃ！ そしてその創造された価値こそが、ワシ自身でのう！ 真に、もはや“我、欲す（I Will）”などという生意気な言葉は存在せんのじゃ！』とドラゴンは言う！」</p>
-<p>「兄弟たちよ！ なぜ精神に『獅子』が必要なのか、わかりますか！？ ただ荷物を運び、諦め、畏敬の念を抱くだけの『ラクダ』では、もう不十分だからです！」</p>
-<p>&lt;群衆C&gt; 「話が壮大すぎて、もう綱渡りどころじゃないな…」</p>
-<p>「新しい価値を創造すること――それは、実は獅子でさえまだできない。しかし！ 新しい創造のために、まず**『自由』**を己に創り出すこと――それこそが、獅子のパワーにできることなのです！」</p>
-<p>「自由を己に創り出し、『～するべき』という義務の前でさえ、『うるせえ！ 俺はやらねえ！』と聖なるノーを突きつけること！ そのために、兄弟たちよ、獅子が必要なのです！」</p>
-<p>「新しい価値観への権利を、己の力で奪い取ること――それは、耐え忍ぶラクダ精神にとっては、最も恐ろしい強奪行為に他ならない！ まさにそれは、獲物を狩る野獣の所業！」</p>
-<p>「かつてラクダは、『汝、なすべし』という義務を、最も神聖なものとして愛していた。だが獅子となった今、己の愛から自由を奪い返すために、その最も神聖なものの中にさえ、欺瞞と勝手な思い込みを見つけ出さねばならない！ この強奪のために、獅子が必要なのです！」</p>
-<p>ツァラトゥストラはそこで一旦言葉を切り、ニヤリと笑った。</p>
-<p>「しかし、言いたまえ、兄弟たちよ。その強奪者である獅子でさえできなかったことを、成し遂げる存在がいるとしたら？ 強奪する獅子は、さらに変身しなければならないとしたら…？」</p>
-<p>「その最終形態、それこそが**『子ども』**なのです！」</p>
-<p>&lt;群衆一同&gt; 「「「はぁぁぁぁ！？ 子ども！？」」」
-&lt;群衆D&gt; 「ラクダから獅子になって、最後は赤ん坊に退化すんのかよ！」
-&lt;群衆E&gt; 「つまりバブみってこと…？ 意味わからん…」</p>
-<p>「その通り！」とツァラトゥストラは群衆の動揺を意にも介さず、恍惚とした表情で続ける。「子どもは無垢であり、忘却である！ 新たな始まりであり、遊びそのもの！ 自らの力で転がり続ける車輪であり、最初の衝動！ そして、**『聖なる肯定』**の化身なのだ！」</p>
-<p>「そうなのです！ 創造という名の遊びのためには、兄弟たちよ、『いいね！』と全てを肯定する聖なる『はい』が必要なのです！ 獅子のように『ノー』を突きつけるだけでは、何も始まらない！」</p>
-<p>「今や精神は、己の意志そのものを欲する！ かつて世界を失った者は、己自身の世界を新たに獲得するのだ！」</p>
-<p>ツァラトゥストラは両手を大きく広げ、満足げに締めくくった。</p>
-<p>「以上！ 私が君たちに告げた、精神の三つの変身！ いかにして精神がラクダとなり、ラクダが獅子となり、そして獅子が最後に子どもとなったか、理解できましたかな！？」</p>
-<p>――かくして、伝説の引きこもり賢者ツァラトゥストラの、ありがたいんだかありがたくないんだかよく分からないありがたい説法は終わった。そして当時、彼がこの壮大な厨二病講座を開陳していたのは、「まだら牛」と呼ばれる街での出来事であった。住民たちも、変なのが来たとさぞかし迷惑したことであろう。</p>
+                        <h2 id="精神のクラスチェンジ-ドm社畜から反抗期ヤンキーそして最強の赤ちゃんへ"><a class="header" href="#精神のクラスチェンジ-ドm社畜から反抗期ヤンキーそして最強の赤ちゃんへ">精神のクラスチェンジ！ ドM社畜から反抗期ヤンキー、そして最強の赤ちゃんへ！</a></h2>
+<p>市場での大演説が華麗にスルーされ、完全に空気と化したツァラトゥストラ。しかし、彼の鋼のメンタルは少しも折れていなかった。というか、そもそも他人の評価を気にしていないのである。彼は近くの町「まだら牛」に宿を取り、またしても広場に集まった人々（迷惑千万である）に向かって、新たなありがたいお説法を垂れ始めた。</p>
+<p>「皆さん！ 聞こえますか！ 君たちの魂のOSをアップデートする時が来ました！ 今日は君たちの精神がいかにしてクラスチェンジを遂げるか、その三つの変身について、この私が直々にレクチャーして差し上げましょう！」</p>
+<p>&lt;群衆A&gt; 「うわ、またあのおっさんだ…」
+&lt;群衆B&gt; 「今度はクラスチェンジだってよ。何のゲームの話だ？」</p>
+<p>「まず最初に！ 君たちの精神は『らくだ』になるのです！ そう、あの砂漠のドM運送業者です！」</p>
+<p>ツァラトゥストラはビシッと指を突きつける。その目は、まるで自分が世界の真理をすべて知っているとでも言いたげだ。まあ、本気でそう思っているのだが。</p>
+<p>「強靭で、耐え忍ぶ精神！ その心にリスペクトの念を宿すガチ勢の精神は、最も重いもの、そう、超ヘビー級の苦行を求めるのです！」</p>
+<p>「『何が一番重いんですかァ！？』と、そのドM精神は問うでしょう！ そして、らくだのように跪き、喜んで荷物を背負おうとするのです！ ブラック企業の適性、Sランクですね！」</p>
+<p>「『英雄たちよ！ 最もヘビーな試練とは何ですか！？』と、その精神はさらに問うでしょう！ 『それを俺に背負わせろ！ 俺の最強の忍耐力を見せてやる！』と！」</p>
+<p>&lt;群衆C&gt; 「完全にヤバいやつの思考回路だ…」
+&lt;群衆D&gt; 「関わらないでおこう…」</p>
+<p>「それは例えば！ 己の傲慢さを叩き折るために、あえて自分を卑しめることではないですか！？ 自分の賢さをあざ笑うために、全力でアホのフリをすることではないですか！？」</p>
+<p>「あるいは！ 勝利の祝杯をあげているその瞬間に、『俺、この戦いが終わったら故郷に帰るんだ…』とか言ってフラグを立てて離脱することか！？ 誘惑してくるセクシーなお姉さんを試すために、わざわざ雪山に登ることか！？」</p>
+<p>「あるいは！ 認識のドングリと草だけを食料とし、真理のためならと魂の飢えに苦しむことか！？ 要は、意識高い系の草食生活ですね！」</p>
+<p>「あるいは！ 病気になっても『これは試練だ』とか言って医者を追い返し、こちらの都合も聞かずに一方的にメッセージを送ってくる鳩と友情を結ぶことか！？ 孤独の極みですね！」</p>
+<p>&lt;群衆E&gt; 「鳩と友達…？ さみしすぎるだろ…」</p>
+<p>「あるいは！ 『これが真理の水だ！』と言われれば、どんなに汚れた水であろうと飛び込み、冷たいカエルや熱いヒキガエルがいても気にしないことか！？ 衛生観念ゼロですね！」</p>
+<p>「あるいは！ 我々をディスってくるアンチを愛し、お化けが『うらめしや〜』と脅かしてきても、『よぉ、元気？』と手を差し伸べることか！？ メンタルが鋼すぎる！」</p>
+<p>「これら全てのクソ重たい荷物を、そのドM精神は喜んで引き受けるのです！ 荷物を満載して砂漠へとダッシュするらくだのように、自ら孤独という名の砂漠へと突っ込んでいくのです！」</p>
+<p>「しかし！ その孤独の果て、砂漠のど真ん中で第二の変身が起こります！ ここで精神は『獅子』になるのです！ そう、百獣の王！ 反抗期のヤンキーです！」</p>
+<p>&lt;群衆A&gt; 「らくだから獅子！？ すごい進化！」
+&lt;群衆B&gt; 「次はどんな無茶を言うんだ…？」</p>
+<p>「獅子となった精神は、自由を勝ち取り、己の砂漠の王となろうとします！ そして、自分を縛り付けてきた最後の主人を探し出す！ そう、ラスボスとの対決です！ そのラスボスとは、勝利のために戦うべき『大いなる竜』なのです！」</p>
+<p>「その『大いなる竜』とは何か！？ 精神がもはや『ご主人様』とも『神様』とも呼びたくない、そのクソうるさい存在とは何か！？ その竜の名は、『汝（なんじ）、なすべし』ドラゴンです！」</p>
+<p>ツァラトゥストラは、まるでそこに巨大な竜がいるかのように身振り手振りで語る。完全に自分の世界に入っている。</p>
+<p>「しかし！ 獅子の精神はこう言い放つ！ 『我（われ）、欲す！』と！ つまり、『うるせぇ！ 俺は俺のやりたいようにやる！』ということです！」</p>
+<p>「『汝なすべし』ドラゴンは、金ピカの鱗を持つ獣として、君たちの人生の道にデーンと横たわっています。そして、その一枚一枚の鱗には、金色にこう輝いているのです！ 『汝、〜すべし！』と！ 親からの説教LINEみたいですね！」</p>
+<p>&lt;群衆C&gt; 「うわ、目に浮かぶようだ…」
+&lt;群衆D&gt; 「うちの親かよ」</p>
+<p>「千年の価値が、この鱗の一枚一枚に輝いている！ そして、全ての竜の中で最強のこのドラゴンはこう言います。『この世の全ての価値は、ワシに輝いておる！』と！」</p>
+<p>「『全ての価値はすでに創造された！ そして創造された全ての価値、それがワシ自身じゃ！ 真に、もはや「我、欲す」などという生意気な言葉は存在せんのじゃ！』と、その老害ドラゴンは言うのです！」</p>
+<p>「兄弟たちよ！ なぜ精神に獅子が必要なのか、分かりますか！？ ただ荷物を運ぶだけの社畜、諦めとリスペクトの塊である『らくだ』だけでは不十分だからです！」</p>
+<p>「新しい価値を創造すること――それは、反抗期の獅子にすらまだできません。しかし！ 新しい創造のために、まず『自由』を自分自身に創り出すこと――それは獅子のパワーで可能なのです！」</p>
+<p>&lt;群衆E&gt; 「なんか、ちょっとカッコよく聞こえてきた…」</p>
+<p>「自由をその手に掴み、義務の前でさえ『NO！』を突きつける！ そのために、兄弟たちよ、獅子が必要なのです！ 新しい価値観への権利を自らもぎ取ること――それは、忍耐強いらくだにとっては最も恐ろしい強奪行為！ まさに、獲物を奪い取る野獣の所業なのです！」</p>
+<p>「かつて、らくだは『汝なすべし』という命令を、最も神聖なものとして愛していました。しかし今や、獅子はその愛から自由を奪い返すために、その神聖なものの中にすら、まやかしと自分勝手さを見つけ出さねばならない！ この強奪のために、獅子が必要なのです！」</p>
+<p>「しかし！ 言いなさい、兄弟たちよ！ そのヤンキーの獅子でさえできなかったことを、成し遂げる存在がいるとしたら？ 強奪者の獅子は、さらにクラスチェンジしなければならないとしたら？」</p>
+<p>ツァラトゥストラは一呼吸おいて、恍惚の表情で天を仰いだ。</p>
+<p>「そう、『子ども』です！ 無垢なる赤子です！」</p>
+<p>&lt;群衆A&gt; 「え、赤ちゃん返り…？」
+&lt;群衆B&gt; 「らくだ→獅子→赤ん坊って、退化してないか？」</p>
+<p>「子どもは無垢であり、忘却です！ 過去のしがらみを全て忘れ去るのです！ 新たな始まりであり、遊びです！ 自ら転がり出す車輪であり、最初のムーブメント！ 全てを肯定する、聖なる『YESマン』なのです！」</p>
+<p>「そうです！ 創造という名の遊びのために、兄弟たちよ、聖なる肯定が必要なのです！ 今や精神は、自分自身の意志を欲する！ かつて世界を失った者は、今こそ自分自身の世界を獲得するのです！」</p>
+<p>「精神の三つの変身を、私は君たちに告げました！ いかにして精神は、ドM社畜の『らくだ』となり、反抗期ヤンキーの『獅子』となり、そして最後に、全てを創造する『子ども』となったか！—」</p>
+<p>ツァラトゥストラは、ビシッと決めポーズで演説を終えた。やりきった顔である。</p>
+<p>かくしてツァラトゥストラは語りきったのであった。そして当時、彼は「まだら牛」と呼ばれる、なんとも言えない名前の町に滞在していたのである。広場の人々が、彼のありがたいお話についていけたかどうかは、また別の話である。</p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="reborn_003_Erster_Theil.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="reborn_003_Erster_Theil_002.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
@@ -239,7 +241,7 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="reborn_003_Erster_Theil.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="reborn_003_Erster_Theil_002.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
