--- a/reborn_005_Von_den_Lehrstühlen_der_Tugend.html
+++ b/reborn_005_Von_den_Lehrstühlen_der_Tugend.html
@@ -175,61 +175,59 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h3 id="炎上必至意識低い系セミナーに物申す"><a class="header" href="#炎上必至意識低い系セミナーに物申す"><strong>【炎上必至？】意識低い系セミナーに物申す！</strong></a></h3>
-<p><strong>4. ぐっすり安眠コンサルタントのありがたいお言葉</strong></p>
-<p>さて、市場でのデビュー演説が盛大にスベった我らがツァラトゥストラ。彼は次なる布教の地を求めて、町をぶらついていた。すると、一角にまたもや人だかりができているではないか。</p>
-<p>（むっ、また何かイベントか？ 今度こそ、俺の『超人』思想を理解させるチャンスかもしれん…！）</p>
-<p>彼が人垣をかき分けてみると、そこでは一人の賢者が講壇に立ち、集まった若者たちに何かを説いていた。どうやらこの賢者、「眠りの匠」として名を馳せる、今話題のインフルエンサーらしい。若者たちは皆、キラキラした目で彼を見つめている。完全に信者である。</p>
-<p>ツァラトゥストラは（フン、どうせ大したことは言うまい）と高をくくりつつ、若者たちの輪に混じって、その後ろの方に陣取った。そして、その賢者は、うっとりとした表情でこう語り始めた。</p>
-<p>「皆の衆！ 人生で最も大切なことは何か、ご存知ですかな？ それは『名誉』！ そして『恥』！ これらをわきまえることこそが、最高のパフォーマンス、すなわち『快眠』へと繋がる第一歩なのですぞ！」</p>
-<p>&lt;若者A&gt; 「おおー！ 快眠！」
-&lt;若者B&gt; 「名誉と恥…メモメモ…」</p>
-<p>「考えてもみてください！ 夜中に何度も目が覚めてしまう、眠りの質が悪い者たち！ 彼らから道を避けるべきです！ なぜなら、彼らの人生のパフォーマンスは、劣悪だからです！」</p>
-<p>「夜中にこっそり活動する泥棒ですら、眠りに対しては恥じらいを持っている。静かに、穏やかに、事を済ませようとする。しかし！ 夜勤の警備員はどうですかな？ 恥も外聞もなく、けたたましく警笛を鳴らす！ これでは良い眠りは訪れませんな！」</p>
-<p>ツァラトゥストラ（心の声）：「（いや、警備員は仕事だろ…何を言ってるんだこのジジイは…）」</p>
-<p>「そもそも！ 眠るという行為は、簡単なスキルではないのです！ そのために、一日中、意識を高く保ち、目覚めている必要があるのですぞ！」</p>
-<p>賢者はビシッと指を立て、ドヤ顔で続ける。</p>
-<p>「そこで！ 皆さんに『快眠のためのゴールデンルール』を授けましょう！ まず！ 一日に十回、昨日の自分を超えなさい！ これが心地よい疲労感を生み、精神のサプリメントとなるのです！」</p>
-<p>&lt;若者C&gt; 「一日十回も自分超え！？ ハードル高っ！」</p>
-<p>「次に！ 一日に十回、自分自身と和解しなさい！ 自己超越は痛みを伴うもの。自分を許せぬ者は、悪夢という名のデバフにうなされることでしょう！」</p>
-<p>「そして！ 一日に十個、新しい真理（ライフハック）を見つけなさい！ さもなくば、あなたの魂は夜中に『なんか面白いことないかな～』とスマホを探し始め、飢えたまま朝を迎えるでしょう！」</p>
-<p>「最後に！ 一日に十回、腹の底から笑いなさい！ さもなくば、夜中に胃がキリキリと痛み出し、ストレスという名の邪悪な父が、あなたを枕元で苦しめることになりますぞ！」</p>
-<p>ツァラトゥストラ（心の声）：「（一日に四十個もタスクがあるのかよ！ それをこなす方がストレスで眠れんわ！）」</p>
-<p>「これを実践している者は少ない！ しかし、よく眠るためには、これら全ての徳を持たねばならないのです！ 私がSNSで嘘のリア充報告をするでしょうか？ 私が深夜にこっそり異性の動画を漁るでしょうか？」</p>
-<p>&lt;若者D&gt; 「ギクッ…」</p>
-<p>「私が隣人の新車や豪邸を羨むでしょうか？ これら全て、良質な睡眠とは相容れないのです！」</p>
-<p>「そして！ たとえ全ての徳を身につけたとしても、まだ奥義がありますぞ！ それは…徳そのものを、適切な時に眠らせることです！」</p>
-<p>&lt;若者一同&gt; 「「「おおぉぉぉ…！！」」」</p>
-<p>「徳と徳が、夜中に脳内でレスバトルを始めたらどうしますか！ 『いや俺の方が正しい！』『いいや私こそが正義だ！』と！ そんな状態では、眠れるはずもありませんな！ おお、不幸なあなたよ！」</p>
-<p>「神とも、隣人とも、平和な関係を築きなさい。それが快眠の秘訣。なんなら、隣に住む悪魔的な隣人とも平和を保つのです！ さもなくば、彼は夜中にあなたの部屋の壁をドンドン叩きに来るでしょう！」</p>
-<p>ツァラトゥストラ（心の声）：「（隣人の悪魔ってなんだよ…具体的に言えよ具体的に…！）」</p>
-<p>「上司や権力者には敬意を払い、従いなさい！ たとえ、その権力者が曲がった理不尽なヤツだったとしてもです！ それが快眠のコツ！ 権力がなぜ理不尽な道を好んで歩むのか？ そんなこと、私にどうできましょうか？ 知らんがな、です！」</p>
-<p>&lt;若者E&gt; 「すげぇ…社畜の鑑みたいな思想だ…」</p>
-<p>「常に最高の羊飼いと呼ばれるべきは、羊を最も安全で緑豊かな牧草地へ導く者。つまり、波風立てずに平穏に過ごすのが一番ということですな。これぞ快眠と相思相愛の関係です」</p>
-<p>「私は多くの名誉も、大きな財産も望みません。そんなものはストレスで胃に穴が開くだけ。しかし、そこそこの良い評判と、ちょっとした資産がなければ、不安で眠れなくなってしまう。バランスが大事ですな、バランスが」</p>
-<p>「悪い仲間とつるむよりは、小さな良いコミュニティに属する方がマシです。しかし、そのコミュニティにも依存しすぎず、適切な時に出入りすること。これが快眠の極意です」</p>
-<p>「そして、精神的に貧しい者たち…すなわち、素直で疑うことを知らない人々！ 彼らは私にとって大歓迎です！ なぜなら、彼らはすぐに眠りを促進してくれるから！ 彼らは幸いですな、特に、常に『先生のおっしゃる通りです！』と認めてくれるのであれば！」</p>
-<p>かくして、意識低い系…もとい、徳高き賢者の一日は過ぎていく。賢者は恍惚とした表情で締めくくった。</p>
-<p>「さて、夜が来ても、私は決して『眠りよ、来たれ！』などと呼びかけはしませんぞ！ 眠りとは、徳の主！ 主を呼びつけるなど、無礼千万！」</p>
-<p>「むしろ私は、その日に行ったこと、考えたことを静かに反芻するのです。牛のように、忍耐強く自問自答します。『今日の10の自分超えは何だったかな？』『10の和解と10の真理と10の笑いは達成できたかな？』と」</p>
-<p>「そうして四十の思考に揺られていると…突然、呼ばれもしないのに、徳の主である眠りが、私を襲うのです！」</p>
-<p>「眠りは私の目に触れ、まぶたを重くする。眠りは私の口に触れ、口をあんぐりと開かせたままにする…」</p>
-<p>「まことに、眠りは柔らかな足取りでやって来る、最も愛すべき泥棒…そして、私の思考を根こそぎ盗んでいく。私はこの講壇のように、ただのアホみたいに突っ立っているだけ…」</p>
-<p>「しかし、私はもう長くは立っていません。私はすでに、ベッドに横たわっているのですから…」</p>
-<p>――賢者が語り終えると、若者たちは割れんばかりの拍手を送った。感動で涙ぐむ者さえいる。</p>
-<p>しかし、ツァラトゥストラがその言葉を聞いたとき、彼は腹を抱えて笑いそうになるのを必死でこらえていた。なぜなら、その珍妙な説法によって、彼に一つの光が差し込んだからである。そして、彼は心の中でこう毒づいたのだった。</p>
-<p>「（ププッ…なんだコイツは！ 四十ものタスクに追われるただの愚者じゃないか！ だが…『眠り』という一点においては、妙に詳しいな…！）」</p>
-<p>「（このジジイの近所に住むヤツは幸せだろうな！ この強烈な『眠くな～る』電波は、分厚い壁を隔てても伝染するに違いない！）」</p>
-<p>「（なるほど、若者たちがこの徳の説教者の前に座っていたのは、あながち無駄ではなかったというわけか。こいつの知恵とは、要するに『よく眠るために、日中死ぬほど頑張って起きていること』。ただそれだけだ！）」</p>
-<p>「（そして、もし人生に意味がなく、俺が無意味なものを選ばねばならないとしたら…フッ、この『快眠』という無意味は、数ある無意味の中でも最もマシな選択肢かもしれんな！）」</p>
-<p>ツァラトゥストラは、今やハッキリと理解した。かつて人々が「徳の教師」なるものを探し求めたとき、彼らが何よりも欲していたものを。</p>
-<p>「（人々が求めていたのは、良き眠りと、それに伴う芥子色の徳…つまり、睡眠導入剤レベルの、ささやかで無害な徳だったというわけか！）」</p>
-<p>「（これら全ての、有り難がられている講壇の賢者どもにとって、最高の知恵とは『夢を見ないほどの深い眠り』だったのだ！ 奴らは、人生のより良い意味など、何一つ知らなかったのだ！）」</p>
-<p>ツァラトゥストラは、恍惚として眠そうな顔をしている若者たちを見渡した。</p>
-<p>「（今日でも、この睡眠コンサルタントのような連中がいるだろう。そして、こいつより正直じゃないヤツも大勢いる。だが、貴様らの時代はもう終わった！ もう長くは立っていられない！ 貴様らはすでに、精神のベッドに横たわっているのだ！）」</p>
-<p>彼は心の中で、高らかに勝利宣言をした。</p>
-<p>「（幸いなるかな、この眠たげなる者たちよ！ なぜなら、貴様らはまもなく、永遠の眠りにつくだろうからな！）」</p>
-<p>――かくしてツァラトゥストラは、また一つ、己の『超人』思想の正しさを確信し、一人悦に入るのであった。周りの誰も、彼がそんな壮大な上から目線で自分たちを憐れんでいるとは、夢にも思わなかった。まさに独り勝ちである。</p>
+                        <h2 id="眠りの伝道師とそれを鼻で笑う俺"><a class="header" href="#眠りの伝道師とそれを鼻で笑う俺">眠りの伝道師と、それを鼻で笑う俺</a></h2>
+<p>市場での大スベリ演説の後、ツァラトゥストラはしょんぼりしながら町をぶらついていた。すると、どこからともなく噂が聞こえてきた。なんでも、「快眠コンサルタント」として名を馳せる賢者がいるらしい。その賢者の講義を受ければ、どんな不眠症の人間も赤子のように眠れるようになるというのだ。</p>
+<p>「フン、眠り、ですか。そんなものは『超人』を目指す過程における、ただのログアウト時間に過ぎないというのに…」</p>
+<p>ツァラトゥストラはブツブ-ツと文句を言いつつも、野次馬根性丸出しでその講壇へと向かった。会場は、意識高い系の若者たちで満員御礼。皆、キラキラした目で賢者の登場を待っている。</p>
+<p>（やれやれ、愚かな民衆はいつの時代も、安っぽい自己啓発がお好きのようですね…まあいいでしょう。お手並み拝見です）</p>
+<p>やがて、白衣をまとった仙人のような賢者が登壇し、穏やかな、しかし妙に響く声で語り始めた。</p>
+<p>「皆さん、こんばんは。『快眠』こそが人生の至宝。それをまず胸に刻みなさい！ 良い眠りの前では、名誉も恥も些細なこと！ まず、これが第一のルールです！」</p>
+<p>&lt;若者A&gt; 「おお…深い…！」
+&lt;若者B&gt; 「眠りの前に恥がある！ メモしなきゃ！」</p>
+<p>「夜中に何度も目が覚めてしまう、そこのあなた！ それは恥を知らぬ者の所業！ 泥棒ですら、眠っている人には恥じらいを感じて静かに盗みを働くというのに、夜警のラッパ吹きときたら、恥知らずにも高らかに時を告げる！ あんなデリカシーのない輩になってはいけません！」</p>
+<p>（は？ 泥棒と夜警を比べる意味が分かりませんが？ 論理が破綻してませんかね、このジイさん）
+ツァラトゥストラは早速、心の中で悪態をつく。</p>
+<p>「そもそも、眠るとは高等技術なのです。そのために、一日中起きている必要があるのですから！」</p>
+<p>&lt;若者C&gt; 「なるほど！ 起きていることが、眠りのための修行だったとは！」</p>
+<p>「さあ、皆さん、復唱してください！ 快眠のための十戒です！ まず一つ！ 一日に十回、自分にダメ出しをするべし！ これが心地よい疲労感を生み、魂をリラックスさせるスパイスとなるのです！」</p>
+<p>「二つ！ 一日に十回、自分と仲直りすべし！ ダメ出しのしすぎは苦痛です。仲直りできない者は、悪夢にうなされるでしょう！」</p>
+<p>「三つ！ 一日に十個、真理を見つけるべし！ これを怠れば、あなたの魂は夜通しハングリー状態！ 眠れるわけがありません！」</p>
+<p>「四つ！ 一日に十回、腹から笑うべし！ さすれば、ストレスの親玉である胃痛も寄り付きません！」</p>
+<p>&lt;若者たち&gt; 「おおおおおーーー！！」
+&lt;ツァラトゥストラ&gt; 「（多すぎだろ！ いちいち数えてられるか！）」</p>
+<p>賢者はさらにヒートアップする。
+「これらを知る者は少ない！ しかし！ よく眠るためには、全ての徳を持たねばならないのです！ 『ちょっとくらい嘘ついちゃえ』？ ダメです！ 『人妻、いいな…』？ 論外！ 『隣の家の最新型召使いロボ、欲しい…』？ もってのほか！ これら全て、あなたの快眠を妨げるノイズなのです！」</p>
+<p>「そして！ たとえ全ての徳をコンプリートしたとしても、まだ奥義があります！ それは…徳そのものを、時間になったら寝かしつけること！ そうしないと、徳たちが『俺が一番だ！』と脳内でケンカを始めてしまうのです！ あなたという不幸な戦場でね！」</p>
+<p>（徳がケンカ！？ なんですかそのメルヘンな発想は！ この人、さては天然ですね！？）</p>
+<p>「神と隣人との平和！ これぞ快眠の基本！ そして、隣に住む悪魔とも仲良くするのです！ さもないと、夜中にピンポンダッシュされますぞ！」</p>
+<p>「権力者には敬意を払いなさい！ たとえ、その上司がどうしようもないアホでもです！ なぜ権力者の足が曲がっているかなんて、我々が悩むことではない！ それがサラリーマンの安眠術です！」</p>
+<p>「最高の羊飼いとは、羊を最も美味い草のある牧草地へ連れていく者。それと同じです。快眠とそれは両立するのです」</p>
+<p>&lt;若者A&gt; 「政治の話まで…！ なんて視野が広いんだ！」
+&lt;ツァラトゥストラ&gt; 「（ただの長いものに巻かれろ精神じゃないですか…）」</p>
+<p>「私は多くの名誉も、大きな財産も望みません。肝臓に悪いですからな。しかし、そこそこの名声と、ちょっとした貯金がないと、それはそれで眠れなくなる。難しいところです」</p>
+<p>「ぼっちよりはマシですが、馴れ合いの仲間も考えもの。来る時と去る時をわきまえてもらいましょう。それが快眠のコツ」</p>
+<p>「そして、精神的に貧しい人々！ 彼らは幸いです！ なぜなら、難しいことを考えないので、すぐ眠れるから！ 特に、自分が常に正しいと思い込んでいるタイプの人は、最強の眠りを得るでしょう！」</p>
+<p>「……かくして、徳高き者の一日は過ぎてゆく。そして夜が来ても、私は決して『眠りよ、来たれ！』などと呼びはしない！ なぜなら、眠りとは徳の王！ 王は呼びつけられることを嫌うのです！」</p>
+<p>賢者はドヤ顔で続ける。
+「私はただ、今日一日やったこと、考えたことを反芻するだけです。牛のように、忍耐強く自問自答するのです。『今日のダメ出し10個は？』『仲直り10回は？』『真理10個は？』『爆笑10回は？』とね」</p>
+<p>「そうして40の思考に揺られていると……呼ばれざる王、眠りが、私を襲うのです！」</p>
+<p>&lt;若者B&gt; 「40個も考えてたら普通に疲れて寝るだけじゃ…」
+&lt;賢者&gt; 「（ギクッ！）」</p>
+<p>「眠りは私の目に触れ、まぶたを重くする。眠りは私の口に触れ、口をポカンと開かせたままにする。まことに、眠りは最も優しい泥棒。私の思考を根こそぎ奪い去っていく。私はこの講壇のように、ただ愚かに立ち尽くすのみ……」</p>
+<p>「しかし、私はもう長くは立たない。私はすでに、横たわっているのです……」</p>
+<p>そう言うと賢者は、おもむろに演壇の上にごろんと横になり、スゥスゥと寝息を立て始めた。マジで寝たのである。</p>
+<p>&lt;若-者たち&gt; 「おおおお！」「先生が眠りに入られた！」「有言実行の体現者だ！」「これが本物の『徳』か…！」</p>
+<p>若者たちが感動の嵐に包まれる中、ツァラトゥストラは心の中で腹を抱えて笑っていた。</p>
+<p>（プッ、ククク……アッハハハハ！ なんだこのオッサンは！ 40個も考え事してたらそりゃ眠くなるに決まってるじゃないか！ 愚者！ まさに愚者だ！）</p>
+<p>（だが、まあ、眠りについて詳しいことだけは認めてやろう。このあくびが出そうな退屈な話術…たしかに眠りは伝染する。分厚い壁があっても伝染するレベルだ）</p>
+<p>ツァラトゥストラは、感動している若者たちを哀れみの目で見つめた。</p>
+<p>（なるほどな。若者たちがこのジイさんの前に座っていた理由は、無駄ではなかったわけだ。彼の知恵とは、要するに『よく眠るために起きている』という、ただそれだけのこと。人生に意味がないと嘆き、無意味なものを選ぶしかないのなら、確かにこの『快眠』は、最高の無意味かもしれん）</p>
+<p>ツァラトゥストラは、全てを理解した。</p>
+<p>（かつて人々が『徳の教師』に求めていたもの…それは『超人』でも『永劫回帰』でもなく、ただの『快眠』と、そのための気休めの徳だったのだ！ なんてレベルの低い話だ！）</p>
+<p>彼は、今もなおありがたそうに寝ている賢者を見下ろす。</p>
+<p>（こういう説教者、今でもいるだろうな。もっとタチの悪いやつも。だが、フン…お前たちの時代は終わったのだ。もう長くは立つまい。すでにお前たちは横たわっているのだからな）</p>
+<p>ツァラトゥストラは、静かにその場を後にしながら、最後の決め台詞を心の中で呟いた。</p>
+<p>「（幸いなるかな、眠れる者たちよ。すぐに、永遠に眠ることになるのだからな……この俺、ツァラトゥストラという『光』の夜明けの前ではな！）」</p>
 
                     </main>
 
