--- a/reborn_008_Von_den_Freuden-_und_Leidenschaften.html
+++ b/reborn_008_Von_den_Freuden-_und_Leidenschaften.html
@@ -175,40 +175,44 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h3 id="4-炎上上等-推し徳への愛を語る"><a class="header" href="#4-炎上上等-推し徳への愛を語る"><strong>4. 炎上上等！ 推し（徳）への愛を語る！</strong></a></h3>
-<p>ツァラトゥストラは、群衆のヤジにも全く動じない。むしろ、自分の話がウケたと勘違いしている綱渡り芸人を見て、内心（フン、あのピエロも俺の思想に感化されたか…）と悦に入っている始末である。彼はさらにドヤ顔で、熱弁を続けた。</p>
-<p>「さて皆さん！ 今日の説法、第二部のお時間です！ テーマは『歓びと情念』、つまり『推し活のススメ』です！」</p>
-<p>&lt;群衆F&gt; 「え、推し活？」
-&lt;群衆G&gt; 「さっき超人の話してなかったか？ 話飛びすぎだろ」</p>
-<p>「いいですか、兄弟よ！ もし君に『徳』、つまり自分だけの『推し』がいるとします。それは君だけの、誰にも汚されてはならない聖域（サンクチュアリ）のはずだ！ それを誰かと共有するなんて、もってのほか！」</p>
-<p>「確かにね、分かりますよ。『この推しの尊さを誰かに伝えたい！』『この素晴らしさを語り合いたい！』って思うでしょ？ 耳元でささやいて、イチャイチャしたい気持ちも分かる！」</p>
-<p>「だが見ろ！ 君がその『推し』の名前をSNSでハッシュタグ付きで叫んだ瞬間！ 君は『推し』と共にただの『民衆』となり、『群れ』の一員に成り下がるのだ！ わかるか！？ あの、掃いて捨てるほどの量産型ファンになるってことなんだよ！」</p>
-<p>もはや何を言っているのか、市場の半分以上の人間には理解できていなかった。</p>
-<p>「だから、こう言う方がクールなんです！ 『我が魂に甘美な痛みをもたらし、我が内臓を飢えさせるこの感情は…言葉にできない…名もなき何かである』と！」</p>
-<p>「君の『推し（徳）』は、安っぽい名前で呼ばれるには尊すぎる存在のはずだ！ もし、どうしても語らなければならないのなら、語彙力を失ってどもることを恥じるな！」</p>
-<p>「こうどもりながら語るのです！ 『こ、これこそが…我が善…！ 俺はこれを愛してる…！ これだけで俺は完全に満たされる…！ これこそが俺の求める唯一の善なのだ…！』と！」</p>
-<p>&lt;群衆H&gt; 「完全に早口オタクのそれ」
-&lt;群衆I&gt; 「気持ち悪いけど、なんか熱意は伝わってきた」</p>
-<p>「俺はそれを神のルールだからとか、人間の宿命だからとか、そんな理由で求めてるんじゃない！ 天国への道しるべなんてものでも断じてない！ 俺が愛するのは、この地上で輝く『推し（徳）』だけだ！ そこに小難しい理屈なんていらない！ 万人の理解なんて、クソ食らえだ！」</p>
-<p>「見ろ！ この鳥（推し）は、俺の心に巣を作った！ だから俺はそれを愛し、慈しむ！ そして今、俺の心の中で、黄金の卵（限定SSR）を産んでいるのだ！」</p>
-<p>そうどもりながら、自分の『推し（徳）』を全力で称賛すべきなのだ！</p>
-<p>「かつて君たちは『情念』、つまり嫉妬や劣情、逆恨みといったドス黒い感情を『悪』と呼んでいたはずだ。だが今や、君たちにはそれらを昇華させた『徳（推し）』しかない！ そう、それらは君たちの闇の感情（ダーク・エモーション）から育ったものなのだ！」</p>
-<p>「君たちの最高の目標（人生のテーマ）を、それらの情念のド真ん中に置いてみろ！ するとどうだ！ それらは君だけの『徳』となり、歓喜の感情（エクスタシー）へと変わるのだ！」</p>
-<p>「君がブチ切れやすい癇癪持ちだろうと、女好きの色欲魔人だろうと、ヤバい思想にハマった狂信者だろうと、粘着質な復讐の鬼だろうと、関係ない！」</p>
-<p>&lt;群衆J&gt; 「ろくなやつがいねえな」</p>
-<p>「結局、君たちの全ての『情念』は『徳』となり、君たちの全ての悪魔（デーモン）は天使（エンジェル）へと変わるのだ！」</p>
-<p>「かつて君たちの心には、野良犬どころか狂犬が住み着いていただろう。だが結局、そいつらは美しい歌声を持つカナリアへと姿を変えた！ 君の毒から鎮痛剤を精製し、悲しみの牛から甘美なミルクを搾り取るのだ！ 今や君はそのミルクを飲む！」</p>
-<p>「そして今となっては、君の『徳（推し）』同士の解釈違い戦争から生まれる悪を除いて、君からいかなる悪も生まれない！」</p>
-<p>「兄弟よ、もし君が幸運なら、『推し』は一人に絞れ。それ以上は持つな。その方が、君は容易に橋（人生）を渡れる」</p>
-<p>「『推し』がたくさんいるのは、一見リア充に見えるが、それは重い運命（ハードモード）だ！ あっちのイベント、こっちの限定ガチャ…時間も金も身も心も削られる！ そしてある者は、疲れ果てて砂漠（ソシャゲ引退）へ行き、自ら命を絶ったのだ！ なぜなら、彼は『推し』と『推し』の戦い（板挟み）の戦場であることに疲れてしまったからだ！」</p>
-<p>&lt;群衆A&gt; 「なんか生々しい話になってきたぞ…」</p>
-<p>「兄弟よ、戦争や争いは悪か？ 確かにそうだ！ しかし、この悪は必然なのだ！ 君の『推し』たちの間での嫉妬！ 不信！ 誹謗中傷は、避けられないカルマなのだ！」</p>
-<p>「見ろ！ 君の『推しA』が、いかに『最高』の座を欲しているか！ 君の『推しB』が、いかに君の全精神を自分のものにしたがっているか！ 怒り、憎悪、そして愛を！ 全てを自分に注いでほしいと願っている！」</p>
-<p>「それぞれの『推し（徳）』は、他の『推し（徳）』に嫉妬する！ そして嫉妬は恐ろしいものだ！ 『推し』もまた、嫉妬によって滅びる可能性があるのだ！」</p>
-<p>「嫉妬の炎に囲まれた者は、結局、サソリが己に毒針を向けるように、自滅する！ 『ああ、俺なんかが推していて、本当に申し訳ない…』とかな！」</p>
-<p>「ああ、兄弟よ！ 君は見たことがないのか！？ 『推し』への愛が深まりすぎて、自らを卑下し、刺し違えようとするオタク（徳）の姿を！」</p>
-<p>「人間は、乗り越えられるべき存在だ！ だからこそ、君は君の『推し（徳）』を愛すべきなのだ！ なぜなら――君は、その『推し活』によって滅びるからだッ！！」</p>
-<p>ツァラトゥストラはこう言った。</p>
+                        <h2 id="俺だけの推しを語るな"><a class="header" href="#俺だけの推しを語るな">俺だけの『推し』を語るな！</a></h2>
+<p>さて、綱渡り芸人が（勝手に）準備を始めたことで、市場の空気は若干ツァラトゥストラにとってアウェイになりつつあった。しかし、ここで引き下がる彼ではない。むしろ、逆境でこそ燃えるのが哲学オタクというものである。彼は咳払いを一つして、さらにドヤ顔で語り続けた。</p>
+<p>「兄弟たちよ！ よく聞きたまえ！ もし君に『徳』があるとして、それが真に君だけの『徳』であるならば、それは誰とも共有するものではないのです！」</p>
+<p>&lt;群衆A&gt; 「とく…？ ポイントカードの話か？」
+&lt;群衆B&gt; 「知らん。なんか急に話が細かくなったな」</p>
+<p>「ええ、わかりますよ。君たちは、自分の『徳』…そう、自分だけの『推し』とでも言いましょうか、それを誰かに語りたくて仕方がない！ その名前を呼び、愛撫し、耳元でささやき、イチャイチャしたい！ そうでしょう！？」</p>
+<p>ツァラトゥストラは、うっとりとした表情で、まるでそこに透明な誰かがいるかのように虚空を撫でた。完全にヤバい人である。</p>
+<p>「しかぁし！ 見よ！ 君たちが自分の『推し』の尊さを民衆に語った瞬間、それはもう君だけのものじゃなくなる！ 君の『徳』は、大衆消費されるただのコンテンツとなり、君自身もその他大勢の『群れ』に成り下がるのだ！」</p>
+<p>「だから、こう言う方がマシなのです！ 『我が魂に苦痛と甘美をもたらし、我が内臓の飢えでもあるこの感情は、言葉にできぬし、名もなきものである』と！」</p>
+<p>&lt;群衆C&gt; 「内臓の飢えって何だよ…腹減ってんのか？」</p>
+<p>「君たちの『徳』は、安っぽい名前で呼ばれるには、あまりにも高尚すぎるものであれ！ そして、もしどうしてもそれについて語らねばならないのなら、どもることを恥じるな！」</p>
+<p>彼は急に、もじもじしながら、早口で語り始めた。完全にスイッチが入ったオタクのそれである。</p>
+<p>「こ、こ、これこそが、わ、我が『善』でありまして！ わ、私はこれを愛しておりまして！ こ、このようにしてこそ、私は完全に満足するのでありまして！ このようにしてのみ、私は『善』を欲するのです！」</p>
+<p>「これは神のルールとか、人間の法律とか、そういうチャチなものじゃない！ 天国への攻略本でもない！ 私が愛するのは、この大地に根差した『徳』！ そう、そこには小難しい理屈なんてほとんどないし、ましてや万人が納得するような『常識』なんてクソくらえなのです！」</p>
+<p>&lt;群衆D&gt; 「うわ、口が悪くなった」
+&lt;群衆E&gt; 「ていうか、どもってんのかキレてんのかどっちだよ」</p>
+<p>「しかし！ この鳥（概念）は私のもとに巣を作った！ だから私はそれを愛し、慈しむ！ 今やそれは私のもとで、その黄金の卵（俺だけが知ってる尊い設定）の上に座っているのだ！」</p>
+<p>「そうです！ そのようにどもりながら、君たちの『徳』を称賛したまえ！」と、彼は再びキリッとした表情に戻った。忙しいおじさんである。</p>
+<p>「かつて君たちは、自分の中に渦巻く『情念』…そう、ドス黒い欲望や衝動を『悪』と呼んでいたはずだ。しかし今や、君たちにはただ『徳』だけがある！ それらは全て、君たちのその『情念』から育ったものなのだ！」</p>
+<p>「君たちは、その『情念』という名の性癖のド真ん中に、最高の目標を置いた！ そこでそれらは君たちの『徳』となり、『歓喜』となったのだ！」</p>
+<p>&lt;群衆A&gt; 「性癖…？ なんか話がヤバい方向に…」</p>
+<p>「たとえ君が、すぐにカッとなる癇癪持ちだろうと！ 女好きのスケベだろうと！ 特定の思想に狂ったヤバい信者だろうと！ 執念深い復讐者だろうと！ 結局、君たちの全ての『情念』は『徳』となり、全ての悪魔は天使となったのだ！」</p>
+<p>「かつて君たちの心の中の地下室には、獰猛な野犬（黒歴史）が飼われていたはずだ！ しかし結局、それらは鳥となり、愛らしい歌い手（創作の源泉）へと変貌したではないか！」</p>
+<p>「君たちはその毒（トラウマ）から鎮痛剤（優しさ）を醸造した！ 悲哀という名の牛から乳を搾り、今やその甘いミルクを飲んでいる！ そうだろう！？」</p>
+<p>&lt;群衆B&gt; 「例えが独特すぎて、何一つ頭に入ってこねえ」</p>
+<p>「もはや君たちから生まれる『悪』など、君たちの『徳』同士が喧嘩することから生じるもの以外には、ありはしないのだ！」</p>
+<p>「兄弟よ、もし君が幸運なら、『徳』は一つだけ持つがいい。単推し、というやつだ。その方が、人生という名の橋をよっぽど渡りやすい」</p>
+<p>「もちろん、多くの『徳』を持つこと…いわゆるDD（誰でも大好き）は、一見優れているように見える。だがそれは重い運命だ！ やがて君は、『徳』と『徳』の戦場と化し、その闘争に疲れ果て、砂漠（自室の隅）へ行き、自らを殺すことになるのだ！」</p>
+<p>&lt;群衆C&gt; 「推し活で破産する人の話か…？」</p>
+<p>「兄弟よ、戦争と戦いは悪かね？ しかし、この悪は必然なのだ！ 君たちの『徳』と『徳』の間に生まれる、嫉妬と不信と中傷は、避けられない必然なのだ！」</p>
+<p>「見よ！ 君のそれぞれの『徳』が、いかに最高のものを欲しているか！ それは君の全精神がその『徳』の布教者となることを望み、君の全力が怒り、憎悪、そして愛となることを望んでいる！」</p>
+<p>「各々の『徳』は、他の『徳』に対して嫉妬深い！ そして嫉妬は恐るべきものだ！ 『徳』もまた、嫉妬によって滅びる可能性があるのだ！」</p>
+<p>&lt;群衆D&gt; 「同担拒否ってやつか…根深いな…」</p>
+<p>「嫉妬の炎に囲まれた者は、結局、サソリが自らに毒針を向けるように、自分自身を攻撃し始めるのだ！」</p>
+<p>「ああ、兄弟よ！ 君は未だかつて、『徳』が自らを中傷し、刺し殺すのを見たことがないのか！？ 『推し』への愛が極まりすぎて、公式との解釈違いで自爆するオタクを！ 見たことがないのか！？」</p>
+<p>ツァラトゥストラは、天を仰ぎ、悲痛な叫びを上げた。彼にも何か心当たりがあるのかもしれない。</p>
+<p>「人間は、乗り越えられるべきものだ！ ゆえに汝は汝の『徳』を愛すべきである！ なぜなら、汝はそれらによって滅びるであろうから！ そう！ 推し活による自己破産こそ、超人への第一歩なのだ！」</p>
+<p>ツァラトゥストラがビシッと指を天に突きつけて、演説を締めくくった。市場は、静まり返っていた。</p>
 
                     </main>
 
