--- a/reborn_009_Vom_bleichen_Verbrecher.html
+++ b/reborn_009_Vom_bleichen_Verbrecher.html
@@ -175,58 +175,54 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h3 id="炎上不可避公開裁判に物申す俺の持論を聞けェ"><a class="header" href="#炎上不可避公開裁判に物申す俺の持論を聞けェ"><strong>【炎上不可避】公開裁判に物申す！俺の持論を聞けェ！</strong></a></h3>
-<p>ツァラトゥストラが死んだ芸人をヒョイと肩に担ぎ、ドヤ顔で市場を練り歩いていると、広場の一角にまたしても人だかりができていた。野次馬根性丸出しで覗き込んでみると、どうやら公開裁判ごっこが執り行われているらしい。</p>
-<p>中央には、顔面蒼白でガタガタ震える一人の男。その顔色は、まるで３日徹夜でエナドリをキメ続けたゲーマーのようである。</p>
-<p>&lt;裁き手A&gt; 「こいつが例の強盗殺人犯だ！」
-&lt;裁き手B&gt; 「さっさと吊るしちまえ！」
-&lt;群衆&gt; 「そうだそうだー！」</p>
-<p>裁き手たちが獣を仕留める前の猟師のように目をギラつかせているその時、男はガクリと膝をつき、静かに頷いた。その瞳には、もはや恐怖ではなく、自分自身と、このくだらない茶番を演じる世界に対する、底なしの軽蔑が浮かんでいた。</p>
-<p>その瞬間、ツァラトゥストラは「待った！」と叫びながら人垣をかき分け、死体を担いだまま輪の中心に躍り出た。完全に不審者である。</p>
-<p>「皆さん！ ちょっと待っていただきたい！ 獣を屠る前ですら、相手が頷くのを待つのが礼儀というものでしょう！ 見なさい、この『蒼白の罪人』は、今、確かに頷きましたよ！」</p>
-<p>ツァラトゥストラは罪人を指差し、大演説をぶち始めた。</p>
-<p>「彼の瞳が何を語っているか、君たちには分かりますか！？『俺のこの“キャラ設定（自我）”は、もう乗り越えられるべきなんだ。俺にとってこの“俺”という存在自体が、人間に対する最大の軽蔑（ディス）なんだよ』とね！ そう、彼はそう言っているのです！」</p>
-<p>&lt;群衆A&gt; 「え、そうなの？」
-&lt;蒼白の罪人&gt; （え、そうなの！？…いや、でもなんかそんな気もしてきた…）</p>
-<p>「彼が自らを裁いたこの瞬間こそが、彼の人生のハイライトだったのです！ 一度その高みに達した者を、君たちのような低俗な場所に引きずり戻してはなりません！」</p>
-<p>「このように、自らの行いによって自ら苦しむ者には、ソシャゲのサービス終了（速やかな死）以外に救済など存在しないのです！」</p>
-<p>「いいですか、そこの裁き手の皆さん！ 君たちのその行為は、憐憫（あわれみ）であるべきで、単なる復讐（ストレス発散）であってはならない！ そして、もし彼を殺すというのなら、その行為によって君たち自身の“生”が正当化されるのだという覚悟を見せなさい！」</p>
-<p>「殺す相手と和解するだけじゃ不十分だ！ 君たちの悲しみは、『超人』への愛であるべきなのです！ そうやって初めて、君たちは『ああ、俺は今日も生きてるな』と実感できるのですよ！」</p>
-<p>&lt;群衆B&gt; 「なんか話が壮大になってきたぞ…」
-&lt;群衆C&gt; 「ポエム、キタ――(ﾟ∀ﾟ)――!!」</p>
-<p>「そして言葉を改めなさい！ 『悪漢』じゃない、『敵』と呼びなさい！ 『悪党』じゃない、『病者』と呼びなさい！ 『罪人』じゃない、『愚者』と呼びなさい！ ラベリングで思考停止するのは、三流のやることですよ！」</p>
-<p>ツァラトゥストラは、裁き手の中でも特に声が大きく、顔が赤い男――リーダー格らしい――をビシッと指差した。</p>
-<p>「そしてそこの赤ら顔の裁判長殿！ もしあんたが、頭の中で考えているキッタナイことを全部声に出したらどうなると思います？ 全員があんたに向かってこう叫びますよ！『この汚物と毒虫をさっさと追い出せ！』とね！」</p>
-<p>&lt;赤き裁き手&gt; 「な、なにおぅ！？」
-&lt;群衆D&gt; 「図星か？ｗ」</p>
-<p>「しかし！ 思考は思考、行為は行為、そして行為のイメージ（黒歴史）はまた別物なのです！ その三つの間を、論理の歯車（ロジック・ホイール）が都合よく転がることなどありはしない！」</p>
-<p>「一つのイメージ（やっちまった感）が、この男を蒼白にしたのです。彼は罪を犯したその瞬間は、その行為そのものでした。しかし、行為が終わった後、彼はその行為の“イメージ”に耐えられなくなった！ わかるかね！？ やったこと自体より、後から『あの時の俺、マジ痛かったな…』って思い返す方がキツい、あの現象ですよ！」</p>
-<p>「彼は常に、自分自身を『たった一つの行為（やらかし）の実行犯』としてしか見られなくなった。私はこれを“行為後の狂気（アフター・フェスティバル・マッドネス）”と呼びます。たった一度の例外が、彼の中で“本質”にすり替わってしまったのです！」</p>
-<p>&lt;群衆E&gt; 「わかる…卒業文集を思い出すと死にたくなるもんな…」</p>
-<p>「聞け、裁き手たちよ！ 実はもう一つの狂気があるのです。それは“行為前の狂気（ビフォア・フェスティバル・マッドネス）”！ ああ、君たちはこの男の魂の深淵（沼の底）まで覗き込もうとはしなかった！」</p>
-<p>ツァラトゥストラは再び赤い裁き手に向き直る。</p>
-<p>「裁判長殿はこう言いました。『この罪人は何を殺したか？ 強盗が目的だったのだ』と。しかし私は君たちに言おう！ 彼の魂が欲したのは血だ！ 金品じゃない！ 彼は“刃の幸福（カッティング・エッジ・ハピネス）”に渇望していたのだ！」</p>
-<p>&lt;蒼白の罪人&gt; （そ、それだーーー！！ 俺、ただ斬りたかっただけなんだ…！ あのスパッといく感触が…！）</p>
-<p>「しかし、彼の哀れな理性（小市民マインド）は、そのピュアな狂気を理解できなかった！ そして彼をこう説得したのです。『血を流すだけとか、コスパ悪くない？』と。『どうせならついでに金品も奪っちゃいなよ？ ちょっとくらい復讐もしちゃいなよ？』とね！」</p>
-<p>「そして彼は、その哀れな理性に屈してしまった！ その言葉は鉛のように彼にのしかかり――殺害のついでに強盗まで働いてしまったのです！ 彼は、自らの純粋な狂気を恥じてしまったのですよ！」</p>
-<p>「そして今、再びその罪の鉛が彼の上に重くのしかかっている！ 彼の哀れな理性はガチガチに固まり、麻痺し、重くなっているのです！」</p>
-<p>&lt;群衆A&gt; 「なんかもう、どっちが悪いんだか分からなくなってきた…」</p>
-<p>「もし彼が頭をブルンと振ることができれば、その重荷は転がり落ちるでしょう。しかし、誰がこの頭を振ってやれるのですか！？」</p>
-<p>「この人間とは何か！？ 病気の集合体ですよ！ その病んだ精神を通じて、外の世界に手を伸ばし、獲物を得ようとする生き物だ！」</p>
-<p>「この人間とは何か！？ 互いに絡み合って身動きが取れなくなった野生の蛇の群れですよ！ 普段はそうやって馴れ合っているくせに、腹が減れば結局それぞれが一人で狩りに出るのです！」</p>
-<p>「この哀れな身体を見よ！ それが苦しみ、欲したものを、この哀れな魂は勝手に解釈した――それを『殺人のヨロコビ』と、『刃の幸福への渇望』として解釈したのです！」</p>
-<p>「今や病気になる者は、自分の中の“悪”という属性に目覚めてしまう。そして、自分を苦しめるその力で、他人を傷つけようとする。中二病と一緒ですね！ しかし、時代が違えば、悪も善も違ったのです！」</p>
-<p>&lt;群衆B&gt; 「歴史の授業始まった？」</p>
-<p>「かつては『疑うこと』や『自分の意志を持つこと』が悪でした。その時代、病人は異端者や魔女と呼ばれ、苦しみ、そして他人を苦しめようとしたのです！」</p>
-<p>「……まあ、こんな話、君たちの耳には入れたくないでしょうけどね。君たち“善き人々”に害がある、とでも言うのでしょう？ ですがね、君たちのその“善”に一体何があるというのですか！」</p>
-<p>ツァラトゥストラは、裁き手だけでなく、周りの群衆全体を睥睨した。</p>
-<p>「君たち“善き人々”の多くは、私に嫌悪感を抱かせる！ はっきり言って、君たちの悪事なんかより、その中途半端な善の方がよっぽどタチが悪い！ 私はむしろ、君たちがこの蒼白の罪人のように、いっそ破滅してしまうほどの壮大な狂気を持っていたなら、と願いますよ！」</p>
-<p>「そうだ！ 私は願う！ 君たちの狂気が『真理』だの『忠実』だの『正義』だのと名付けられることを！ しかし君たちは、ただ長く生きるため、そして哀れで安楽な日々を送るために、そのちっぽけな道徳を持っているに過ぎない！」</p>
-<p>ツァラトゥストラは担いでいた芸人の死体を一旦地面に置き、両手を広げて叫んだ。その姿は、まるでライブのクライマックスを迎えたロックスターのようであった。</p>
-<p>「私は流れの欄干だ！ 私を掴める者は掴むがいい！ しかし、言っておくが、私は君たちの松葉杖ではないぞッ！！」</p>
-<p>――ツァラトゥストラは、こう言ってビシッとポーズを決めた。</p>
-<p>市場は水を打ったように静まり返る。群衆も、裁き手も、皆ポカーンと口を開けている。</p>
-<p>ただ一人、蒼白の罪人だけが、涙を流しながらも、どこか吹っ切れたような、しかしやっぱり猛烈に恥ずかしいような、複雑な表情でツァラトゥストラを見つめていたのであった。</p>
+                        <h2 id="悲報市場ガチ説教で凍りつく-蒼白の罪人と厨二病哲学"><a class="header" href="#悲報市場ガチ説教で凍りつく-蒼白の罪人と厨二病哲学">【悲報】市場、ガチ説教で凍りつく！ 蒼白の罪人と厨二病哲学</a></h2>
+<p>綱渡り芸人が落下し、ツァラトゥストラがその死体を担いでドヤ顔ポエムを叫んだことで、市場はカオスに包まれていた。人々が「アイツやべぇ…」「警察呼んだ方がよくない？」とヒソヒソ話す中、ツァラトゥストラは死体をそっと地面に横たえると、まるで何もなかったかのように、再び説法の続きを始めた。鋼のメンタルである。</p>
+<p>「さて皆さん！ 今、そこに顔面蒼白で震えている罪人がいるとしましょう！」</p>
+<p>唐突な新章突入。群衆は「え、まだ続くの？」という顔で彼を見ている。</p>
+<p>「君たち、つまり『裁き手』を気取っているそこの君たち！ そして、生贄を捧げるのが大好きな野次馬の君たち！ 君たちは、獲物となる獣が『どうぞ』と首を差し出す前に殺そうとはしないでしょう？ それと同じです！ 見てください、かの蒼白の罪人は、すでに頷いているじゃありませんか！」</p>
+<p>ツァラトゥストラは、誰もいない空間を指さして熱弁する。どうやら彼の脳内には、架空の罪人が見えているらしい。</p>
+<p>「彼のその眼を見てください！ そこには『大いなる軽蔑』が渦巻いている！ 彼はこう言っているのです！ 『俺という存在（エゴ）は、乗り越えられるべきなんだ…！ 俺の自我こそが、俺にとって、人間どもへの最大の軽蔑の証なのだ！』とね！」</p>
+<p>完全にアテレコである。しかも罪人のセリフがやけにカッコつけている。</p>
+<p>「彼が自らを裁いたこの瞬間こそが、彼の人生における最高の瞬間（クライマックス）だったのです！ 一度その高みに達した崇高なる者を、再び俗世の低俗な場所へと引きずり戻してはなりません！」</p>
+<p>&lt;群衆A&gt; 「なんか話が飛躍してない？」
+&lt;群衆B&gt; 「さっきの芸人さんの話はどこいったんだよ…」</p>
+<p>「このように、自らの罪に苦しむ者には、速やかなる死ッ！ これ以外に救済など存在しないのです！」</p>
+<p>「だから君たち裁き手よ！ 君たちが下す殺害は、復讐であってはならない！ それは『憐憫』、つまり愛であるべきなのです！ そして、君たちが誰かを殺すとき、その行為によって君たち自身が『生きる意味』を正当化しているか、その胸に問いかけなさい！」</p>
+<p>もはや何を言っているのか分からない。</p>
+<p>「君たちが殺した相手と和解するだけでは不十分だ！ 君たちのその悲しみは、『超人』への愛へと昇華されるべきなのです！ そうして初めて、君たちはなおも生きることを正当化できるのだ！」</p>
+<p>「そして言葉の定義を改めましょう！」と、ツァラトゥストラはビシッと指を突きつけた。「『悪漢』などという陳腐な言葉を使うのは今日で終わりです！ これからは『敵』と呼びなさい！ 『悪党』ではない、『病者』と！ 『罪人』ではない、『愚者』と呼ぶのです！ その方が断然クールでしょう！？」</p>
+<p>ただの厨二病的こだわりである。</p>
+<p>「そこの君、そう、血走った眼で罪人を睨みつけている『赤き裁き手』よ！ もし君が、頭の中で考えている汚い欲望のすべてを声に出したら、どうなると思いますか？ 全員がこう叫びますよ！ 『この汚物と毒虫をさっさと追い払え！』とね！」</p>
+<p>&lt;群衆C&gt; 「うわっ、急にこっちに話振ってきた…」
+&lt;群衆D&gt; 「ていうか、なんで俺の心の中が読めるんだ！？」</p>
+<p>「しかし！ 思考は思考、行為は行為、そして行為の後に残るイメージはまた別物なのです！ これら三つの間を、論理という名の車輪がスムーズに転がることなどあり得ない！」</p>
+<p>「一つのイメージが、この蒼白の男を蒼白にしたのです。彼は罪を犯した瞬間、その行為そのものでした。しかし、行為が終わった後、彼はその行為のイメージに耐えられなくなったのです」</p>
+<p>「彼は常に、自分自身を『あのたった一つの行為の実行者』としてしか見られなくなった。私はこれを『狂気』と呼びます。たまたま起きた例外が、彼にとっての本質へと変わってしまったのです」</p>
+<p>「一本の線が雌鶏を地面に縛り付けるように、彼が振り下ろしたその一撃が、彼の哀れな理性を縛り付けたのです。――これを私は『行為後の狂気』と名付けました！」</p>
+<p>ドヤ顔で新語を定義するツァラトゥストラ。</p>
+<p>「だが聞きたまえ、裁き手たちよ！ もう一つの狂気が存在する！ それは『行為前の狂気』だ！ ああ、君たちはこの魂の深淵の、そのまた奥の底の底まで這い入ったことがないから、理解できないでしょうがね！」</p>
+<p>&lt;群衆E&gt; 「なんかすごい見下されてる気がする…」</p>
+<p>「かの赤き裁き手はこう言うでしょう。『この罪人は何を殺したのか？ 強盗目的だったに違いない』と。しかし私は君たちに言おう！ 彼の魂が欲したのは血であり、金品ではなかった！ 彼はただ、刃の幸福に渇望していたのだッ！」</p>
+<p>出た、お得意のポエムである。</p>
+<p>「しかし、彼の哀れな理性はこの狂気を理解できず、彼を説得したのです。『血を流して何になるというのだ！』と。『どうせやるなら、ついでに金品も奪ったらどうだ？ 復讐も果たしたらどうだ？』とね」</p>
+<p>「そして彼は、その哀れな理性の声に従ってしまった。その言葉は鉛のように彼に重くのしかかり――殺害の際に、彼は強盗も働いてしまったのです。彼は、自らの純粋な狂気を恥じてしまったのです！」</p>
+<p>「そして今、再びその罪の鉛が彼の上に重くのしかかっている！ 彼の哀れな理性は、硬直し、麻痺し、ただ重い！」</p>
+<p>「もし彼が頭をブルンと振ることができれば、その重荷は転がり落ちるでしょう。しかし、誰がこの頭を振ってやれるというのですか？」</p>
+<p>「この人間とは一体何か？ それは病の塊です。その病んだ精神を通じて、世界へと触手を伸ばし、獲物を得ようとするのです」</p>
+<p>「この人間とは何か？ それは野生の蛇の絡まり合いです。互いに安らぎを得ることもできず、それぞれが孤独に去り、世界で獲物を探し回るのです」</p>
+<p>「この哀れな身体を見よ！ それが苦しみ、欲したものを、この哀れな魂は勘違いして解釈してしまった！――それを『殺人的な歓喜』と、『刃の幸福への渇望』として解釈してしまったのです！」</p>
+<p>「現代において病気になる者は、今や『悪』とされる悪に襲われる。彼は、自分を苦しめるその何かで、他人を苦しめようとする。しかし、時代が違えば、悪も善も違ったのです」</p>
+<p>「かつては『疑うこと』が悪であり、『自己を確立しようとする意志』も悪でした。当時は、病気になった者は異端者や魔女と呼ばれた。そして異端者として、魔女として、彼は苦しみ、そして他人を苦しめようとしたのです」</p>
+<p>「……っと、おっと。こんな話は君たちの耳には入れたくないですか？ 君たちの言う『善き人々』に害をなす、とでも言いたいのでしょう。しかし、その君たちの『善き人々』とやらに、一体何の価値があるというのですか！」</p>
+<p>&lt;群衆A&gt; 「うわー、善人までディスり始めたよ…」
+&lt;群衆B&gt; 「もう何が何だか…」</p>
+<p>「正直に言わせてもらえば、君たち『善き人々』の多くは、私に嫌悪感を抱かせます。本当に邪悪なのは、君たちの言う『悪』ではない。私はむしろ、君たち善人が、かの蒼白の罪人のように、いっそ狂気に身を任せて破滅してくれたならと願うほどです！」</p>
+<p>「本当に、私は願っている！ 彼らの狂気が『真理』あるいは『忠実』あるいは『正義』と名付けられるほどの、純粋なものであったならと！ しかし、君たち善人は、ただ長生きするため、そして哀れで安楽な生を享受するために、そのちっぽけな道徳を持っているに過ぎない！」</p>
+<p>さんざん群衆を罵倒し終えたツァラトゥストラは、ふぅ、と一息つき、最後の決めポーズに入った。</p>
+<p>「私は、流れのほとりにある欄干のようなものです！ 私を掴める者だけが、掴むがいい！」</p>
+<p>彼は天を仰ぎ、高らかに宣言した。</p>
+<p>「しかし、言っておきますが、私は君たちが寄りかかるための松葉杖ではありませんので！ あしからず！――」</p>
+<p>ツァラトゥストラはこう言って、ビシッと締めくくった。市場には、冷たい風と、人々の冷ややかな視線だけが残されたのであった。</p>
 
                     </main>
 
