--- a/reborn_010_Vom_Lesen_und_Schreiben.html
+++ b/reborn_010_Vom_Lesen_und_Schreiben.html
@@ -175,49 +175,46 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h3 id="炎上覚悟賢者持論を展開しすぎて市場を大混乱に陥れる"><a class="header" href="#炎上覚悟賢者持論を展開しすぎて市場を大混乱に陥れる"><strong>【炎上覚悟】賢者、持論を展開しすぎて市場を大混乱に陥れる</strong></a></h3>
-<p>ツァラトゥストラが「超人こそがその狂気だ！」とドヤ顔で演説を締めくくったものの、市場の空気は完全に「で、綱渡りはまだなの？」というムードに支配されていた。完全にスベった形である。</p>
-<p>（な、なぜだ…！ なぜ俺の『ぼくのかんがえたさいきょうの哲学』が響かない…！？ こいつら、さては読解力がないな…？）</p>
-<p>内心でオーディエンスに責任転嫁しつつも、引きこもり歴10年のコミュ障賢者は、この気まずい空気に耐えられなかった。彼は震える声で、さらに持論を展開し始める。もはや誰も聞いていないのに。</p>
-<p><strong>7. 血と汗と涙のタイピング術</strong></p>
-<p>「い、いいですか皆さん！ 私が認めるのは、血で書かれた文章だけです！ 血で！ わかりますか！？ キーボードを血まみれにして書けってことです！ そうすれば、血こそが精神（スピリット）だってことがわかるでしょう！」</p>
-<p>&lt;群衆A&gt; 「物理的に！？ キーボード壊れるわ！」
-&lt;群衆B&gt; 「このおっさん、さっきから物騒すぎない？」</p>
-<p>「他人の血（書いたもの）を理解するのは、容易なことではありません！ だから私は、ただ漫然とページをめくるだけの、そこの君！ そう、君だ！ 私はそういう読書するだけの怠け者が大嫌いなんですよ！」</p>
-<p>まるで自分のファンサイトをROMってるだけのファンにキレるアイドルのようである。</p>
-<p>「読者のことなんか知ったこっちゃありません！ そんな連中のために何かするなんて真っ平ごめんだ！ あと100年もすれば、精神そのものがドブみたいな悪臭を放ち始めるでしょうね！」</p>
-<p>「かつて精神（スピリット）は神でした！ レアリティで言えばUR++です！ それが人間になり、SSRくらいになった。そして今や！ なんと精神はそこら中にいる大衆（モブ）！ NカードですよNカード！ 大安売りもいいところです！」</p>
-<p>&lt;ネット民&gt; 「&gt;&gt;ツァラさん、ソシャゲ脳で草」</p>
-<p>「血と箴言（アフォリズム）で書く者は、読まれることなんて望んでいません！ むしろ、暗記されることを望んでいるのです！ 俺の言葉を脳に刻みつけろってんですよ！」</p>
-<p>「いいですか、山には頂上から頂上へと至る最短ルートがあります。しかし、そのためには長い脚（理解力）が必要なんです！ 私の箴言は、いわば山の頂！ それを理解できるのは、偉大で高尚な人間だけなんですよ！」</p>
-<p>&lt;群衆C&gt; 「つまり俺らには無理ってこと？」
-&lt;群衆D&gt; 「完全に足切りされたわ…」</p>
-<p>「空気は薄く、清らかで、危険はすぐそこにあり、精神は陽気な悪意に満ちている！ これらが揃ってこそ、最高のコンディションと言えるのです！ 私は自分の周りにコボルト（かわいい小鬼）が欲しい！ なぜなら私は勇敢だからです！」</p>
-<p>「幽霊を追い払うだけの勇気なんて、ただのゴーストバスターです。真の勇気とは、自らコボルトを創造すること！ 勇気は笑いたがっているんですよ！」</p>
-<p>&lt;群衆A&gt; 「自分で敵キャラ作って自分で倒すって、ただのマッチポンプじゃん…」</p>
-<p>「私はもう、君たちと同じようには感じません。私が見下ろすこの雲、この暗くて重たいもの、私が笑い飛ばすそれら――まさにそれが、君たちの『雷雲（悩み）』なんですよ」</p>
-<p>「君たちは気分を高揚させたいとき、上を見ますよね？ でも私は、常に高揚しているので、下を見るんです。わかりますか、この違いが」</p>
-<p>&lt;群衆B&gt; 「こいつ、ずっとマウント取ってくるな…」</p>
-<p>「君たちの中で、笑いながらハイになれる人がいますか？ いないでしょう？ 最も高い山に登る者は、あらゆる悲劇やシリアスなことを見て笑い飛ばすんです！」</p>
-<p>「勇敢に、無頓着に、嘲笑的に、暴力的に――知恵というものは、我々にそうあることを望んでいます。いいですか、知恵というものは、ツンデレ系のヒロインみたいなものなんです！ 誰にでもデレるわけじゃない！ 常にただ一人の戦士（ウォリアー）だけを愛するんですよ！ そこでボーッと突っ立ってるだけの奴には絶対振り向いてくれませんからね！」</p>
-<p>&lt;群衆C&gt; 「急にギャルゲー始まったぞ」</p>
-<p>「君たちは私に言いますよね。『人生ハードモードすぎて無理ゲーだ』と。しかし、なんで午前中はそんなにプライドが高いのに、夜になると急に従順になるんですか？ 昼と夜でキャラ変でもしてるんですか？」</p>
-<p>「人生は耐え難い。それは事実です。しかし、そんなにメソメソするな！ 我々は皆、荷物を運ぶ可愛いロバさんみたいなものなんですから！」</p>
-<p>&lt;群衆D&gt; 「急に俺らを動物扱いし始めた…」</p>
-<p>「露の一滴が乗っかっただけで震える薔薇の蕾と、我々に何の関係があるというんですか！ そんな繊細ヤクザみたいなメンタルじゃやっていけませんよ！」</p>
-<p>「真実を言いましょう。我々は生を愛している。それは、人生に慣れたからじゃない。愛することに慣れているからです。わかります？ 愛とは対象（オブジェクト）ではなく、我々のスキルなんです！」</p>
-<p>&lt;ネット民&gt; 「愛はスキル…メモメモ」</p>
-<p>「愛には常にいくらかの狂気（マッドネス）があります。しかし、その狂気の中にも常にいくらかの理性（ロジック）がある！ そして、人生エンジョイ勢の私から見ても、蝶とかシャボン玉とか、そういう類いの人間が、一番幸福（ハピネス）を知っているように思えますね」</p>
-<p>「ああいう軽やかで、おバカで、優美で、動き回る魂が舞い飛ぶのを見ると――私、ツァラトゥストラは、涙と歌を禁じ得ないのです！」</p>
-<p>&lt;群衆A&gt; 「泣いてんのかい！」</p>
-<p>「私は、踊ることを知っている神しか信じません！」</p>
-<p>「そして私が我が悪魔（ラスボス）を見たとき、そいつが真剣で、徹底的で、深くて、厳粛であることに気づきました。それこそが『重力の精神』！ 全てのものを下に、下に引きずり下ろす、クソったれな精神です！」</p>
-<p>「怒りによってではなく、笑いによって人は殺す！ さあ皆さん、ご一緒に！ あの忌まわしき『重力の精神』を殺そうではありませんか！」</p>
-<p>&lt;群衆B&gt; 「殺意たけぇ…」</p>
-<p>「私は歩くことを学びました。それ以来、私は走り続けています。私は飛ぶことを学びました。それ以来、誰かに背中を押されなくても、自分の意志で飛び立てるようになりました！」</p>
-<p>「今や私は軽い！ 今や私は飛んでいる！ 今や私は自分自身を見下ろしている！ 今や、一柱の神が、この私を通して踊っているのだァァァ！」</p>
-<p>ツァラトゥストラはそう叫ぶと、恍惚の表情でバレリーナのようなポーズを決めた。市場の群衆は、完全にドン引きである。</p>
-<p>かくして、ツァラトゥストラの市場デビューは、華々しい成功とは言い難い、ビミョーな空気の中で幕を閉じたのであった。</p>
+                        <h2 id="読むことと書くことについてあるいは俺の推し活論"><a class="header" href="#読むことと書くことについてあるいは俺の推し活論">読むことと書くことについて、あるいは俺の推し活論</a></h2>
+<p>ツァラトゥストラは、綱渡り芸人のショーを台無しにした例の市場で、まだ懲りずにドヤ顔を続けていた。群衆の冷ややかな視線が突き刺さるが、10年の引きこもり生活で培われた鋼のメンタル（と鈍感力）を持つ彼にはノーダメージである。彼は咳払いを一つすると、今度は「創作論」について語り始めた。迷惑千万である。</p>
+<p>「皆さん、巷には様々な文章が溢れていますが、私が愛するのはただ一つ！ そう、作者が己の血で、魂を削って書いたモノだけです！ 血で書け！ そうすれば分かりますよ、血こそが精神（スピリット）そのものであるとね！」</p>
+<p>&lt;群衆A&gt; 「血で書くって何？ ホラー？」
+&lt;群衆B&gt; 「物理的に血で書いたら、すぐ固まってインク詰まるだろ」</p>
+<p>「他人の血（ガチ勢の魂）を理解するのは、容易なことではありません。だから私は、まとめサイトだけ読んで知った気になってるような、怠惰な読者が大嫌いなのです！」</p>
+<p>「読者を知る者は、読者のために何もしなくなる。あと100年もすれば、精神そのものがドブのような悪臭を放つでしょうね。誰も彼もが読み書きを許されるようになった結果、長期的には書くことだけでなく、思考そのものが腐っていくのです！」</p>
+<p>「かつて精神は神でした。至高の存在だったのです。それがいつしか人間レベルになり、今やどうです？ そこらへんの、匿名掲示板のレスバに明け暮れる大衆レベルにまで成り下がってしまった！嘆かわしい！」</p>
+<p>&lt;群衆C&gt; 「なんか急にキレだしたぞ、このおっさん」
+&lt;群衆D&gt; 「読者ディスとか、作者が一番やっちゃいけないやつじゃん…」</p>
+<p>「血と箴言（ありがたい俺のツイート）で書く者は、テキトーに流し読みされることなど望みません！ そう、暗記されることを望むのです！ 俺の言葉を心に刻め、愚民ども！」</p>
+<p>急に口調が荒くなった。スイッチが入ってしまったらしい。</p>
+<p>「山には、頂上から頂上へ至る最短ルートがあります。しかし、そのためには長い脚が必要だ！ 俺の箴言は、いわば山の頂！ それを理解できるのは、偉大で高尚な、選ばれし者だけなのです！」</p>
+<p>「空気は薄く、清らかで、危険がすぐそこにあり、精神は陽気な悪意に満ちている！ これら全てが揃ってこそ、最高のコンディションと言えるでしょう！ わかるかね、君たちに！」</p>
+<p>「私は、自分の周りにコボルト（いたずら好きの妖精）がいて欲しい。なぜなら私は勇敢だからです！ 幽霊を追い払うほどの勇気は、自らコボルトを創り出す！ そして勇気とは、笑うことを欲するのです！」</p>
+<p>&lt;群衆E&gt; 「コボルト…？ 急にファンタジーの世界に？」
+&lt;群衆A&gt; 「つまり、ぼっちすぎて幻覚見てるってこと？」</p>
+<p>「私はもはや、君たち俗物と同じ感情は持ち合わせていません。私が見下ろしているこの雲、この暗くて重たいもの、私がせせら笑う対象――それこそが、君たちの『雷雲』なのですよ。君たちが悩みのタネだと思っているものは、俺にとっては笑いのタネでしかないのです！」</p>
+<p>「君たちは、気分を高めたいとき、上を見ますよね？ しかし私は、常に高揚しているので、逆に見下ろすのです！ この圧倒的な差、わかりますか？」</p>
+<p>「そもそも君たちの中に、笑いながらにして高揚できる者が一人でもいますか？ いないでしょう！ それが俗物たる所以です！」</p>
+<p>「最も高い山に登る者は、全ての悲劇や、深刻ぶったお悩み相談を笑い飛ばすものです。ふははは！」</p>
+<p>&lt;群衆B&gt; 「うわー、性格わるっ！」</p>
+<p>「勇敢に、無頓着に、嘲笑的に、暴力的に――知恵というものは、我々にそうあることを望むのです！ 知恵は女神のようなもの。そして、彼女は常に戦士（俺みたいなガチ勢）だけを愛するのです！」</p>
+<p>「君たちは私に言いますね、『人生なんて耐え難いクソゲーだ』と。しかし、だとしたらなぜ、午前中はあんなにプライド高く威張っているのに、夜になると素直にベッドに入って寝るのですか？矛盾してません？」</p>
+<p>「人生は耐え難い。だが、そんなにヤワなフリをするな！ 我々は皆、荷物を運ぶのが宿命づけられた、可愛いロバや雌ロバのようなものなのですから！」</p>
+<p>「露の一滴が身に乗っただけでブルブル震えている薔薇の蕾と、我々に何の共通点があるというのですか！ そんな繊細ちゃんでは、この先生きのこれませんよ！」</p>
+<p>&lt;群衆C&gt; 「ロバとか繊細ちゃんとか、例えが独特すぎる…」</p>
+<p>「真実を教えてあげましょう。我々が人生（クソゲー）を愛するのは、人生に慣れているからではない。愛することに慣れているからです！」</p>
+<p>「愛には常にいくらかの狂気が含まれます。しかし、その狂気の中にも、常にいくらかの理性が存在するのです。この絶妙なバランスが大事なんですよ！」</p>
+<p>「そして、人生に好意的な私から見ても、蝶やシャボン玉、あるいはそういうフワフワした人間たちが、一番幸福を知っているように思えますね」</p>
+<p>「これら軽やかで、愚かで、優美で、動き回る魂が舞い飛ぶのを見ると――私、ツァラトゥストラは、涙と歌を禁じ得ないのです！」</p>
+<p>&lt;群衆D&gt; 「急に詩人モードになった。情緒不安定か？」</p>
+<p>「結論を言いましょう！ 私が信じるのは、ただ一つ！ 踊ることを知っている神だけです！ ノリの悪い神など、こちらから願い下げだ！」</p>
+<p>「そして私が我が悪魔を見たとき、彼は非常に真剣で、徹底的で、深く、厳粛でした。それこそが『重力の精神』！ 全てのものを下に、下に引っ張り、墜落させる元凶です！」</p>
+<p>「人を殺すのは、怒りによってではありません。笑いによってです！ さあ、皆さん！ そのつまらない常識や同調圧力、『重力の精神』を笑い殺してやろうではありませんか！」</p>
+<p>「私は歩くことを学びました。それ以来、私は自分を走らせています。私は飛ぶことを学びました。それ以来、誰かに背中を押されなくても、自分の意志で飛び立てるのです！」</p>
+<p>ツァラトゥストラは、そこで天を仰ぎ、恍惚の表情を浮かべた。彼の厨二病は、今、最高潮に達しようとしている。</p>
+<p>「今や私は軽やかだ！ 今や私は飛んでいる！ 今や私は、自分自身さえも見下ろしている！ 今や、一柱の神が、この私を通して踊っているのだァァァッ！！」</p>
+<p>ツァラトゥストラはそう叫ぶと、まるでバレリーナのように、その場でクルクルと回り始めた。市場の 한복판で、おじさんが一人、舞い踊る。地獄のような光景である。</p>
+<p>ツァラトゥストラはこう言った。</p>
 
                     </main>
 
