--- a/reborn_012_Von_den_Predigern_des_Todes.html
+++ b/reborn_012_Von_den_Predigern_des_Todes.html
@@ -175,49 +175,46 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h3 id="4-絶望系インフルエンサーを一刀両断-死の説教者アンチどもを論破祭り"><a class="header" href="#4-絶望系インフルエンサーを一刀両断-死の説教者アンチどもを論破祭り"><strong>4. 絶望系インフルエンサーを一刀両断！ 死の説教者（アンチ）どもを論破祭り！</strong></a></h3>
-<p>綱渡り芸人が勘違いでショーの準備を始めてしまい、市場の注目がそちらに移りかけたその時。ツァラトゥストラは「俺のターンはまだ終わってない！」とばかりに、さらに声を張り上げた。完全に自分の世界に入っている。</p>
-<p>「皆さん！ まだ大事な話があります！ この世にはびこる『死の説教者』についてです！」</p>
-<p>&lt;群衆A&gt; 「え、まだ続くの？ 綱渡りは？」
-&lt;群衆B&gt; 「死の説教者って何？ 新手のバンド名？」</p>
-<p>「ええ、そうです！ この地上は、『人生なんてさっさと辞めるべきだ』と説かれなければならない連中で満ち満ちているのです！」</p>
-<p>「この世界は、余剰人員（ニート）で溢れかえっています！ あまりにも多すぎる連中のせいで、人生というゲームのサーバーは重くなり、ラグは発生し、クソゲー化しているのです！ そんな彼らは、『永遠の生』とかいう甘い言葉で来世に誘導して、この現世（サーバー）からログアウトさせるべきなのです！」</p>
-<p>「連中は『黄色い者たち』、まあ、いわゆる『病み垢』ですね。あるいは『黒い者たち』、ガチの『陰キャ』とも呼ばれています。しかし！ この私、ツァラトゥストラは、彼らをさらに別の、もっと的確な色彩（レッテル）で君たちに示してしんぜよう！」</p>
-<p>もはや悪口のオンパレードである。</p>
-<p>「そこにいるのは、実に恐るべき者たちです！ 彼らはその内に制御不能の猛獣（中二病）を飼っており、選択肢は『欲望のままに暴走する』か『華麗に自爆する』かの二択しかない！ しかも、その欲望すらも、結局は自己破壊（自爆）に向かっているのですから、もう手がつけられません！」</p>
-<p>「彼らはまだ人間（まともな社会人）にすらなっていない、この恐るべき者たちは！ 彼らこそが『人生オワコン』説を唱え、そして自ら消え去るべきなのです！ さっさとアカウント削除してほしいものですな！」</p>
-<p>&lt;群衆C&gt; 「うわぁ…口が悪すぎる…」
-&lt;群衆D&gt; 「俺、たまに自爆したくなる時あるけど…」</p>
-<p>「さらに！ そこにいるのは『魂の肺病患者』たちです！ 彼らは生まれ落ちた瞬間から、すでに死に向かってカウントダウンを始めており、人生の攻略本ではなく、『いかに退屈に、いかに諦めて生きるか』という教えを渇望しているのです！」</p>
-<p>「彼らは心の底から死にたがっています！ 我々は彼らのその尊い意志を尊重すべきなのです！ いいですか、皆さん！ これらの生ける屍を叩き起こしたり、彼らの快適な棺桶に傷をつけたりしないよう、細心の注意を払わねばなりませんぞ！」</p>
-<p>聞いている方がだんだん不安になってくる説法だ。</p>
-<p>「彼らは病人や老人、あるいは道端の死骸に出会うと、たちまちドヤ顔でこう言うのです。『見ろ！ これで人生は論破された！ 人生なんてクソゲーだ！ Q.E.D.！』とね！」</p>
-<p>「しかし！ 論破されたのは彼ら自身と、物事の一面しか見ることのできない、その節穴のような眼（アイズ）だけなのです！ 全く、片腹痛い！」</p>
-<p>&lt;群衆E&gt; 「節穴て…」
-&lt;群衆F&gt; 「このおっさん、全方位に喧嘩売りすぎだろ…」</p>
-<p>「分厚い憂鬱（メンヘラオーラ）にその身を包み、死をもたらす些細な偶然（満員電車で足を踏まれた、とか）を、まるで限定SSRガチャを待つかのように貪欲に待ち望む！ かくして彼らは、ただひたすらに待ち続け、奥歯をギリギリと食いしばるのです！」</p>
-<p>「あるいは、こういうタイプもいます！ 彼らはポテチやコーラのようなジャンクな砂糖菓子に手を伸ばし、その幼稚な快楽に溺れながらも、心の中では『こんなんで喜んでる俺、マジ終わってんなw』と自らを嘲笑している！ 彼らは人生という名の、か細い藁一本にしがみついているくせに、なおその藁にしがみついている自分自身を嘲笑しているのです！」</p>
-<p>「彼らの知恵（笑）はこうです。『生き続けるヤツは愚か者だ。だが、俺たちも生きてるから、いかにも愚か者だ！ そしてそれこそが、人生における最も愚かなことなのだ！』――どうです？ このひねくれきった、実に哀れな論理！」</p>
-<p>&lt;群衆G&gt; 「うっ…ポテチ食いながら自分を笑うの、俺じゃん…」</p>
-<p>「『生はただ苦悩にすぎない』――そう嘆く者たちもいます。まあ、彼らは嘘をついてはいません。ならば！ 話は簡単です！ 君たち自身で終わらせるがいい！ ただ苦悩にすぎないという、その人生を、君たちの手で終わらせるがいいのです！」</p>
-<p>「そして、君たちの徳の教えは、こうあるべきなのです！ 『汝、自らを殺すべし！ 汝、自らから逃げ去るべし！』と！――これこそが、究極の自己肯定ですな！」</p>
-<p>と、とんでもないことを言い放った。</p>
-<p>「『肉欲は罪である！』――そう叫ぶ者たちもいます。死を説く連中ですな。『我々は脇に退き、子をもうけるべきではない！』などと。要は非モテの戯言です！」</p>
-<p>「『出産は骨が折れるだけだ』――そう言う者たちもいます。『なぜこれ以上、不幸な人間（ガチャ失敗作）を生産する必要があるのか？』と！ 彼らもまた、立派な死の説教者（ネガキャン配信者）です！」</p>
-<p>「『憐憫（同情）が必要である』――そう言って寄ってくる者たちもいます。『私が持っているもの（この惨めさ）を受け取ってくれ！ 私という存在（この哀れさ）を受け取ってくれ！ そうすれば、人生への執着も少しは薄れるだろうから！』と！」</p>
-<p>「もし彼らが、心の底から憐憫深い、本物の『イイ人』であったならば！ 彼らは隣人たちに、人生そのものを嫌悪させたはずなのです！ 『悪であること』――つまり、『お前の人生もクソだ！』と教えてやることこそが、彼らにとっての真の善であったでしょうに！」</p>
-<p>&lt;群衆H&gt; 「もう何がなんだか…」
-&lt;群衆I&gt; 「悪が善…？ 哲学って難しい…」</p>
-<p>「しかし、彼らはただ、自分がこの生から解放されたいだけなのです！ 彼らがその鎖と施し（同情）によって、他者をさらに強くこのクソゲーに縛り付けていることなど、彼らにとっては何ほどのことであろうか！――全く、迷惑な話です！」</p>
-<p>そしてツァラトゥストラは、今度は汗水たらして働く人々の方を向き、ビシッと指をさした。</p>
-<p>「そして君たち！ そう、君たちです！ 生が荒々しい労働と、終わらない不安である者たちよ！ 君たちは、この人生にひどく倦（う）んでいないか？ 君たちこそ、死の説教を受け入れる準備が万端に整っているのではないか！？」</p>
-<p>「荒々しい労働（社畜ライフ）を愛し、常に速く、新しく、異質なもの（流行りのタピオカとか）を追い求める君たちすべてよ！――君たちは自分自身に耐えられない！ 君たちのその勤勉さは、ただの逃避行動であり、自分自身を忘却せんとする意志の表れにすぎないのです！」</p>
-<p>と、特大ブーメランを投げつけた。</p>
-<p>「もし君たちが、もっと生そのものを信じていたならば！ 君たちはそんな刹那的な快楽に身を投げ出すことは少なかったでしょう！ しかし君たちには、待つための十分な中身が、自分自身の内にない！――そして、究極の贅沢である『怠惰』を味わうための中身すらないのです！」</p>
-<p>「見渡すがいい！ 至るところで、死を説く者たちの陰鬱な声が響き渡っている！ そしてこの地上は、死が説かれねばならぬ者たちで満ち満ちている！」</p>
-<p>ツァラトゥストラは天を仰ぎ、最後の言葉を吐き捨てた。</p>
-<p>「あるいは『永遠の生』でも結構！ 私にとっては同じことです――彼らが、ただ速やかにこの世界から去りゆく限りにおいてはね！」</p>
-<p>最後の最後で本音（というか暴言）がダダ漏れである。市場は、ツァラトゥストラのあまりの毒舌に、綱渡り芸人のことなどすっかり忘れ、ただただ静まり返るのであった。</p>
+                        <h2 id="悲報巷に溢れる人生オワタ説を流布するヤバい説教者たち"><a class="header" href="#悲報巷に溢れる人生オワタ説を流布するヤバい説教者たち">悲報！巷に溢れる「人生オワタ説」を流布するヤバい説教者たち</a></h2>
+<p>さて、綱渡り芸人があらぬ誤解から準備を始めてしまった一方、ツァラトゥストラは群衆の冷笑にも全く動じていなかった。むしろ、燃料を得たかのように、彼の瞳はさらにギラリと輝きを増す。彼は市場の隅でどんよりと座り込んでいる、いかにも「人生に疲れました」オーラを放つ一団を指さした。</p>
+<p>「皆さん！ ご覧ください！ あの死んだ魚のような目をした人々を！ あれこそが『死の説教者』！ そしてこの地上は、ああいう連中に『さっさと人生からログアウトしろ』と説かれねばならぬ者たちで満ち満ちているのです！」</p>
+<p>&lt;群衆A&gt; 「うわ、名指し…」
+&lt;群衆B&gt; 「あの人たち、ただ疲れてるだけじゃ…」</p>
+<p>「そう！ この世界は余剰人員で溢れかえり、あまりに多すぎるその他大勢（NPC）によって、人生というゲームのサーバーは重くなっている！ 彼らを『永遠の生』という名の甘い罠…そう、魅力的な異世界転生案件で、このゲームからお引き取り願うのが一番なのです！」</p>
+<p>「彼らは『黄色い者たち』、あるいは『黒い者たち』と呼ばれる。まあ、今風に言えば『エモ系』とか『ゴス系』ってとこですかね？ しかし！ この私、ツァラトゥストラは、彼らをさらに別の、もっと的確な分類（カラー）で皆さんにお見せしましょう！」</p>
+<p>「そこにいるのは、実に恐るべき者たち！ 彼らはその内に、制御不能な中二病的猛獣を飼いならしている！ そして選択肢は常に二つ！『欲望に身を任せる』か『自爆する』か！ しかも、その欲望自体が、結局は自爆ボタンに繋がっているという救いのなさ！」</p>
+<p>&lt;群衆C&gt; 「選択肢がどっちも地獄！」</p>
+<p>「彼らはまだ人間ですらない、この恐るべき者たちは！ 彼らが『人生なんてクソゲーだ』と説き、そして自らアンインストールしていくことを、私は心から願う！」</p>
+<p>「そしてあそこにいるのは、『魂の肺病患者』たち！ 彼らはこの世に生まれ落ちた瞬間から、すでに死に向かってカウントダウンを始めている！ そして、倦怠と諦念の教え…つまり『もう何もしたくない』という思想を、砂漠で水を求めるように渇望しているのです！」</p>
+<p>「彼らは喜んで死にたがっている！ 我々は彼らの『ログアウトしたい』という意志を尊重すべきなのです！ お願いだから、これらの死にかけのプレイヤーを無理やり蘇生させたり、彼らの快適な棺桶（ひきこもり部屋）をこじ開けたりしないように、我々は細心の注意を払わねばなりません！」</p>
+<p>&lt;群-衆D&gt; 「優しさがすごい方向に向かってるぞ…」</p>
+<p>「彼らは病気の者や老人、あるいは道端の死骸を見つけると、すぐさまドヤ顔でこう言うのです。『見ろ！ 人生は論破された！ Q.E.D.！』と！」</p>
+<p>「しかし！ 論破されたのは彼ら自身と、存在の一面しか見ることのできない、その節穴のような眼（まなこ）にすぎないのだ！ まったく、視野が狭いにもほどがある！」</p>
+<p>「分厚い憂鬱（メンヘラ）に包まれ、死をもたらす些細な偶然…例えば、角で曲がったらトラックに轢かれるとか、そういうのを貪欲に待ち望んでいる。かくして彼らは待ち続け、ギリギリと歯を食いしばる。…まあ、自分から飛び込む勇気はないんですけどね！」</p>
+<p>&lt;群衆E&gt; 「ヘタレかよ！」</p>
+<p>「あるいはまた、彼らはポッキーなんかの砂糖菓子に手を伸ばし、その幼稚な行為を自分で嘲笑する。『こんな甘いものに逃げてる俺、マジウケる』とか言いながら。彼らは人生という名の藁一本に必死にしがみつき、なおかつ、その藁にしがみついている自分自身を嘲笑しているのです！ 複雑すぎて、もはやギャグだ！」</p>
+<p>「彼らの知恵（笑）はこうです。『生き続ける者は愚か者である。だが、我々はいかにも愚か者である！ そしてそれこそが、人生における最も愚かなことなのだ！』…とかなんとか言って、結局生き続けている！ ツンデレか！」</p>
+<p>「『生はただ苦悩にすぎない』…そう言う者たちもいますが、まあ、彼らは嘘をついていない。ならば！ 君たち自身でそれを終わらせるがいい！ ただ苦悩にすぎないというのなら、そのクソゲーをさっさと終わらせるがいいのです！」</p>
+<p>&lt;群衆A&gt; 「え、このおっさん、さっきから物騒すぎない？」
+&lt;群衆B&gt; 「完全にアウトなこと言ってるよな…」</p>
+<p>「そして、君たちの徳の教えはこうあるべきだ！『汝、自らのアカウントを削除すべし！ 汝、自ら逃げ去るべし！』と！」</p>
+<p>「『肉欲は罪である』…そう言う者たちもいる。死を説く連中です。『我々は脇に退き、これ以上プレイヤー（子供）を増やすべきではない！』と。サーバーが重くなるからやめろ、と」</p>
+<p>「『出産は骨が折れる』…そう言う者たちもいる。『なぜさらに出産するのか？ 不幸なプレイヤーを増やすだけではないか！』と。そして彼らもまた、死の説教者の一味なのです」</p>
+<p>「『憐憫（同情）が必要である』…そう言う者たちもいる。『私が持っているものを受け取ってくれ！ 私が存在するこの哀れなアバターを受け取ってくれ！ そうすれば、人生という名のクソゲー運営は、私への縛りを少しは緩めてくれるだろう！』と、恩着せがましく言う！」</p>
+<p>&lt;群衆C&gt; 「いるいる、そういう奴！」</p>
+<p>「もし彼らが根底から憐憫深い、真の善人であったならば、彼らは隣人たちに『人生って最高だよな！』ではなく、『人生ってマジでクソゲーだから、お前も早くやめた方がいいぜ』と説いて回ったはずだ！ 悪であること…それこそが彼らの真の善であっただろうに！」</p>
+<p>「しかし彼らは、ただ自分がこのゲームから解放されたいだけ！ 自分の鎖や贈り物を他人に渡すことで、その他人をさらに強くゲームに縛り付けていることなど、彼らにとってはどうでもいいことなのです！ 自己中極まりない！」</p>
+<p>「そして、そこの君たち！ そう、君たちもまた、人生が荒々しい労働と不安…つまり、終わらない残業と将来への不安しかないと思っている者たちよ！ 君たちは人生にひどく倦んで（うんで）いないか？ 君たちは、死の説教を受け入れる準備が万端に整ってはいないか？」</p>
+<p>&lt;群衆D&gt; 「ギクッ…」
+&lt;群衆E&gt; 「俺のことだ…」</p>
+<p>「荒々しい労働を愛し、速く、新しく、異質なもの…つまり、常に新しいタスクと炎上案件を愛する君たちすべてよ！ 君たちは自分自身に耐えられない！ 君たちのその勤勉さは、ただの逃避行動であり、自分自身を忘却せんとする意志の表れにすぎないのだ！」
+と、10年間山に引きこもっていた男は語る。説得力の塊である。</p>
+<p>「もし君たちが、人生というゲームをもっと信じていたならば、刹那的な快楽（ソシャゲのガチャ）に身を投げ出すことは少なかったであろう！ しかし君たちには、待つための十分なコンテンツが自分の中にない！ そして、怠惰に過ごすためのコンテンツすらないのだ！」</p>
+<p>「見よ！ 至るところで、これら死を説く者たちの声が響き渡っている！ そしてこの地上は、彼らに『さっさと終われ』と説かれねばならぬ者たちで満ちているのだ！」</p>
+<p>ツァラトゥストラは、そこで一度言葉を切り、ニヤリと笑った。</p>
+<p>「あるいは、彼らが言う『永遠の生』でもいい！ 私にとっては同じことだ！ 彼らがただ、速やかにこの世界から去りゆく限りにおいてはね！」</p>
+<p>――ツァラトゥストラはこう言った。
+市場の空気は、完全に冷え切っていた。</p>
 
                     </main>
 
