--- a/reborn_017_Vom_Freunde.html
+++ b/reborn_017_Vom_Freunde.html
@@ -175,53 +175,55 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h3 id="激論ぼっちの哲学者が語る真の友情論があまりにもこじらせすぎている件"><a class="header" href="#激論ぼっちの哲学者が語る真の友情論があまりにもこじらせすぎている件"><strong>【激論】ぼっちの哲学者が語る「真の友情論」が、あまりにもこじらせすぎている件</strong></a></h3>
-<p>市場での「超人」演説を華麗にスベり倒したツァラトゥストラ。しかし彼の鋼のメンタルはノーダメージだ。むしろ「愚民どもに高尚な教えを授けてやったわ」と、一人悦に入っていた。そんな彼に、野次馬の一人が純粋な、そして最も残酷な質問を投げかけた。</p>
-<p><strong>&lt;野次馬A&gt;</strong> 「あんた、さっきから一人でベラベラまくし立ててるけどさ……もしかして、友達いないの？」</p>
-<p>グサッ！ まるで心のド真ん中に聖槍が突き刺さったかのような一撃！
-だが、我らが引きこもり賢者は、この致命傷すらも自らの哲学を開陳する絶好のチャンスへと変えてしまうのだ！</p>
-<p>ツァラトゥストラは、野次馬を憐れむような、それでいて「フン、何もわかっていない雑魚が…」と見下すような、実に複雑な表情でゆっくりと口を開いた。</p>
-<p>「フッ……いい質問ですねぇ、そこの君。君のような一般人には、『孤独』と『孤高』の違いがわからないのも無理はないでしょう。よく聞いてください？ <strong>『一人は常に私の周りに多すぎる』</strong>――これが、我々レベルの思索者の間では常識なんです」</p>
-<p><strong>&lt;群衆B&gt;</strong> 「何そのパワーワード。ただのぼっちの言い訳にしか聞こえないけど」</p>
-<p>「つまりですね！ 常に『私』と『もう一人の私』による脳内ディベートが白熱しすぎて、外部の人間が入り込む余地などないのですよ！ もし友人がいなければ、この熱すぎる対話にどう耐えろと？ 無理でしょ？」
-と、ツァラトゥストラは一人二役で会話が完結していることを力説した。完全にヤバい人である。</p>
-<p>「隠者にとって友人とは、常に**『第三者』<strong>なんです。そう、第三者とは、二人の会話（俺と俺の）が深淵という名の沼にズブズブと沈んでいくのを防いでくれる</strong>『コルク』**のようなもの！ いわば便利なセーブポイントなんですよ！」</p>
-<p><strong>&lt;群衆C&gt;</strong> 「友達をアイテム扱いかよ……」</p>
-<p>「ああ、我々のような隠者にとって、思考の深みは時に深すぎる！ だからこそ、友人という名の**『高み（言い訳）』**を切望することがあるのです！ でもね！」
-ツァラトゥストラは人差し指をビシッと天に突きつけた。</p>
-<p>「他者への信頼というのは、結局のところ、自分が自分をどう見せたいかの自己プロデュースでしかない！ <strong>『友達が欲しいなー』なんて切望するのは、ソロプレイじゃもう限界ですって白状してるようなもんなんですよ！</strong> 自分の弱さの裏返し！ ダサいと思いませんか！？」</p>
-<p>「それに、愛の力で嫉妬を乗り越えようとしたり、自分が傷つきやすいのを隠すために、わざと敵を作って攻撃的になったりする！ 心当たり、あるんじゃないですかぁ？」
-と、彼はニヤニヤしながら群衆を見渡した。何人かが気まずそうに目をそらす。</p>
-<p>「だから、友情をストレートに請う勇気がない、真の畏敬の念を持つ者――まあ、僕みたいなコミュ障とも言いますが――は、こう言うしかないんです。**『せめて私の敵（ライバル）であれ！』**とね！」</p>
-<p><strong>&lt;群衆D&gt;</strong> 「ただのクソめんどくさいツンデレじゃねーか！」</p>
-<p>「友を持ちたいなら、そのために<strong>戦う覚悟</strong>も決めなきゃダメなんです！ そして戦うためには、<strong>敵になる</strong>こともできなきゃ！ 友の中には、常に**『最高の敵』**をリスペクトとして内包しておくべきなんですよ！ 馴れ合いはクソです！」</p>
-<p>「いいですか！？ 友に反抗する時こそ、心の中では誰よりも近くにいなければならない！ なのに、『親友だから』とか言って、平気で相手のテリトリーに土足で踏み込むやつがいるでしょ！？」</p>
-<p>「**『ありのままの俺を見てくれ！』**とか言って、精神的スッピンを晒すことが、相手への敬意だとでも思ってるんですか！？ 迷惑千万！ 相手は『うわ、出たよ…』ってドン引きですよ！ そんなことをすれば、友は君を悪魔に売り渡したくなるでしょうね！」</p>
-<p><strong>&lt;群衆E&gt;</strong> 「こいつ、過去に友達と何があったんだ……？」</p>
-<p>「自分を隠さない者は、相手をイラつかせるだけ！ そうでしょう？ 君たちだって、もし神様が全裸で目の前に現れたら、まず**『服を着てください！』**って思いますよね！？ それと同じです！」
-もはや例えが壮大すぎて意味不明である。</p>
-<p>「友人の前だからこそ、完璧に美しく着飾るべきなんです！ なぜなら、君は友人にとって**『超人』へと至るための『矢』であり、『憧れ』**であるべきだからだ！」</p>
-<p>「君たち、眠っている友人の顔を見たことがありますか？ その無防備な顔が何に見えるか、教えてあげましょう。それは、粗野で不完全な鏡に映った**『君自身の顔』**なんですよ！ うわ、俺もこんなマヌケ面してんのかなって、ゾッとするはずです」</p>
-<p><strong>&lt;群衆A&gt;</strong> 「うわー、性格わるっ！」</p>
-<p>「眠ってる友人の顔を見て、驚いたことはないですか？ 『こいつ、こんな顔してたんだ…』って。おお、我が友よ、人間とは乗り越えられるべきものである、と僕はその時、改めて思うのです」</p>
-<p>「友人とは、相手の心を推測し、沈黙の意味を読み解く**『エスパー』**であるべきです！ 何でもかんでも見ようとしちゃダメ！ 相手の夢（寝言）から、そいつが起きてる時に何してるか（本性）を読み解くんです！」</p>
-<p>「君たちの憐憫（同情）もまた、<strong>推測</strong>であるべきなんですよ！ つまり、まず相手が『同情（いいね！）』を欲しがっているかどうかを、その場の空気から読み取るんです！ <strong>『大丈夫？』なんていうクソリプは送るな！</strong> 相手は『お前に俺の何がわかるんだよ！』って思ってるかもしれない。その憐憫は、相手が本当に望んでいるかどうかの『市場調査』から始めるべきなんです！」</p>
-<p><strong>&lt;群衆B&gt;</strong> 「友情に市場調査とか持ち出すなよ……」</p>
-<p>「そして、その同情心は、<strong>硬いツンデレアーマーの下に隠しておくべき</strong>なんです。それを砕いて取り出そうとしたら、歯が折れるくらいにね！ そうすれば、いざという時に見せるその優しさが、極上の繊細さと甘さを持つことになるんですよ！ ギャップ萌えってやつです！」</p>
-<p>「そもそも君は、友人にとって清らかな空気ですか？ 孤独ですか？ パンですか？ 薬ですか？ <strong>自分の鎖さえ解けないくせに、友人を救おうなんておこがましい</strong>んですよ！」</p>
-<p>「君は<strong>奴隷</strong>ですか？ 言われたことしかやらないイエスマンに、本当の友人はできません。じゃあ、君は<strong>暴君</strong>ですか？ 『俺の言うことだけ聞け』っていうジャイアンに、友達ができるわけないでしょう」</p>
-<p>ここでツァラトゥストラは、少し声を潜め、何かを暴露するかのように続けた。</p>
-<p>「そして…これはデリケートな問題なんですが…<strong>女性の中には、あまりにも長い間、『奴隷』と『暴君』が隠されてきた</strong>歴史があるんです。だから、彼女たちはまだ**『友情』<strong>という概念をインストールできていない。彼女たちが知っているのは、ただ</strong>『愛』**だけなんです」</p>
-<p><strong>&lt;女性の群衆&gt;</strong> 「はぁ！？」「ちょっと、何言ってんのこのおっさん！」「炎上させてやろうか！」</p>
-<p>「落ち着いてください！ これは差別じゃない、分析です！ 女性の愛の中には、自分が愛さないものすべてに対する<strong>不正と盲目</strong>がある！ そして、その愛の中にも、光のすぐ隣に、突然の<strong>襲撃と稲妻と夜</strong>が潜んでいる！ つまり、情緒がジェットコースターなんです！」</p>
-<p>「だから、女性はまだ友情を築けない。彼女たちは気まぐれな<strong>猫</strong>であり、自由な<strong>鳥</strong>であり、あるいは最良の場合でも、のんびりした<strong>牛</strong>なんです。わかりますか？ まだジョブとして『親友』がアンロックされてないんですよ」
-女性陣からの殺気立った視線に、さすがのツァラさんも少しタジタジである。</p>
-<p>「し、しかし！ じゃあ君たち<strong>男</strong>はどうなんだと！ 言わせてもらおう！ 君たちのうち、一体誰が本当の『友情』を築けているというんですか！？」</p>
-<p>「おお、君たち男の魂の貧しさと貪欲さよ！ 君たちが友人に与えているものなんて、僕ならまだ敵にだって与えてやりますよ！ それで貧しくなるなんてこともない！」</p>
-<p>ツァラトゥストラは、最後に大きく息を吸い込み、結論を叫んだ。</p>
-<p>「**『仲間意識』<strong>は存在する！ 飲み会仲間とか、ゲーム仲間とかね！ でも、</strong>『友情』**はまだ存在しない！ それは、これから僕たちが創り上げていくべき、至高のプロジェクトなんです！」</p>
-<p>「そう！ <strong>友情もまた、存在するようになることを願う！</strong>」</p>
-<p>ツァラトゥストラは再びドヤ顔で締めくくった。群衆は、あまりにもこじらせすぎた友情論に、もはや笑う気力も失い、ただただ呆然と立ち尽くすのであった。</p>
+                        <h2 id="ぼっち哲学友達-必要なくないコミュ障賢者が語る真の友情論"><a class="header" href="#ぼっち哲学友達-必要なくないコミュ障賢者が語る真の友情論">【ぼっち哲学】友達？ 必要なくない？〜コミュ障賢者が語る真の友情論〜</a></h2>
+<p>綱渡り芸人の悲劇（？）を横目に、ドヤ顔が止まらないツァラトゥストラ。群衆の冷ややかな視線が、もはや快感になってきているようである。彼は少し息を整えると、まるで誰もが彼の次の言葉を待ちわびているとでも言わんばかりの自信に満ちた表情で、再び口を開いた。</p>
+<p>「さて皆さん！ 『超人』の話はご理解いただけましたね？ 次は、君たちのような凡人が最も勘違いしているテーマ、『友情』について、この私が直々にレクチャーして差し上げましょう！」</p>
+<p>&lt;群衆A&gt; 「え、まだ喋んのこの人…」
+&lt;群衆B&gt; 「もう帰っていいかな…」</p>
+<p>「そもそも！ 『一人は常に私の周りに多すぎる』――これは、かつてある引きこもりの賢者が言った言葉です。そう、何を隠そう、この私のことですが！」</p>
+<p>高らかに自分のぼっちをカミングアウトするツァラトゥストラ。もはや怖いものなしである。</p>
+<p>「つまりですね、私レベルになると、一対一の対面コミュニケーションすらトゥーマッチなんですよ！ なぜなら！ 『私と私』、つまり私と私の脳内会議は、常に白熱しているからです！ 最高の議論相手、最強の壁打ちパートナー、それがこの私自身なのです！ これ以上、誰か必要ですか？ いや、ない！」</p>
+<p>&lt;群衆C&gt; 「ただの友達いない奴の強がりにしか聞こえない…」
+&lt;群衆D&gt; 「脳内会議って…痛々しい…」</p>
+<p>「いいですか？ 隠者にとって、友人とは常に『第三者』にすぎません。この『第三者』とは何か？ それは、私と私の深遠なる脳内会議が、底なし沼に沈んでいかないようにするための『コルク』、つまり『浮き』のようなものなのです！ 深すぎる思考の海で溺れないための、ただの安全装置ですよ！」</p>
+<p>「ああ、我々のような孤高の天才にとって、思考の深淵はあまりにも広大すぎる！ だからこそ、たまに息継ぎのために友人という『高み』が欲しくなるのです！ 分かりますか、この感覚！」</p>
+<p>「そもそもですね、『友達欲しいなー』とか思っちゃうこと自体が、自分の中に『信じたい何か』、つまり『己の不完全さ』を裏切る行為なんですよ！ 友を欲しがる心こそが、自分は一人では不完全ですと白状している裏切り者なのです！」</p>
+<p>&lt;群衆E&gt; 「何言ってんだこいつ…」</p>
+<p>「しばしば、人は『愛』によって『嫉妬』という面倒な感情を飛び越えようとします。そして、自分が攻撃されやすい豆腐メンタルであることを隠すために、先制攻撃を仕掛けて、わざわざ敵を作ったりする！ 心当たり、あるでしょう！？」</p>
+<p>「だから真に尊敬できる人間は、こう言うべきなのです！ 『友達になってください！』などと媚びへつらうな！ 『せめて私の敵であれ！』と！ 友情を乞う勇気がないなら、せめて敵として私と対等に渡り合え、と！ そういう気概を見せてみろってんですよ！」</p>
+<p>「友を持ちたいなら、その友のために戦う覚悟を決めなさい！ そして、戦うためには、まず敵になることができなければならない！ 馴れ合いはクソです！」</p>
+<p>&lt;群衆A&gt; 「口が悪くなってきたぞ…」</p>
+<p>「いいですか、友の中には、まだ『敵』として敬うべき部分を残しておくべきなのです。どれだけ親しくなっても、決して馴れ合わない。分かりますか？ 親友に近づけば近づくほど、『こいつを裏切らずにいられるか？』というスリルを味わうべきなのです！」</p>
+<p>「人は、友の中にこそ『最良の敵』を持つべきです。友に反論するときこそ、心の中では誰よりもその友の近くにいるべきなのです！ これが、アツい！」</p>
+<p>「まさか君たち、友人の前で何の飾り気もなく、素っ裸でいようとしてませんよね？ 『ありのままの自分を見てくれ！』と？ それが友人への敬意だとでも？ 馬鹿を言っちゃいけません！ そんなことをしたら、友人は君を悪魔に売り渡したくなりますよ！ 『こいつキモイから悪魔にやろう』ってね！」</p>
+<p>&lt;群衆B&gt; 「偏見がすごい」</p>
+<p>「自分を隠さない人間は、他人をイラつかせるんです！ そうでしょう？ 君たちだって、他人の素っ裸なんて見たくないでしょうが！ もし君たちが神であるなら、その時こそ自分の服を恥じるべきなのです！ それくらい、自分を飾ることは重要だということです！」</p>
+<p>「友人のためには、これ以上ないほど美しく自分を飾りなさい！ なぜなら、君は友人にとって『超人』へと向かう一本の矢であり、憧れの的であるべきだからです！ 『俺の推し、マジ尊い…』と友人に言わせるくらいに、自分をプロデュースしなさい！」</p>
+<p>「君たち、友人の寝顔を見たことがありますか？ そして、その寝顔を見て、己の顔を省みたことがありますか？ 友人の顔とは何か？ それは、粗末で不完全な鏡に映った、君自身の顔なのですよ！ 見てると不安になってきません？ 『うわ、俺の友達、こんなブサイクなんか…ってことは俺も…？』ってね！」</p>
+<p>&lt;群衆C&gt; 「最低すぎて草」</p>
+<p>「友人の寝顔を見て、驚かなかったか？ 『こいつ、こんな顔してたんだ…』と。おお、我が友よ！ 人間とは、乗り越えられるべき存在なのです！ 友人の寝顔のブサイクさすらも、君が超人になるためのバネにしなさい！」</p>
+<p>「真の友人とは、推測と沈黙の達人、つまりエスパーであるべきです。いちいち『言わなくても分かるだろ』というレベルの関係性を築きなさい。君の夢が、友人が起きている時に何をしているかを教えてくれるはずです。テレパシーですよ、テレパシー！」</p>
+<p>「君の憐憫は、推測であるべきです。つまり、友人が本当に同情を欲しているのかどうかを、まず見極めなさい。もしかしたら友人は、君の安っぽい同情ではなく、曇りのない眼差しと、永遠を見つめるかのようなクールな視線を愛しているのかもしれないでしょう？」</p>
+<p>&lt;群衆D&gt; 「だんだんポエムになってきた」</p>
+<p>「友人への同情は、硬い殻の下に隠しておきなさい。そして、その殻で歯を折るくらいの覚悟でぶつかってきなさい。そうすれば、その同情は真の繊細さと甘さを持つでしょう。安っぽい同情のバーゲンセールは今日で終わりです！」</p>
+<p>「そもそも君は、友人にとって清らかな空気ですか？ 孤独ですか？ パンですか？ 薬ですか？ 何も与えられない人間は、友人たる資格はない！ 中には、自分の鎖を解くことすらできないのに、友人にとっては救世主である、という奇跡のような人もいますがね！」</p>
+<p>「君は奴隷ですか？ 指示待ち人間ですか？ ならば友人にはなれません。君は暴君ですか？ 他人を支配しようとするパワハラ野郎ですか？ ならば友人を持つことはできません。断言します！」</p>
+<p>と、そこでツァラトゥストラはニヤリと笑い、爆弾を投下した。</p>
+<p>「で、ここからが超重要なんですが……女子には、友情は無理です！」</p>
+<p>&lt;群衆一同&gt; 「はぁ！？」「いきなり何！？」「大炎上案件だろ！」「このおっさんヤバすぎ！」</p>
+<p>「まあまあ、落ち着きなさい！」とツァラトゥストラは群衆をなだめる（つもりの火に油を注ぐ発言を続ける）。「これは哲学的な考察です！ いいですか、女性における人間関係のOSは『愛』だけなのです！ 好きか、嫌いか、それしかない！ 友情という、もっとドライでクールで、リスペクトに基づいた関係性は理解できないようにプログラムされているのです！」
+（※ツァラトゥストラ個人の極端な偏見です。彼はこの10年間、山で鷲と蛇以外の生き物とまともに会話していません）</p>
+<p>「女性の愛の中には、自分が愛さないもの全てに対する『不正』と『盲目』が内包されている！ 視野が狭い！ さらに、その愛は常に『襲撃』と『稲妻』と『夜』を伴う！ つまり、メンヘラなんですよ！ 突然襲いかかってきて、雷を落とし、闇に突き落とす！ それが女性の愛の本質です！」</p>
+<p>&lt;女性の群衆&gt; 「ぶっ飛ばすわよアンタ！」</p>
+<p>「落ち着いて！ 比喩表現です！ つまり、女性とは、気まぐれな猫であり、ピーチクパーチクさえずる鳥であり、あるいは、最良の場合でも、のっそりした牛なのです！ これが真理です！」
+（もはや何を言っても手遅れである）</p>
+<p>「……まあ、女性をディスりまくりましたが」と、ツァラトゥストラは急に矛先を変えた。「じゃあ君たち男はどうなんだと！ あ！？ 君たちの中に、この私が語った『真の友情』を実践できている者が一人でもいるというのかね！？」</p>
+<p>彼は市場にいる男たちを一人一人指差しながら、軽蔑の視線を送る。</p>
+<p>「おお、見なさい、この君たちの魂の貧しさと、欲にまみれた貪欲さを！ そんな濁った眼で、友人など持てるはずがない！」</p>
+<p>「君たちが『友情の証だぜ！』とか言って交換している安っぽいミサンガみたいなもの、私ならまだ敵にだってくれてやりますよ！ そして、そんなものを与えたところで、私の価値は１ミリたりとも減りませんけどね！」</p>
+<p>ツァラトゥストラは、ふっと天を仰ぎ、まるで全世界に言い聞かせるかのように、しかしどこか他人事のように、こう締めくくった。</p>
+<p>「まあ、ただ群れているだけの『仲間意識』、いわゆる『ズッ友（笑）』みたいなものは、どこにでも存在します。ですが、私が語ったこの至高の『友情』が、いつかこの地上に生まれることを、願ってやみませんねぇ！」</p>
+<p>かくして、ツァラトゥストラのありがたい（？）友情論は幕を閉じた。市場には、ドン引きした人々の冷たい沈黙だけが残ったのであった。</p>
 
                     </main>
 
