--- a/reborn_018_Von_tausend_und_Einem_Ziele.html
+++ b/reborn_018_Von_tausend_und_Einem_Ziele.html
@@ -175,48 +175,50 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h3 id="悲報コミュ障賢者異文化交流で病む"><a class="header" href="#悲報コミュ障賢者異文化交流で病む"><strong>【悲報】コミュ障賢者、異文化交流で病む</strong></a></h3>
-<p><strong>4. 全てのギルドには掟（ローカルルール）がある</strong></p>
-<p>市場での華麗なる演説（という名の一方的なポエム朗読会）が、芸人への声援と勘違いされるという屈辱的な形で幕を閉じた後、ツァラトゥストラは一人、町の安宿でふて寝していた。</p>
-<p>「（解せぬ……なぜ俺の有り難い『超人』思想が、あんな俗物どもの心に響かないのだ……！ やはり人間は愚か！ 猿以下！ 蛆虫！）」</p>
-<p>彼は布団を頭までかぶり、ブツブツと悪態をつく。まさに内弁慶である。しかし、ひとしきり悪態をつき終えると、むくりと起き上がり、己の知の探求（という名のネットサーフィン）の記憶を反芻し始めた。そう、彼は引きこもり時代、世界中の様々なサーバーを渡り歩き、多くの国や民族の文化（という名のネット掲示板やMMORPGのギルド文化）をリサーチしていたのだ。</p>
-<p>「そうだ……俺は見てきた……多くの国々、多くの民族（ギルド）をな……。そして発見したのだ。地上には『善』と『悪』以上に偉大な力など存在しないということを！」</p>
-<p>彼は再び立ち上がり、誰もいない部屋で、新たな演説の練習を始めた。聴衆は壁のシミである。</p>
-<p>「いかなる民族（コミュニティ）も、独自の価値観（推し文化）なくしては生きられなかった！ しかしだ！ 自らの存続を願うなら、隣のギルドの常識を鵜呑みにしてはならないのだ！」</p>
-<p>「あるギルドで『善』とされた多くのこと（例えば、挨拶は必ず『うおおおお！』と叫ぶとか）が、別のギルドでは嘲笑と恥辱の対象（『何あの人、うるさ……』）にされたりする！ 俺はその現実を何度も見てきた！」</p>
-<p>「こっちのサーバーでは『悪』と呼ばれる行為（PK行為とか）が、あっちの無法サーバーでは『紫の栄誉』（伝説のプレイヤーの称号）で飾られていたりもした！ 隣の芝生は青いどころか、時に真っ黒だったりするのだ！」</p>
-<p>「隣人（他のギルドメンバー）が互いを理解することなど決してなかった！ 相手の常識（トンデモルール）と悪意（煽りチャット）に、魂は常に驚きを隠せなかったのだ！」</p>
-<p>&lt;壁のシミA&gt; 「（なんかこの人、急に語り出したわ…）」</p>
-<p>「見よ！ あらゆる民族（ギルド）の上にはな、その価値観を記した『掟の石板』が掲げられているのだ！ そう、それこそがそのギルドの自己超克（『俺たち、昨日より強くなったな！』）の記録であり、その権力への意志（『俺たちがこのサーバーの覇権を握る！』）の叫びなのだ！」</p>
-<p>「そのギルドにとって『重んじられるもの』が、称賛に値する！ 『不可欠で重いもの』、例えば超絶面倒なレイドクエストをクリアすること、それが『善』と呼ばれる！ そして、『最高の窮乏』（マジで誰もクリアできなかったクソゲー）から解放してくれる『稀有で最も重いもの』、つまり最初にクリアした奴は、『聖なるもの』として崇められるのだ！」</p>
-<p>「それが支配し、勝利し、輝き、隣のギルドに恐怖と羨望を与えるもの！ それこそが、そのギルドにとっての『高貴』であり、『第一』であり、『基準』であり、『万物の意味』となるのだ！」</p>
-<p>「まことに、我が兄弟（と、壁のシミ）よ！ もし君が、まず一つのギルドの窮乏（過疎ってる状況）と土地（サーバーの特色）と空（運営の気分）と隣人（敵対ギルド）を認識したならば！ 君は、そのギルドの自己超克の法則（謎のローカルルール）と、なぜそれがこの梯子（レベル上げ）を上ってその希望（サーバー制覇）へと至るのかを、よぉく推測できるであろう！」</p>
-<p>&lt;壁のシミB&gt; 「（この人、ギルドとかサーバーとか、何の話してるのかしら…）」</p>
-<p>「『常に君は第一であるべきであり、他者に優るべきである。君の嫉妬深い魂は、友を除いては誰も愛してはならない』――これはあるギリシャの脳筋ギルドの魂を震わせた言葉だ！ そうやって奴らは偉大さ（サーバーランキング1位）の道を歩んだのだ！」</p>
-<p>「『真実を語り（嘘はつかない）、弓と矢を巧みに扱うこと（FPSがクソ上手いこと）』――俺の名（ツァラトゥストラ）の元ネタになったペルシャの民族にとって、それは同時に愛しくも重い掟だった！ その名は俺にとっても、同時に愛しくも重い！（ドヤ顔）」</p>
-<p>「『父と母を敬い（ギルドマスターとサブマスターには絶対服従）、魂の根底に至るまで彼らの意に従うこと』――この自己超克の板（絶対服従ルール）を、別の民族は自らの上に掲げ、それによって強大になり、永遠（の結束）を得たのだ！」</p>
-<p>「『忠実を実践し、忠実のために、悪しき危険な事柄（どう考えても罠なクエスト）にも名誉と血を捧げること』――このように自らを教え込み、別の民族は自らを克服し、かくして自らを克服することで、偉大な希望（レアアイテム）に満ちて豊かになったのだ！」</p>
-<p>&lt;壁のシミC&gt; 「（話が壮大すぎて、ただのネトゲ廃人の思い出話に聞こえないのがすごいわ…）」</p>
-<p>「まことに！ 人間は自らの善と悪のすべてを、自らに与えたのだ！ そうだ、それを受け取ったのでも、見つけたのでもない！ 天からの声（運営からのお告げ）として降ってきたのでもない！」</p>
-<p>「人間はまず、自らを維持するために物事に価値を置いたのだ！ 彼はまず物事に意味、すなわち『人間の意味』を創造した！ それゆえ彼は自らを『人間』と呼ぶ！ すなわち、『評価する者（レビュアー）』である！」</p>
-<p>「評価することは創造することだ！ クリエイター諸君、よく聞け！ 『いいね！』を押すこと自体が、あらゆる評価されたものの宝であり、貴重なものなのだ！」</p>
-<p>「評価することによって初めて価値が与えられる！ 評価（いいね！）なくしては、存在の核（バズる可能性）は空虚であろう！ クリエイター諸君、よく聞け！」</p>
-<p>&lt;壁のシミA&gt; 「（急に意識高い系セミナーみたいになったわね…）」</p>
-<p>「価値の変革――それは創造者（インフルエンサー）の変革である！ 創造者であるべき者は、常に破壊する（炎上を恐れない）！」</p>
-<p>「まず民族（コミュニティ）が創造者であり、遅れて初めて個人（インフルエンサー）が創造者となった！ まことに、個人自体はまだ最も新しい創造物（最近出てきた概念）なのだ！」</p>
-<p>「かつて民族（ギルド）は自らの上に善の板（ギルドルール）を掲げた！ 支配を望む愛（『俺がこのギルドを最強にしてやる！』という愛）と、服従を望む愛（『マスターのためなら何でもします！』という愛）が、共にそのような板を創造したのだ！」</p>
-<p>「群れにおける歓び（みんなでワイワイやる楽しさ）は、自我における歓び（『俺TUEEE！』する楽しさ）よりも古い！ そして、『良心』が『空気を読むこと』と呼ばれる限り、『悪しき良心』だけが『自我（俺は嫌だね）』と言うのだ！」</p>
-<p>&lt;壁のシミB&gt; 「（わかるわ…『みんなでやろう！』って言われると断りにくいものね…）」</p>
-<p>「まことに、狡猾な自我、愛のない自我、多くの者の利益（ギルド全体の利益）の中に自らの利益（ドロップアイテム独り占め）を求める自我――それは群れの起源ではなく、その没落（ギルド崩壊）の原因である！」</p>
-<p>「常に愛する者たち（推しに全てを捧げる者）と創造者たち（神絵師や神動画師）こそが、『善』と『悪』を創造してきたのだ！ 愛の炎はあらゆる徳（尊い！）の名において燃え、怒りの炎（解釈違いだ！）もまた燃える！」</p>
-<p>「俺は多くの国々、多くの民族（サーバーとギルド）を見てきた！ だが、愛する者たちの業績（推し活）以上の偉大な力を、地上に見出すことはなかった！ 『善』と『悪』がその名なのだ！」</p>
-<p>「まことに、この称賛（いいね！）と非難（クソリプ）の力は怪物である！ 兄弟（とシミ）よ、誰がこれを俺に克服させるのか、言ってみろ！ 誰がこの獣の千の首（無数のローカルルール）に枷をかけるのか、言ってみろ！？」</p>
-<p>&lt;壁のシミC&gt; 「（急に物騒になったわね！？）」</p>
-<p>「これまで千の目標（最強の定義）があった！ なぜなら千の民族（ギルド）があったからだ！ ただ、その千の首にかけるべき枷だけが、まだ欠けている！ たった一つの目標が欠けているのだ！ そう、人類はまだ、全プレイヤーが共有できる究極の目標（メインクエスト）を持っていない！」</p>
-<p>「しかし、兄弟（とシミたち）よ、よく聞け！ もし人類にまだ究極の目標が欠けているならば……」</p>
-<p>ツァラトゥストラはそこで言葉を切り、窓の外の空を見上げ、ニヤリと笑った。</p>
-<p>「――それってつまり、『人類』っていう種族自体が、まだ未完成のβ版ってことなんじゃないのかねぇ！？」</p>
-<p>――ツァラトゥストラはこう言った。そして、誰もいない部屋で一人、満足げに頷くのであった。壁のシミたちは、ただ静かに彼の狂気を見守っていた。</p>
+                        <h2 id="伝説のコテハン世界中のローカルルールに物申す"><a class="header" href="#伝説のコテハン世界中のローカルルールに物申す">伝説のコテハン、世界中のローカルルールに物申す</a></h2>
+<p>市場での大演説（という名の一方的なポエム朗読会）で、見事にスベったツァラトゥストラ。しかし、彼の鋼のメンタルは少しも傷ついていなかった。むしろ、群衆の冷ややかな視線をエネルギーに変え、さらにドヤ顔で語り続ける。もはや一種の才能である。</p>
+<p>「さて皆さん！ 先ほどの『超人』の話、ご理解いただけましたかな！？ ……まあ、無理でしょうな！ 君たち凡人には早すぎたッ！ というわけで、今日はもう少しレベルを下げて、君たちが大好きな『善悪』の話をしてやろうじゃありませんか！」</p>
+<p>&lt;群衆A&gt; 「え、まだ続くの？ 綱渡りは…？」
+&lt;群衆B&gt; 「このおっさん、メンタル強すぎだろ…」</p>
+<p>「わたくしツァラトゥストラ、この10年の引きこもり生活で、実は世界中の国や民族のSNSやまとめサイトをROMっておりました！ そこで、とんでもない真理に気づいてしまったのです！ それは、地上には『善と悪』以上に強い力はない、ということですな！」</p>
+<p>「どんな民族も、独自の『評価』…つまり『ローカルルール』なしには生きていけない！ しかし！ ここが重要なんだが、自分たちのサーバーを維持したいなら、隣のサーバーのルールを真似しちゃダメなんです！ オリジナリティが大事！」</p>
+<p>「ある民族（サーバー）では『善』とされることが、別の民族（サーバー）では『炎上案件』になる！ そういうのを、私はたくさん見てきました！ こっちじゃ『悪』と呼ばれる行為が、あっちじゃ『神プレイ』として紫色の勲章で飾られていたりするんですよ！」</p>
+<p>&lt;群衆C&gt; 「サーバー？ 炎上？ この人、何の話をしてるんだ？」
+&lt;群衆D&gt; 「さっきからちょいちょいネット用語挟んでくるの、やめてほしい」</p>
+<p>「隣のサーバーの住人同士が、互いを理解することなんて絶対にない！ 相手の常識（妄想）と悪意に、いつも『はぁ！？意味わかんねぇ！』って驚いてるんです！ まったく、愚かなことですな！」</p>
+<p>「いいですか！ すべての民族の上にはな、『財の板』…つまり『俺たちの最強攻略法リスト』が掲げられている！ 見よ！ それこそが、その民族が自分を超えようとする意志の現れ！ その民族の『権力への意志』…すなわち『俺TUEEEしたい欲』の叫びなのだ！」</p>
+<p>「その民族にとって『重い』もの、つまり『最重要クエスト』とされているものが、賞賛に値する！ 絶対に必要で、達成が困難なものは『善』と呼ばれ、最高のピンチから救ってくれる超激レアなものは『聖なるもの』として崇め奉られるのです！」</p>
+<p>「それがその民族を支配し、勝利に導き、輝かせ、隣のサーバーの連中に恐怖と羨望を与えるもの！ それこそが、その民族にとっての『至高』であり、『第一』であり、『絶対的な基準』であり、『すべての存在理由』となるのです！ わかりますかな！？」</p>
+<p>&lt;群衆E&gt; 「全然わからん…」
+&lt;群衆A&gt; 「もう帰っていいかな…」</p>
+<p>「まことに、我が兄弟たちよ！ もし君たちが、ある民族の『初期装備』や『土地』、『空模様』、『隣人』といった環境要因をまず理解したなら！ 君たちは、その民族の『自己超克の法則』…つまり『どうしてそういう縛りプレイでドMな喜びを見出しているのか』を、手に取るように推測できるでしょう！」</p>
+<p>「『常にテッペンを取れ！ 他の奴らより優れていろ！ お前の嫉妬深い魂は、フレンド以外誰も愛するな！』――これは、とあるギリシャ人の魂を震わせた言葉です。そうやって彼は『偉大さ』という名のランキング一位への道を歩んだ！」</p>
+<p>「『真実を語り、弓と矢を巧みに扱え』――つまり『嘘松は許さん！ FPSは神エイムであれ！』ということですな！ これは、わたくしの名の由来となった民族にとって、最高にクールで、同時にクソ難しいことでした。この名は私にとっても、クールで重いものです」</p>
+<p>「『父と母を敬い、魂の根から彼らの言うことに従え』――別の民族は、この『自己超克の板』…つまり『親の言うことは絶対！』というクソ厳しい家訓を自らに課し、それによって強大で永遠の存在になったのです！ すごい忍耐力ですな！」</p>
+<p>「『忠誠を誓い、その忠誠のためなら、どんなヤバくて危険なことにも名誉と血を捧げよ！』――こうやって自分を教育し、自らを克服した別の民族もいました。そうやって彼らは、偉大なる希望（レアアイテム）で満たされ、豊かになったのです！」</p>
+<p>&lt;群衆B&gt; 「例えが全部物騒なんだよな…」
+&lt;群衆C&gt; 「ていうか、この人、何と戦ってるの？」</p>
+<p>「まことに！ 人間はな、自分たちの『善』と『悪』のすべてを、自らに与えたのだ！ そう！ 天から降ってきたんじゃない！ 誰かにもらったんでもない！ 自分たちで見つけ、創造したのだ！ 人間はまず、自分たちという種を維持するために、物事に価値を付けた！ 意味を創造した！ 人間的な意味をな！ だからこそ、自らを『人間』と呼ぶ！ すなわち！ 『評価（値付け）する者』であると！」</p>
+<p>「評価することこそが創造することだ！ 聞け、創造者たちよ！ 評価すること自体が、あらゆる価値あるものの『宝』であり、『至宝』なのだ！ 価値は、評価によってはじめて生まれる！ 評価がなければ、存在の核なんて空っぽだ！ 聞いているか！ 創造者たちよ！」</p>
+<p>「価値の変革――それは、創造者の変革だ！ 創造者たらんとする者は、常に破壊しなければならない！」</p>
+<p>「最初は、民族という『群れ』が創造者だった。個人なんて、後から出てきた新参者だ！ まことに、個人そのものが、いまだ最も新しい創造物なのだよ！」</p>
+<p>「かつて民族は、自らの上に『善の板』を掲げた。支配したいという愛と、服従したいという愛が、共にそのような板を創造したのだ！」</p>
+<p>&lt;群衆D&gt; 「愛…？急にポエミーになったぞ」
+&lt;群衆E&gt; 「このおっさん、さては恋愛経験ないな」</p>
+<p>「『群れ』でいることの喜びは、『自我（ソロプレイ）』の喜びよりも古い。そして、『良心』が『群れ』と呼ばれる限り、『悪しき良心』だけが『我はソロで行く！』と叫ぶのだ！」</p>
+<p>「まことに、その狡猾な自我、愛のない自我、みんなの利益の中に自分の利益を求めるソロプレイヤー――それは群れの起源ではなく、その没落の原因なのだ！」</p>
+<p>「常に愛する者たちと創造者たちこそが、『善』と『悪』を創造してきた！ 愛の炎は、あらゆる徳の名において燃え、怒りの炎もまた燃える！」</p>
+<p>「わたくしツァラトゥストラ、多くの国々、多くの民族を見てきたが…地上において、愛する者たちの業績…すなわち『善』と『悪』という名の発明品以上の、偉大な力を見出すことはなかった！」</p>
+<p>「まことに、この『賞賛』と『非難』の力は、怪物だ！ 兄弟たちよ！ 誰がこの怪物を俺のために倒してくれるのか、言ってみろ！ 誰がこの獣の千の首に枷をかけてくれるのか、言ってみろ！」</p>
+<p>&lt;群衆A&gt; 「自分でやれよ…」
+&lt;群衆B&gt; 「急に他力本願になったな」</p>
+<p>「これまで、千の目標があった！ なぜなら、千の民族（サーバー）があったからだ！ だが、その千の首を束ねるための枷だけが、まだ欠けている！ たった一つの目標が、欠けているのだ！ 人類には、まだ全サーバー共通の最終目標（エンドコンテンツ）がない！」</p>
+<p>ツァラトゥストラはそこで一度言葉を切り、天を仰いで、悲劇のヒーローのような顔で、最後の問いを投げかけた。その顔は、悦に入っているようにしか見えない。</p>
+<p>「しかし、兄弟たちよ！ よく聞け！ もし人類にまだ『目標』が欠けているというのなら…」</p>
+<p>「……それって、そもそも『人類』という存在自体が、まだ未完成で欠けているってことなんじゃないのかねぇ！？――」</p>
+<p>ツァラトゥストラは、そう言い放った。
+市場は、完全に静まり返っていた。綱渡り芸人も、あまりの気まずさに綱の上で固まっている。
+地球の運命は、とりあえずまだ大丈夫そうであった。</p>
 
                     </main>
 
