--- a/reborn_020_Vom_Wege_des_Schaffenden.html
+++ b/reborn_020_Vom_Wege_des_Schaffenden.html
@@ -175,52 +175,50 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h3 id="説教注意ぼっち志望者に送るぼっちのプロからのありがたいお言葉"><a class="header" href="#説教注意ぼっち志望者に送るぼっちのプロからのありがたいお言葉"><strong>【説教注意】ぼっち志望者に送る、ぼっちのプロからのありがた～いお言葉</strong></a></h3>
-<p>ツァラトゥストラは、市場の喧騒から少し離れた場所で、一人の若者が群衆から離れていこうとするのを見つけた。その目は、孤独への憧れと、社会への反抗心でギラギラしている。まるで、初めてギルドを抜け、ソロプレイヤーになろうと決意したばかりのMMORPG初心者のようだ。</p>
-<p>（フッ……また一人、私と同じ『高み』を目指そうとする魂を見つけてしまったようですね……）</p>
-<p>ツァラトゥストラは心の中でニヤリと笑うと、その若者（と、これを読んでいる全ての孤独志望の者たち）に向かって、ありがたい説教を始めることにした。もちろん、求められてもいないのに。</p>
-<p>「おっと、そこの君！ 我が兄弟（ブラザー）よ！ まさか『群れるのはダセェ！ 俺は孤高を往くぜ！』とか思って、ソロ活動（ぼっち）に転向しようとしていませんか？ まあまあ、そう焦らずに。まずは私、ツァラトゥストラの有り難い話を聞いていきなさい！」</p>
-<p><strong>4. 創造者（クリエイター）への道は、修羅の道</strong></p>
-<p>「『ぼっちは罪！』『空気を読め！』――そうやって同調圧力（ピアプレッシャー）をかけてくるのが、君が今まで所属していた『群れ』っていうコミュニティ（ギルド）です。そして君は長いこと、そのギルドの忠実なメンバーだった」</p>
-<p>「そのギルドのルールは、まるで呪いのように君の心にこびりついています。だから君が、『もうお前らみたいな凡人と一緒の良心（ルール）でなんてやってられるか！ 俺は俺のやり方でやる！』ってギルド脱退届を叩きつける時、心はめちゃくちゃ痛むはずです。そう、嘆きと苦痛に満ちるでしょうねぇ」</p>
-<p>「見なさい！ その苦痛そのものが、まさに『みんなと一緒じゃなきゃダメ』っていう、群れの良心（洗脳）が生み出した最後の輝きなのです！ その残り火が、君の良心を今なおチクチクと焼いているのですよ！」</p>
-<p>&lt;読者の心の声&gt; （うわ、なんかポエミーなこと言い出した…）</p>
-<p>「しかし君は、その苦悩の道こそが『自分自身への道』、すなわち『俺TUEEEへの道』だと信じて進もうとしている！ よろしい！ ならば見せてもらいましょうか！ 君にその道を行くための権利と力（ステータス）があるという証拠をね！」</p>
-<p>「君は新たな力（ニューパワー）、新たな権利（ニューライツ）だとでも言うのですか？ 世界を動かす最初の歯車だと？ 自ら転がり続ける車輪だと？ まさか、天の星々でさえも君を中心に回るように強制できるとでも！？ んんん！？」</p>
-<p>突然、早口でまくしたてるツァラトゥストラ。どうやらスイッチが入ってしまったらしい。</p>
-<p>「ああ、いますよねぇ、そういう意識高い系！ 口を開けば『高みへ！』とか言うけれど、ただの承認欲求モンスターじゃないですか！ 君がそういうのと違うっていうなら、私に証明して見せなさい！」</p>
-<p>「君は自分を『自由』だとおっしゃる？ 私が聞きたいのは、君を支配する『ぼくのかんがえたさいきょうの思想』の方であって、君がどんなクソみたいな軛（ルール）から逃げ出したかなんて、どうでもいいんですよ」</p>
-<p>「そもそも、本当に君は軛から『解放』されたのですか？ 世の中には、家畜小屋の柵から逃げ出したはいいものの、その瞬間に自分の価値（エサがもらえること）まで捨ててしまった愚か者が大勢いるんですよ」</p>
-<p>「『何から』自由になったか？ そんなこと、この私、ツァラトゥストラにとってはどうでもいい！ しかし、君のその目は、私にはっきりと告げなければならない！ <strong>『何のために』自由であるか</strong>、と！」</p>
-<p>&lt;読者の心の声&gt; （出た！決め台詞！）</p>
-<p>「君は、自分自身で『善』と『悪』の基準を打ち立て、その君の意志（オリジナル・ルール）を、君自身の上に法として掲げることができるか？ そして、その法の裁き手となり、復讐者となることができるか？ 孤独ってのは、そういうことなんですよ」</p>
-<p>「自分の法の裁判官であり、死刑執行人であること。完全に一人でそれをやるのは、マジで恐ろしいことです。それはまるで、星が広がる極寒の宇宙空間に、たった一人で放り出されるようなもの。孤独の氷のような息吹が、君の肺を凍らせるでしょう」</p>
-<p>「今の君は、まだ『群れ』の連中からの誹謗中傷で苦しんでいる段階でしょう。可愛いものですよ。しかし、いずれ孤独そのものが君を疲弊させ、君のプライドをへし折り、勇気をすり潰す時が来る。そして君は夜中に叫ぶでしょう。『わ、私は……ひとりぼっちだあああ！』とね！」</p>
-<p>「いつか君は、自分の掲げた高い理想を見失い、自分の矮小さばかりが目に付くようになる。君の崇高な目標さえもが、夜な夜な現れる幽霊のように君を脅かすでしょう。そして、ついに君は叫ぶのです。『すべては……嘘っぱちだったんじゃないか！』と！」</p>
-<p>情熱的に語っていたかと思えば、急に意地悪な笑みを浮かべるツァラトゥストラ。実に性格が悪い。</p>
-<p>「孤独な者の心にはね、自分を殺そうとする感情（ネガティブ・エモーション）が湧いてくるんですよ。そいつらが成功しなければ、そいつら自身が死ぬしかない。さあ、君は殺し屋になれますか？ 君の中に巣食う敵を、冷徹に殺せる殺し屋にね！」</p>
-<p>「なあ兄弟。君はもう『軽蔑』という言葉の本当の意味を知りましたか？ 君をコケにする連中に対してさえ、『いや、彼らにも彼らの正義がある…』なんてフェアでいようとする、その正義感の苦しみを味わいましたか？」</p>
-<p>「君がレベルアップすれば、周りの雑魚どもは君を理解できなくなります。君は彼らに、君という存在を『学び直す』ことを強制する。でもね、凡人は変化を嫌うんですよ。君が自分たちを置いて先に行ってしまったことを、彼らは決して許さないでしょう」</p>
-<p>「君は彼らを越えていく。しかし！ 君が高く昇れば昇るほど、下界からの嫉ゆえの目は、君をちっぽけな点としか認識しない。覚えておきなさい。いつの時代も、最も憎まれるのは、重力を振り切って飛翔する者なのです！」</p>
-<p>&lt;読者の心の声&gt; （なんか、このおっさんの実体験っぽくて生々しいな…）</p>
-<p>「奴らは君にこう言うでしょう。『お前のやり方は間違っている！』と。ならば君はこう言い返さねばなりません。『お前たちの理不尽な非難こそ、俺が背負うべき十字架（ごほうび）だ！』とね！」</p>
-<p>「奴らは孤独な君に、不正義と汚物（クソリプ）を投げつけてくるでしょう。しかし兄弟よ、もし君が夜空に輝く一番星になりたいのなら、そんなものに負けず、奴らの目が潰れるほどもっと強く輝いてやるしかないのです！」</p>
-<p>「そして、特に『善良な市民』と『正義の味方』を自称する連中には用心しなさい！ 彼らは、自分たちで新しい価値を創造する者（クリエイター）を、喜んで十字架に磔にするのが大好きですからね。要するに、彼らは孤独な者が大嫌いなのです」</p>
-<p>「あと、『純粋無垢』という名の凶器にも気をつけなさい！ それを振りかざす者にとって、理解できないものは全て『不浄』。彼女は喜んで火遊びをしますよ。魔女狩りのための、ね」</p>
-<p>「ああ、それから君の『愛』の発作にもご用心！ 孤独な者は人恋しさのあまり、出会った相手にあまりにも早く手を差し伸べてしまうものです」</p>
-<p>「ある種の人間には、握手ではなく、爪を立ててやるべきです。ええ、なんならその爪に鉤爪（クロー）が生えていることを望みますね、私は」</p>
-<p>「しかし、覚えておきなさい。君が出会う最悪の敵（ラスボス）は、常に君自身です。君は洞窟や森の暗闇で、君自身に待ち伏せされているのですよ」</p>
-<p>「孤独なる者よ、君は君自身へと続く道を行く！ そしてその道は、君自身と、君の内にいる七つの悪魔（セブン・デッドリー・シンズ）を通り過ぎていくのです！」</p>
-<p>「君は自ら、異端者となり、魔女となり、預言者となり、道化となり、懐疑家となり、不浄なる者となり、そして――悪人となるでしょう」</p>
-<p>「君は、自らを燃やす炎の中で灰になることを望まねばなりません。一度死ななければ、どうやって新しく生まれ変われるというのですか！ 転生（リボーン）するためには、まず灰になるしかないのですよ！」</p>
-<p>&lt;読者の心の声&gt; （厨二病がフルスロットルだ…！）</p>
-<p>「孤独なる者よ、君は創造者（クリエイター）の道を歩む！ 君の七つの悪魔から、君は自らの神を創造しようと欲するのです！」</p>
-<p>「孤独なる者よ、君は愛する者の道を歩む！ 君は自らを愛し、それゆえに自らを軽蔑する。そう、愛する者だけが、心の底から軽蔑できるように！」</p>
-<p>「愛する者は創造しようと欲する。なぜなら、現状を軽蔑しているからだ！ 自分が愛したものを『こんなもんじゃないはずだ！もっと素晴らしくなれるはずだ！』と軽蔑できなかった者に、愛の何がわかるというのですか！」</p>
-<p>「さあ、行きなさい、我が兄弟よ。君の愛と、君の創造への意志と共に、君の孤絶へと。世間の評価（ジャスティス）なんぞ、後から勝手についてきます」</p>
-<p>「我が涙と共に、君の孤絶へと赴きたまえ。私は、自らを超えて創造しようと欲し、その結果として世間から『没落』していく者を、心から愛しているのですから――」</p>
-<p>――ツァラトゥストラは、ビシッとポーズを決め、ドヤ顔でそう語るのであった。</p>
-<p>若者は、あまりの熱量と情報量に完全に置いていかれ、ポカンとしていた。</p>
+                        <h2 id="ぼっちクリエイターへの道その茨いばらの歩き方"><a class="header" href="#ぼっちクリエイターへの道その茨いばらの歩き方">ぼっちクリエイターへの道、その茨（いばら）の歩き方</a></h2>
+<p>さて、市場での演説（という名の一方的なポエム朗読会）を終えたツァラトゥストラ。人々が綱渡り芸人に夢中になっている隙に、彼はそっと人混みを離れた。すると、彼の話に何かを感じたのか、一人の若者が後を追ってきた。その若者の、あるいはツァラトゥストラの心に巣食うもう一人の自分に向かって、彼はニヤリと笑い、語りかけるのであった。</p>
+<p>「どうしたんです、兄弟（ブラザー）。君も、孤独（ぼっち）の道へ行きたいと？ 自分だけのオリジナルな道を探したいって顔に書いてありますよ。……まあまあ、そんなに焦らず。まずはこの俺様の有り難いお話を聞いていってください」</p>
+<p>「『ソロ活動は罪』、『輪を乱すやつは悪』……群れ（陽キャサークル）はそうやって騒ぎ立てますよね。わかりますよ、君は長いこと、その群れの一員だったんですから」</p>
+<p>「そのやかましい声は、君が独りになった後も、頭の中で無限リフレインするでしょう。そして君が『すまん、もう俺、お前らと同じノリじゃやっていけないんだわ』と告げた瞬間、それは猛烈な嘆きと苦痛（罪悪感）となって君を襲うはずです！」</p>
+<p>「見なさい！ その苦痛こそが、まさに群れの良心（同調圧力）が生み出したもの！ その良心の最後の残り火が、君の悩みの上でメラメラと燃え盛っているんですよ！」</p>
+<p>「しかし君は、その苦悩の道、つまり自分自身へと至る道を歩みたい、と。ならば見せてもらおうじゃないですか！ その道を行くための、君だけの権利とやらを！ その力とやらをね！」</p>
+<p>&lt;バーチャル聴衆A&gt; 「うわ、急に圧が強い…」</p>
+<p>「君は新しい力ですか？ 新しい権利そのものですか？ 誰にも頼らず動き出す、最初のムーブメントですか？ 自ら転がり続ける車輪（セルフスターター）ですか？ 周りの星々を強制的に公転させるほどの引力（カリスマ）が君にはあるんですか！？」</p>
+<p>「ああ、いますよねぇ、そういう人！ 『成り上がりてぇ～！』っていう欲望（バイブス）だけで空回りしてる意識高い系！ 野心家の痙攣（けいれん）みたいなもんです！ 君がそういう承認欲求モンスターじゃないってことを、この俺に証明して見せなさい！」</p>
+<p>「ああ、世の中には偉そうな思想が溢れてますが、そんなのフイゴ（空気入れ）みたいなもんです。ただ膨らませて、中身はスッカラカンにするだけ。意味ないんですよ」</p>
+<p>「君は自分のことを『自由だ』とか言っちゃいます？ 俺が聞きたいのは、君を支配しているその思想（イデオロギー）であって、君がどんな束縛（くびき）から逃げ出したかなんて、どうでもいい話なんですよ」</p>
+<p>「そもそも君は、その束縛から『逃れることを許された者』なんですかねぇ？ 多くの者は、奴隷の鎖を自ら断ち切ったその瞬間に、自分自身の最後の価値さえも投げ捨ててしまっているんですよ。ウケますよね」</p>
+<p>&lt;バーチャル聴衆B&gt; 「性格わるっ！」</p>
+<p>「『何から』自由になったか？ そんなこと、このツァラトゥストラ様にとってはどうでもいい！ 君のその目が俺にハッキリと告げるべきは、たった一つ！ 『何のために』自由になるのか、ということです！」</p>
+<p>「君は、自分だけの善悪の基準を打ち立てて、その意志を自分自身の法律として掲げることができますか？ そして、その法律に基づいて自分を裁き、自分に復讐する、孤高の裁判官になれますか？」</p>
+<p>「自分の裁判官であり、復讐者であること。……独りでそれをやるのは、恐ろしいことですよ。星が何もない宇宙空間にポーンと投げ出されて、孤独の氷のような空気に晒されるようなもんですからね」</p>
+<p>「今でさえ、君は多くの人々のせいで苦しんでいる。この孤独な者よ。今でさえ、君の勇気と希望は満タンかもしれない」</p>
+<p>「しかし、いずれ孤独は君を疲れさせ、その高いプライドはへし折られ、勇気は悲鳴を上げるでしょう。そしていつか君は叫ぶことになる！ 『俺は……俺は独りだぁぁぁ！』とね！」</p>
+<p>&lt;バーチャル聴衆C&gt; 「完全に自分の引きこもり時代の話してないか、このおっさん」</p>
+<p>「いつか君は、自分が目指した高みを見失い、逆に自分の矮小さばかりが目に付くようになる。君の崇高な理想さえもが、幽霊みたいに君を脅かすでしょう。そしていつか君は泣き叫ぶ！ 『全部、全部ウソだったんだ！』と！」</p>
+<p>「孤独な者を殺そうとする感情（キラーエモーション）ってのがあるんですよ。もしそいつらを返り討ちにできなければ、まあ、そいつら自身が死ぬしかないんですけどね！ ……で、君は殺人鬼になれるクチですか？」</p>
+<p>「兄弟よ、君はもう『軽蔑』という言葉を知っていますか？ そして、君を軽蔑してくる連中に対してさえも公正であろうとする、その正義の苦痛（いたみ）を味わったことがありますか？」</p>
+<p>「君は多くの人々に、君という存在を学び直すことを強制する。連中はそれを根に持って、君を激しく非難するでしょう。君は彼らに近づいたのに、ただ通り過ぎてしまった。そのことを、彼らは決して許しはしないでしょうねぇ」</p>
+<p>「君は彼らを超えていく。しかし、君が高く昇れば昇るほど、嫉妬に狂った目には、君はちっぽけに見える。……ですがね、最も憎まれるのは、飛翔する者その人なんですよ」</p>
+<p>&lt;バーチャル聴衆D&gt; 「なんか急にいいこと言ってる風だけど、要は『出る杭は打たれる』ってことだろ」</p>
+<p>「『どうやったらお前らは俺に対してフェアでいられるんだ！』――そう君は叫ばねばならない。『俺は、お前らが投げつける不正義こそが、俺に割り当てられた運命（パート）だと受け入れよう！』とね」</p>
+<p>「連中は、孤独な者に向かって、不正義と汚物（誹謗中傷）を投げつけてきます。しかし兄弟よ、もし君が星になりたいと願うなら、そのためにこそ、連中に負けないくらい輝かなければならないのです！」</p>
+<p>「そして、『善良な市民』や『正義の味方』を自称する連中には特に用心しなさい！ 彼らは、自分たちの理解を超えた徳を創造する者（つまり君だ）を、喜んで十字架に磔にするでしょう。彼らは孤独な者（ぼっち）を心底憎んでいるのですから」</p>
+<p>「『聖なる素朴さ』とかいうやつにも気をつけなさい！ その素朴さ（という名の無知）にとって、素朴でないものは全て不浄（アンクリーン）なんです。彼女は火遊びが大好きですからね。――そう、炎上という名の火刑台の火遊びが」</p>
+<p>「それから、君の愛の発作にも用心しなさい！ 孤独な者は人恋しくて、出会った相手にあまりにも早く手を差し伸べてしまうものです」</p>
+<p>&lt;バーチャル聴衆E&gt; 「わかる（切実）」</p>
+<p>「ある種の人々には、手を差し伸べるべきではない。ただ、爪を突き立てるべきなのです。そして願わくば、君の爪には鋭い鉤爪（かぎづめ）が生えていますように」</p>
+<p>「しかし、君が出会う最悪の敵は、いつだって君自身です。君自身が、洞窟や森の暗闇で、息を潜めて君を待ち伏せしているのですから」</p>
+<p>「孤独な者よ、君は君自身への道を歩む！ そしてその道は、君自身を通り過ぎ、君の内にいる七匹の悪魔（コンプレックス、トラウマ、黒歴史など）をも通り過ぎていくのです！」</p>
+<p>「君は自ら、異端者となり、魔女となり、預言者となり、道化となり、懐疑論者となり、不浄なる者となり、そして悪党となるでしょう」</p>
+<p>「君は、自分自身の炎で、自分を焼き尽くしたいと願わねばならない。どうして新しく生まれ変わることができましょうか、もし君がまず、灰になっていなければ！」</p>
+<p>「孤独な者よ、君は創造者（クリエイター）の道を歩む！ 君自身の七匹の悪魔から、君だけの神を創造しようと願うのです！」</p>
+<p>&lt;バーチャル聴衆A&gt; 「厨二病が加速してきたぞ…！」</p>
+<p>「孤独な者よ、君は愛する者の道を歩む！ 君は自分自身を愛し、それゆえに自分自身を軽蔑する。愛する者だけが、軽蔑できるように」</p>
+<p>「愛する者は、創造したいと願う。なぜなら、彼は軽蔑するからだ！ 自分が愛したものを、心の底から軽蔑せざるを得なかった者でなければ、愛について一体何がわかるというんですか！」</p>
+<p>「君の愛と共に、君の孤独へと行きなさい。そして君の創造と共に、我が兄弟よ。そうすれば、正義は後から勝手についてきます」</p>
+<p>「我が涙と共に、君の孤独へと行きなさい、我が兄弟よ。私は愛しているのです。自らを超えて何かを創造しようと願い、その結果として没落していく者をね――」</p>
+<p>ツァラトゥストラはそう言って、ビシッとポーズを決めた。若者は完全に置いてけぼりである。</p>
 
                     </main>
 
