--- a/reborn_023_Von_Kind_und_Ehe.html
+++ b/reborn_023_Von_Kind_und_Ehe.html
@@ -175,45 +175,47 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h3 id="4-炎上覚悟ツァラの結婚ディスり講座"><a class="header" href="#4-炎上覚悟ツァラの結婚ディスり講座"><strong>4. 炎上覚悟！ツァラの結婚ディスり講座</strong></a></h3>
-<p>ツァラトゥストラの「超人」演説は、市場の喧騒にかき消されつつあった。綱渡り芸人が準備を始めたことで、人々の興味は完全にそちらへ移っている。しかし、この程度で心が折れる我らが引きこもり賢者ではない。彼はむしろ、燃料が投下されたとばかりに、さらにヒートアップしていくのであった。</p>
-<p>彼は聴衆の中から、いかにも幸せそうな若いカップルを指さし、ニヤリと笑った。</p>
-<p>「そこの君たち！ そう、君たちだよ！ 見るからに脳内お花畑なカップル！ 結婚したい？ 子ども欲しい？ その前に聞かせてもらおうじゃないか！ 君たちにその資格があるのかねぇ！？」</p>
-<p>突然名指しされたカップルは、ビクッと肩を震わせる。完全にヤバい奴に絡まれた、という顔である。</p>
-<p>「君は人生という名のクソゲーの勝利者（チャンピオン）かね！？ 己の欲望という名のラスボスを討伐したかね！？ 五感という名の課金ガチャを完全に支配し、己の正義（ジャスティス）の主（マスター）となったかね！？ どうなんだい、ええ！？」</p>
-<p>&lt;群衆A&gt; 「うわ、カップルに絡みだした」
-&lt;群衆B&gt; 「あの人、絶対独身だよ」</p>
-<p>「それとも、君の『結婚した〜い』って願いは、ただの獣の本能（発情期）かね？ 一人が寂しいっていう、かまってちゃんのSOSかね？ はたまた、自分自身との関係がギスギスしてるから、誰かに依存したいだけじゃないのかねぇ！？」</p>
-<p>「私が望むのはだね！ 君の勝利と自由の証として、子どもを渇望することだ！ 君という名の英雄譚を語り継ぐ、生きた記念碑（モニュメント）を打ち立てるべきなんだよ！」</p>
-<p>「自分を超える存在を創るんだ！ でもその前に！ まず君自身が、心身ともに『直角』に、つまり完璧にビルドアップされてなきゃならんのだ！」</p>
-<p>&lt;群衆C&gt; 「直角…？」
-&lt;群衆D&gt; 「直角って何？ 分度器いる？」</p>
-<p>「ただ子孫（データ）を残すだけじゃない！ より高み（アッパーバージョン）へと進化するんだ！ そのための聖なる場所こそが『結婚の庭（マリッジ・ガーデン）』なのだ！」</p>
-<p>「よりハイスペックな肉体を！ 自ら進化していく最初のムーブメントを！ 究極的には、新たな創造主（クリエイター）を創造するんだよ、君が！」</p>
-<p>「いいか！ 俺が定義する『結婚』とは何か！？ それは二人の意志（ソウル）が融合し、親を超越する『何か』を創造する、超絶神聖プロジェクトのことだ！ 互いをリスペクトし、そのプロジェクトに共に挑む者たちへのリスペクト！ それこそが真の『結婚』だ！」</p>
-<p>ツァラトゥストラは一度言葉を切り、軽蔑の眼差しで市場を見渡した。</p>
-<p>「だがしかし！ 巷にあふれる、いわゆる『結婚』！ あの余計な連中の馴れ合いを、ああ、一体何と呼べばいいんだ！ あの魂の貧しさよ！ 汚れっぷりよ！ あの惨めな安楽（ぬるま湯）よ！」</p>
-<p>「連中はアレを『結婚』と呼び、『天に祝福された運命の出会い（笑）』とか言っちゃうんだ！ 笑わせるな！ 言わせてもらおう！ 俺は好かん！ そんな安っぽい天国はな！ そんな天上の網に捕らえられた獣どもは、反吐が出る！」</p>
-<p>&lt;群衆E&gt; 「結婚してる人、めっちゃ気まずそう…」
-&lt;群衆A&gt; 「完全に八つ当たりじゃん」</p>
-<p>「そもそも神が結びつけたわけでもないのに、後からノコノコやってきて『祝福する』とか言っちゃう神も、ちゃんちゃらおかしいわ！ そんな結婚を笑うなだと？ 笑わせるな！ そんな親から生まれた子どもこそ、泣く権利があるだろうが！」</p>
-<p>ツァラトゥストラは、遠い目をして過去を語り始めた。どうやら昔、何かあったらしい。</p>
-<p>「俺はかつて、ある男を知っていた。『こいつはイケる！ 地上の意味を理解できる逸材だ！』と期待していた。だが、その嫁を見た瞬間、俺は悟った。『ああ、この世界は狂人の巣窟だ』と。聖人とアホがくっついたのを見た日には、大地が怒りで震えるべきだとさえ思ったね！」</p>
-<p>「ある男は英雄気取りで真実を探しに出かけ、結局、ちっぽけで見栄っ張りな嘘（＝女）を捕まえてきた。そしてそれを『結婚』と呼んだ。またある男は人付き合いに潔癖で、相手を厳選していた。だが一時の気の迷いで、その人間関係を永遠にぶち壊した。そしてそれを『結婚』と呼んだ」</p>
-<p>「極めつけはこうだ！ ある男は天使のような召使い（理想の嫁）を探していた。だが気づけば、自分が一人の女の召使い（尻に敷かれる夫）になっていた！ 今や彼は、その状況に耐えるために、本物の天使になるしかない！ ご愁傷さまだ！」</p>
-<p>&lt;群衆B&gt; 「うわ、めっちゃ具体的…」
-&lt;群衆C&gt; 「最後のやつ、俺のことか…？」</p>
-<p>「今の世の中、結婚相手を探す連中はみんな、値踏みするような狡猾な目をしている。だが、どんなに抜け目ないヤツでも、結局は『福袋』を買うように、中身も確認せずに嫁を買っているのさ！」</p>
-<p>「たくさんの、短くて愚かな過ち――君たちはそれを『愛』と呼ぶ。そして君たちの結婚は、一つの長い愚行（結婚生活）を終わらせるために、たくさんの短い愚行（浮気とか）を繰り返すことになる！ 本末転倒だろうが！」</p>
-<p>「君たちの恋愛ごっこは、せいぜい苦しんでる神様への同情みたいなもんだ！ でも大抵は、二匹の獣が互いの腹を探り合ってるだけだ！」</p>
-<p>ツァラトゥストラのボルテージは最高潮に達した。彼の目はもはや、現実の聴衆ではなく、彼自身の脳内にいる理想の聴衆（イマジナリーフレンド）に向かって輝いていた。</p>
-<p>「いいか！ 君たちの最高の恋愛でさえ、ただのポエムで、苦しいだけの熱病だ！ それは本来、君たちを『超人』への道へと導く松明（たいまつ）であるべきなんだ！」</p>
-<p>「いつか君たちは、自分自身を超えて愛さなければならない！ そのために、まず『愛すること』を学べ！ だからこそ、君たちは愛の苦い杯を飲み干さねばならなかったのだ！」</p>
-<p>「最高の愛にだって苦味はある！ その苦味こそが『超人』への憧れを！ 創造者である君自身の『渇き』を生み出すのだ！」</p>
-<p>彼は再び、最初に指さしたカップルに向き直り、ビシッと指を突きつけた。</p>
-<p>「創造者への渇き！ 超人への憧れの矢！ さあ語れ、兄弟よ！ これこそが君の『結婚』への意志か！？」</p>
-<p>「俺にとって、そんな意志と結婚こそが、真に『聖なるもの』なのだ！」</p>
-<p>――と、ツァラトゥストラは天を仰ぎ、渾身のドヤ顔で語り終えたのであった。市場の空気は、完全に冷え切っていた。綱渡り芸人は、そんな彼を可哀想なものを見る目で見つめていた。</p>
+                        <h2 id="超人ブライダルプランナーツァラトゥストラの爆裂おせっかい説法"><a class="header" href="#超人ブライダルプランナーツァラトゥストラの爆裂おせっかい説法">超人ブライダルプランナー、ツァラトゥストラの爆裂おせっかい説法</a></h2>
+<p>市場での大演説を終え、群衆の失笑という名の喝采を浴びたツァラトゥストラ。しかし彼のメンタルは鋼である。彼はさっそく、次のターゲットを物色し始めた。すると、いかにも幸せそうな若いカップルが目に留まった。</p>
+<p>（フム…あの若者、見るからにリア充。近々結婚でもするつもりかな？ よろしい、私が直々に、有り難い結婚の真理を説いてしんぜよう！）</p>
+<p>ツァラトゥストラはニヤリと笑うと、その若者にぬるりと近づき、声をかけた。完全に不審者である。</p>
+<p>「おっと、そこのお兄さん！ 我が兄弟よ！ ちょっとよろしいですかな？」</p>
+<p>彼は鉛の錘（おもり）でも投げ込むかのような重々しい口調で、若者の魂の深さを測るかのように問いを投げかけた。</p>
+<p>「あなた、お若い。そして、お子様と結婚を望んでいらっしゃるご様子。いやあ、実におめでたい！ ですがね、私はあなたに問わねばならない。あなたは、そもそも『子どもを望むことを許されるレベルの人間』なんですかな？」</p>
+<p>&lt;若者&gt; 「えっ……は、はぁ……？」
+&lt;彼女&gt; 「（なにこの人、こわ…）」</p>
+<p>「あなたは勝利者ですか？ 人生という名のクソゲーを完全クリアした覇者なのですか？ 己の欲望という名のラスボスを完全に克服しましたか？ 感覚の支配者であり、あなたの徳というスキルツリーの頂点に君臨するマスターなのですか？ 私はあなたに、そう問うているのです！」</p>
+<p>「それとも、あなたのその『結婚したいな～』『子ども欲しいな～』という願いの出所は、ただの獣の本能（発情期）ですかな？ それとも、孤独を埋めたいだけの穴埋め作業？ あるいは、自分に自信がないことの裏返しだったりしませんかねぇ？」</p>
+<p>&lt;若者&gt; 「い、いや、そんなことは…」
+&lt;ツァラトゥストラ&gt; 「（図星か…）」</p>
+<p>「私が望むのはですねぇ！ あなたの『勝利』と『自由』が！ 『うおおお、俺たちの遺伝子、もっと高みへ行かせてぇぇ！』と魂の底から渇望することなんですよ！ あなたは、あなたの勝利と解放を祝うための、生きた記念碑を打ち立てるべきなんです！」</p>
+<p>「あなたは、あなた自身を超えて、何かを創造しなければならない！ しかし！ その前にまず、あなた自身がちゃんと『完成』されてなきゃ話にならんのです！ 身体も魂も、ピシッと直角に！ ガンプラで言うところのゲート処理もヤスリがけも完璧な状態で、ですよ！」</p>
+<p>&lt;ネット民A&gt; 「急にオタク構文きたwww」
+&lt;ネット民B&gt; 「ガンプラは草」</p>
+<p>「あなたはただ子孫を残すだけじゃなく、高みへと進むべきなんです！ そのために！ 『結婚の庭』という名の育成ゲームが、あなたを助けてくれるでしょう！」</p>
+<p>「あなたは、より高き身体を創造すべきだ！ 最初の運動、自ら転がり出る車輪――そう、『創造者』を、あなたが創造するのです！」</p>
+<p>「私が定義する『真の結婚』とはッ！ 二人の意志が融合して、創造主である二人自身よりも偉大な『何か』を爆誕させること！ そう、それはまるで伝説のロボが合体して最強形態になるようなもの！ お互いをリスペクトし、その偉大なる合体を望むことこそが、私が『結婚』と呼ぶものなのです！」</p>
+<p>&lt;彼女&gt; 「（なんか…言ってることは凄そうだけど…）」</p>
+<p>「これが！ あなたの結婚の意味であり、真実であるべきなのです！ ……それに比べて、巷にあふれる『結婚』とやらを名乗る、あまりにも多くの者たち、この『余計な者たち』は一体何なんです？ ああ、私はそれを何と呼べばいいのか！」</p>
+<p>「ああ、二人の魂のこの貧困！ ああ、二人の魂のこの汚れ！ ああ、二人のこの哀れな安楽！ 要するに、魂の『低評価』レビュー祭りですよ！」</p>
+<p>「しかも連中、『この結婚は天で結ばれた運命なんだ☆』とか言っちゃってるんですよ？ 笑わせる！ 私、そういう『余計な者たち』専用のサーバー（天国）は好みませんねぇ！ それに、当人たちが結びつけなかったグダグダな関係を、後からノコノコやってきて『はい、祝福～』とか言っちゃう神様も、私的にはNGです！ 解釈違いも甚だしい！」</p>
+<p>&lt;ネット民C&gt; 「神にまでダメ出しし始めたぞこのおっさん」</p>
+<p>「そんな結婚を私に笑うな！ そんな親から生まれた子どもが、自分の親について文句を言う権利もないなんて、そんな悲しい話がありますか！？」</p>
+<p>ツァラトゥストラは市場を見渡し、まるで実例を挙げるかのように、他の人々を指差しながら熱弁を続ける。完全にヤバい人である。</p>
+<p>「あそこの男！ ちょっと前まで『俺は真理を探究する英雄になるぜ！』とか息巻いてたのに、今じゃカワイイだけの、中身のない嘘（カノジョ）を捕まえて『これが俺の結婚だ』とか言ってる！ あっちの男！ 付き合う相手には超うるさかったくせに、一瞬の気の迷いで自分の格を永久に下げる相手とくっついて『これが俺の結婚だ』とか！ そっちの男！ 天使みたいな理想の女性を探してたはずが、いつの間にかただの尻に敷かれる召使いになって、しかも『これで俺も天使に近づける…』とか意味不明な自己正当化をしてる！」</p>
+<p>「買い手はみんな、狡猾な目をしてますよ。でもね、どんなに狡猾な男でも、結局は『福袋』みたいに中身も確認せずに妻を買っているじゃないですか！」</p>
+<p>&lt;ネット民D&gt; 「言い方www」
+&lt;ネット民E&gt; 「炎上待ったなし」</p>
+<p>「たくさんの『短い愚行』――それが、あなたがたが『愛』と呼んでいるものの正体です。そして、あなたがたの結婚は、そのたくさんの『短い愚行』を終わらせるための、たった一つの『長い愚かさ』に過ぎない！」</p>
+<p>「あなたがたの女への愛と、女の男への愛。ああ、それが苦しみに満ちた、覆われた神々への憐憫であったなら、まだ救いはあったでしょう！ しかし、ほとんどの場合、二匹の獣がお互いの本能を探り合っているだけじゃないですか！」</p>
+<p>「しかし！ あなたがたの『最良の愛』でさえも！ 本来は、恍惚とした比喩であり、痛みを伴う灼熱のパッションであるべきなんです！ それは、あなたを『超人』へと導く松明（トーチ）となるべきものなのです！」</p>
+<p>「いつか、あなたがたは自分自身を超えて愛さなければならない！ だからまず！ 『愛すること』そのものを学びなさい！ そのためにこそ、あなたがたは愛の苦い杯を飲み干さねばならなかったのです！」</p>
+<p>「最高の愛の杯にだって、苦味は存在する！ その苦味こそが、『超人』への憧れを生み！ 創造主であるあなたに『渇き』を生じさせるのです！」</p>
+<p>ツァラトゥストラは再び若者に向き直り、最後の問いを叩きつけた。その目はもはや狂気の光を宿している。</p>
+<p>「創造主たらんとする渇き！ 超人への矢であり、憧れ！ 語りなさい、我が兄弟よ！ これが、あなたの結婚への意志なのですか！？」</p>
+<p>若者が完全に固まっているのを満足げに見届けると、ツァラトゥストラは一人、天を仰いでドヤ顔で締めくくった。</p>
+<p>「私にとって、そのような意志と、そのような結婚こそが『聖なるもの』と呼ばれるのです！──」</p>
+<p>――と、ツァラトゥストラは一気にまくし立てたのであった。若者カップルは、そっとその場を離れた。言うまでもない。</p>
 
                     </main>
 
