--- a/reborn_024_Vom_freien_Tode.html
+++ b/reborn_024_Vom_freien_Tode.html
@@ -175,47 +175,58 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h3 id="第四章死に様の美学推しのエンディングは自分でプロデュースしろ"><a class="header" href="#第四章死に様の美学推しのエンディングは自分でプロデュースしろ"><strong>第四章・死に様の美学！〜推しのエンディングは自分でプロデュースしろ〜</strong></a></h3>
-<p>ツァラトゥストラは、哀れな綱渡り芸人の亡骸を抱きかかえ、その顔を覗き込んだ。市場の喧騒は悲鳴とざわめきに変わり、誰もがこの異常な光景を遠巻きに見ている。普通なら涙の一つでも流す場面であるが、ツァラトゥストラの目はギラギラと輝いていた。最高の教材（サンプルケース）を手に入れたオタクの目である。</p>
-<p>彼はゆっくりと立ち上がると、亡骸を片手で軽々と（あくまでイメージです）掲げ、集まった野次馬たちに向かって、最高のドヤ顔で説法を再開した。</p>
-<p>「皆さん！ 今こそ死について語る時です！ いいですか、多くの者は死ぬのが遅すぎるし、ある者は早すぎる！ そこで僕が提唱したい新常識、それは……『死ぬなら、タイミング読め！』ということです！」</p>
-<p>&lt;群衆A&gt; 「は？」
-&lt;群衆B&gt; 「人が死んだ直後に言うことか、それ！？」
-&lt;群衆C&gt; 「サイコパスだ！ 誰か通報しろ！」</p>
-<p>「もちろん！」とツァラトゥストラは続ける。「そもそもマトモに生きてこなかったヤツが、どうしてベストなタイミングで死ねるっていうんですか！？ 無理でしょ！ そういうヤツらは、はっきり言って『余計者』、つまり人生という名のゲームにおけるモブキャラなんですよ！ 最初から生まれてこなければよかったのにねぇ！」</p>
-<p>余計者呼ばわりされた群衆がザワつく。完全に敵意むき出しである。</p>
-<p>「大体、君たちときたら、死ぬことをやたらと重要視しすぎなんです！ 死はもっとこう、フェスみたいに祝うべきなんですよ！ でも君たちは、最高のフェスの盛り上げ方を知らない！」</p>
-<p>&lt;群衆D&gt; 「死のフェス！？」
-&lt;群衆E&gt; 「不謹慎にもほどがあるだろ！」</p>
-<p>「だから僕が教えてあげます！ 『完遂する死』、つまり、人生という名のゲームで、最高のエンディングを迎える方法をね！ それは、ファン（希望する者）や信者（誓約する者）たちに囲まれて、『俺の人生、最高の神ゲーだったわ！』って言いながら勝利のポーズで死ぬこと！ これが至高なんです！」</p>
-<p>「それがベストシナリオですが、次善の策もあります。それは、ネットの炎上バトルで華々しく散るとか、そういうのですかね。偉大な魂を浪費するんです！ でも一番ダサいのは、コソ泥みたいに忍び寄ってくる寿命とか病死！ そんなのラスボスじゃなくて、ただのバグでしょ！ そんな死に方、みんなに笑われますよ！」</p>
-<p>ツァラトゥストラはうっとりとした表情で天を仰ぐ。</p>
-<p>「だから僕は、僕自身の死を君たちに称賛してもらいたい！ 僕が『今だ！』と欲する時に訪れる、完全に自由な死をね！ そしていつ僕が欲するか？ それは、人生のクエスト（目的）をコンプリートして、後継者（相続人）を見つけた時です！ そういうデキる奴は、死ぬタイミングもわきまえてるんですよ！」</p>
-<p>「実績解除したのに、いつまでもサーバーに居座ってる古参プレイヤーみたいになるな、ってことです。過去の栄光にすがりながらダラダラ生きるなんて、僕は御免ですからね！」</p>
-<p>&lt;群衆A&gt; 「なんか、だんだん腹立ってきたな…」
-&lt;群衆B&gt; 「さっきから俺たちの生き様を全否定してないか？」</p>
-<p>「それに、年を取りすぎると真理を語る資格もなくなりますからね。歯の抜けたジジイが何を言っても説得力ないでしょ？」と、自分も大概おじさんであることを棚に上げて言い放つ。</p>
-<p>「人気絶頂で引退するのが一番カッコイイって、昔から相場は決まってるんです！ 一番美味しいところで食べるのをやめる！ これが長く愛される秘訣ですよ！」</p>
-<p>彼はチラリと群衆を見渡し、嘲笑うかのように続けた。</p>
-<p>「まあ、中には熟す前に腐っちゃう酸っぱいリンゴみたいなヤツもいますけどね。夏のうちから腐り始めて、それでも臆病だから枝にしがみついてる。マジで、生きすぎなヤツ多すぎ！ 腐った果実みたいに木にぶら下がってないで、さっさと落ちろよ、と。誰か嵐でも起こして、こいつら全員吹き飛ばしてくれないですかねぇ！」</p>
-<p>&lt;群衆C&gt; 「うわ、過激派だ！」
-&lt;群衆D&gt; 「こいつ、俺たちに死ねって言ってるぞ！」</p>
-<p>「そう！ 『さっさと死ね！』って説教してくれる人が必要なんですよ！ なのに世間で聞こえてくるのは『忍耐が大事〜』とかいうクソみたいな説教ばっかり！ ああ、君たちは地上での忍耐を説くのか？ 言わせてもらえば、むしろ地球の方が、君たちみたいな冒涜者の存在によく耐えてると思いますよ、マジで！」</p>
-<p>ツァラトゥストラは、いよいよ話の核心に触れるかのように、声を潜めた。</p>
-<p>「そもそも、君たちが崇めているあの有名なジーザスとかいう人、彼は死ぬのが早すぎたんですよ。あれが全ての元凶。彼がまだ涙とか、憂鬱とか、善人への憎しみしか知らなかった若造の時に死んじゃったから、話がややこしくなってるんです」</p>
-<p>「信じてください、皆さん！ 彼は若すぎた！ もし僕と同じくらいの年齢（40歳）まで生きてたら、絶対『あの頃の俺、マジ痛かったわ〜』って黒歴史ノートを燃やしてますよ！ 自分の教えを自分で撤回したはずです！ それができるくらい、彼は高貴な人だったはずなんです！」</p>
-<p>もはや擁護しているのか貶しているのか分からない。</p>
-<p>「でも、彼は未熟だった。若者の愛とか憎しみって、重くて息苦しいじゃないですか。彼の心と精神の翼は、まだカチカ-チに固まってたんですよ。本当の『大人』ってのは、心に『子ども』の部分を残してるもんなんです。だから、生と死をもっと達観できる」</p>
-<p>「『もう肯定する時じゃない』と判断したら、聖なる『NO』を叩きつける！ これが生と死を理解した者の姿です！」</p>
-<p>ツァラトゥストラは再び群衆に向き直り、懇願するように両手を広げた。</p>
-<p>「だから皆さん、お願いです！ 君たちの死が、この大地への冒涜、つまりクソみたいな最終回にならないようにしてください！ 死ぬ瞬間まで、君たちの精神と徳が夕焼けみたいにキラキラ輝いてないとダメなんです！ そうじゃなきゃ、君の死は『失敗』、つまりバッドエンド確定ですよ！」</p>
-<p>彼はふっと表情を和らげ、遠い目をして語り始めた。</p>
-<p>「僕自身も、そうやって死にたい。僕が死んだ後、友である君たちが、僕のためにこの大地をもっと愛してくれるように。そして、僕を生んでくれたこの大地に還って、安らかに眠りたいのです」</p>
-<p>急にしんみりとした雰囲気に、群衆も一瞬戸惑う。だが、次の瞬間、ツァラトゥストラはニヤリと笑い、再び熱を帯びた。</p>
-<p>「誠に、僕ツァラトゥストラには『超人』という目的があった！ そしてそのボールを投げた！ 今や君たち友人が、僕の目的の相続人（フォロワー）となって、この黄金のボールを投げる番です！」</p>
-<p>彼は天に掲げていた綱渡り芸人の亡骸をそっと地面に横たえると、今度は見えないボールを投げるようなジェスチャーをした。</p>
-<p>「何よりも僕は、我が友よ、君たちがその金ピカのボールを投げるのを見たいんですよ！ だから、もうちょっとだけ、この地上（クソゲー）に付き合ってやります。感謝したまえ！」</p>
-<p>――かくして、ツァラトゥストラは一人悦に入り、満足げに頷いた。市場の人々が、恐怖と困惑と若干の怒りが入り混じった表情で彼を完全包囲していることには、まだ気づいていないのであった。</p>
+                        <h2 id="人生とかいうクソゲーの神エンディング攻略法"><a class="header" href="#人生とかいうクソゲーの神エンディング攻略法">人生とかいうクソゲーの神エンディング攻略法</a></h2>
+<p>綱渡り芸人の亡骸を担いだまま、ツァラトゥストラは少しも動じず、むしろステージを手に入れたとばかりに再び口を開いた。その目は完全にイッており、もはや誰も彼を止められない。</p>
+<p>「皆さん、悲しむことはありません！ 彼の死は無駄ではなかった！ むしろ、最高の死に方について、我々に新たな議題を提供してくれたのです！ そう、今日は『人生のログアウト美学』について語りましょう！」</p>
+<p>&lt;群衆A&gt; 「え、死体担いだまま死の話するの？ サイコパス？」
+&lt;群衆B&gt; 「もう帰りたい…」</p>
+<p>「多くの者は死ぬのが遅すぎるし、一部のせっかちさんは早すぎる。だから今、この僕が新しい教えを授けてあげましょう！ それは…『最高のタイミングで死ね！』ということです！」</p>
+<p>時宜を得て死ね！ ツァラトゥストラはそう高らかに宣言した。まるで世紀の大発見でもしたかのようなドヤ顔である。</p>
+<p>「もちろん、最高のタイミングで生きることもできなかった人が、どうして最高のタイミングで死ねるというんですか？ 無理でしょ？ そんな人生エンジョイ勢じゃない人は、いっそ生まれなければよかったのに！ ……と、まあ、ここにいる人生余り気味の皆さんには、そう忠告しておきます」</p>
+<p>&lt;群衆C&gt; 「ディスが的確すぎて心が痛い…」</p>
+<p>「しかし、そんな余計者の皆さんも、自分の死は何か意味があるはずだ、とか思っちゃってるんですよねぇ。中身が空っぽの木の実だって、割られれば何か出てくると思ってる。残念！ 何も出ません！」</p>
+<p>「誰もが死を一大イベントだと思ってますが、全然お祭り騒ぎになってないじゃないですか。人々はまだ、最高の祝祭、すなわち『神エンディング』の迎え方を分かっていないのです！」</p>
+<p>「だから僕が教えてあげます！ 『完遂する死』をね！ これは生きている者たちへの誓いであり、心に突き刺さるトゲとなる、究極のエンディングなのです！」</p>
+<p>&lt;群衆D&gt; 「完遂する死って何…？ 新しいソシャゲのイベント名？」</p>
+<p>「『完遂者』は、希望に満ちたファン（信者）と、その意志を継ぐ者たち（後継者）に見守られながら、勝利のうちに己の死を迎えるのです！ これぞ伝説の引退配信！」</p>
+<p>「だから、人はどう死ぬべきかを学ぶべきなんです！ そんな最高の死に様を見せられないようなヤツの葬式なんて、祝祭になるわけがないでしょう！」</p>
+<p>「このように死ぬのがベスト！ 次に良いのは、レイドバトルで華々しく散って、偉大な魂（レアアイテム）をサーバーにばら撒くことです！」</p>
+<p>「しかし、戦う者にとっても、勝利者にとっても、一番ムカつく死に方があります。それは、まるでコソ泥のように忍び寄ってくるくせに、いざとなると『運営です』みたいな顔で現れる、あの陰湿な死に方ですよ！」</p>
+<p>&lt;群衆E&gt; 「突然のアカウントBAN宣告みたいなもんか…」</p>
+<p>「だから僕は、僕自身の死を称賛するのです！ 僕が『もうこのゲーム飽きたわ』って思った時に、僕自身の意志でアンインストールする、その『自由な死』をね！」</p>
+<p>「じゃあ、いつ僕が死を欲するかって？ ……それは、ちゃんと目的（推し）と相続人（次の世代のオタク）がいる人なら分かりますよ。目的と相続人のために、最高のタイミングで死にたいと思うものなんです」</p>
+<p>「そして、その目的と相続人へのリスペクトがあるからこそ、もう枯れきった花輪（老害の武勇伝）を、いつまでも生命の聖域（界隈）に飾っておいたりしないのです！」</p>
+<p>&lt;群-衆A&gt; 「あの古参プレイヤーのことか…」</p>
+<p>「マジな話、僕は綱をよじって長くするだけの職人みたいにはなりたくないんですよ。糸を伸ばせば伸ばすほど、自分は後ろに下がっていくなんて、マヌケじゃないですか」</p>
+<p>「真理とか勝利とかに固執しすぎて、老いぼれてしまう人もいますよね。歯が抜け落ちた口では、もうどんな真理を語っても説得力ゼロだってのに」</p>
+<p>「有名になりたいなら、最高のタイミングで『お疲れ様でした！』って言って、ステージから去るっていう、この超絶難しいスキルをマスターしなきゃダメなんです！」</p>
+<p>「一番美味しいところで食べるのをやめる！ 長く愛されたいVTuberは、みんなこのことを知っているでしょう？」</p>
+<p>&lt;群衆B&gt; 「なるほど、だからあの人は伝説になったのか…」</p>
+<p>「もちろん、中には秋の終わりまでしがみついてる酸っぱいリンゴみたいな人もいますけどね。熟して、黄色くなって、シワシワになるまで枝にぶら下がってる」</p>
+<p>「ある人は心が先に老い、ある人は精神が先に老いる。若くして老害になるヤツもいる。でも、遅くに若さを手に入れた人は、長く若いままなんですよ（僕みたいにね！）」</p>
+<p>「ある人の人生は完全に失敗作です。毒虫（メンヘラ）が心臓に巣食っちゃってる。だとしたら、せめて死に様だけでも成功するように頑張るべきでしょう！」</p>
+<p>&lt;群-衆C&gt; 「もうやめて！ ツァラトゥストラのライフハックは私には効きすぎる！」</p>
+<p>「夏のうちに腐っちゃって、全然甘くならない人もいます。ただ臆病だから、枝にしがみついてるだけ。本当に見苦しい」</p>
+<p>「あまりにも多くの人が生きすぎてる！ あまりにも長く枝にぶら下がりすぎてる！ 誰か、嵐を起こして、こういう腐って虫に食われた連中を、木から全部揺さぶり落としてくれませんかねぇ！」</p>
+<p>「『さっさと死ね！』って説教してくれる炎上系インフルエンサーはまだですか！？ そういう人が、生命の木を揺さぶる真の嵐なんですよ！ なのに僕が聞くのは、『ゆっくり死にましょう』とか『忍耐が大事です』とかいう生ぬるい説教ばかり！」</p>
+<p>「ああ、君たちは地上で耐え忍べと説くんですか？ 言わせてもらえば、この大地こそが、君たちみたいな冒涜者によくもまあ我慢してるもんですよ！」</p>
+<p>&lt;群衆D&gt; 「大地さん、マジお疲れ様です…」</p>
+<p>「まったく、あのヘブライ人（イエス）は、あまりにも早く死にすぎたんですよ。おかげで、多くの人が『若死にこそ至高』みたいな運命を背負わされることになったじゃないですか」</p>
+<p>「彼はまだ、涙とか、ヘブライ人特有の憂鬱とか、善人や正義の味方に対する憎しみしか知らなかった。だから死にたくなっちゃったんですよ。青臭いですねぇ」</p>
+<p>「あのまま砂漠に引きこもって、善人とか正義の味方から離れてればよかったのに！ そしたら、生きることを学んで、大地を愛することを学んで、そして笑うことも学べたでしょうに！」</p>
+<p>「信じてくださいよ、兄弟たち！ 彼はマジで早く死にすぎた！ もし僕と同じ歳まで生きてたら、絶対『あの教え、黒歴史だわー』って言って、自分で撤回してましたって！ 彼にはそれくらいの気高さがありましたからね！（僕ほどじゃないけど）」</p>
+<p>&lt;群衆E&gt; 「どの口が言うか…」</p>
+<p>「でも、彼はまだ未熟だった。若者は未熟な愛し方しかできないし、人間や大地を未熟なまま憎むんです。心と精神の翼が、まだガチガチに縛られて重いんですよ」</p>
+<p>「でも、男の中には、若者よりも多くの子供心があって、憂鬱は少ない。だから、死と生について、もっとよく理解できるんです（僕みたいにね！）」</p>
+<p>「死に対して自由であり、死において自由であること！ もはや肯定する時ではないなら、聖なる『NO』を突きつける！ そうして初めて、死と生を完全に理解できるのです！」</p>
+<p>「だから友よ！ 君たちの死が、人間と大地への冒涜にならないようにしてください！ これは僕の魂の蜂蜜（有り難い知恵）からのお願いです！」</p>
+<p>「君たちが死ぬ時、その精神と徳が、大地を包む夕焼けみたいにキラキラ輝くべきなんです！ そうじゃなきゃ、君たちの死は失敗作、バッドエンドですよ！」</p>
+<p>「だから僕自身も、そうやって死にたい。僕が死んだ後、友人である君たちが、僕のために大地をもっと愛してくれるようにね。そして僕は再び大地となって、僕を生み出してくれたこの大地で安らかに眠りたいのです」</p>
+<p>ツァラトゥストラは天を仰ぎ、担いでいた亡骸をそっと地面に横たえた。そして、恍惚の表情で続ける。</p>
+<p>「誠に、僕、ツァラトゥストラには目的があった！ そして、そのボールは投げた！ 今や君たち、僕の目的の相続人である友人たちよ！ 僕は君たちに、この黄金のボール（僕の最強哲学）を投げ渡します！」</p>
+<p>彼はエアでボールを投げる素振りを見せた。もちろん、誰も受け取ろうとはしない。</p>
+<p>「何よりも僕は見たい！ 我が友よ、君たちがその黄金のボールを投げるのを！ だから僕は、もうしばらくこの地上（という名のクソゲー）に留まることにします。まあ、そういうことなんで、許してください！」</p>
+<p>ツァラトゥストラはかく語りき。そして、満足げに一人頷くのであった。群衆は、ただただ静かに彼から距離を取っていた。</p>
 
                     </main>
 
