--- a/reborn_025_Von_der_schenkenden_Tugend.html
+++ b/reborn_025_Von_der_schenkenden_Tugend.html
@@ -175,70 +175,86 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h3 id="悲報推し活の極意熱弁するも弟子ドン引き"><a class="header" href="#悲報推し活の極意熱弁するも弟子ドン引き"><strong>【悲報】推し活の極意、熱弁するも弟子ドン引き</strong></a></h3>
-<p><strong>1. 伝説の限定グッズ（杖）と、ありがた迷惑な説法</strong></p>
-<p>ツァラトゥストラが、その心惹かれた町、通称「まだら牛」（ネーミングセンスはさておき）からようやく旅立つ決意をしたとき、なぜか多くの人々が彼の後にゾロゾロとついてきた。彼らは勝手に自らを「ツァラさんの弟子」と名乗り、オフ会についていくファンのように彼に同行したのである。迷惑千万である。</p>
-<p>やがて一行が岐路に差し掛かったとき、ツァラトゥストラはついに足を止め、彼らに告げた。
-「あのぅ……そろそろ、僕は一人で行きたいんですけど……。ソロプレイが好きなので」</p>
-<p>内弁慶な彼にしては、よく言ったものである。しかし弟子たちは、そんな彼のコミュ障ぶりなどお構いなしに、別れの印だと言って一本の杖を押し付けた。</p>
-<p>その杖は、黄金の柄に蛇が太陽の周りに巻き付いているという、なんとも厨二病心をくすぐるデザインであった。ツァラトゥストラは、限定コラボグッズを手に入れたオタクのように目を輝かせ、その杖をうっとりと撫で回した。そして、おもむろにその杖に体重を預け、ドヤ顔で弟子たちに最後の説法を垂れ始めたのであった。弟子たちの「え、まだ喋るの？」という顔には気づかないフリである。</p>
-<p>「ねえ、君たちに問いたいんですけど！ いかにして金（ゴールド）は最高の価値、つまりSSRになったと思いますか！？ それはですね、それが異常にレアで、実用性が皆無で、ただキラキラしていて、その輝きにおいて穏やかだからなんですよ！ そしてなにより、それは常に『与えられる』ために存在するからです！ そう、推しへの投げ銭のようにね！」</p>
-<p>&lt;弟子A&gt; 「（投げ銭…？）」
-&lt;弟子B&gt; 「（この人、さっきから何を言ってるんだ…？）」</p>
-<p>「まったく、僕は君たちのこと、よーく見抜いてますよ、僕の可愛い弟子たち！ 君たちも僕と同じ！ 本当はスパチャしたくてたまらない、『与える徳』を求める廃課金兵の素質があるんです！ その疼き、僕にはわかります！」</p>
-<p>弟子たちは、ただただ困惑して顔を見合わせるばかりである。</p>
-<p>「君たちの魂が、飽きることなく宝物や貴重品（レアアイテム）を求めるのはなぜか！？ それは、君たちの徳（推しへの愛）が、与えようとすること（課金）において、決して飽きることがないからなんです！」</p>
-<p>「君たちはあらゆるものを自分の中に溜め込もうとする！ それは、いつか来るべき『与える』その日のために！ 愛の贈り物として、君たちの泉（銀行口座）から、推しへと流れ出すためにッ！」</p>
-<p>「まったくもう、こういう『与える愛』ってやつは、あらゆる既存の価値観に対する強奪者（ハッカー）にならなきゃダメなんですよ！ でもね、僕はあえてこの自己愛を、『健全』で『聖なる』ものと呼びたい！ 『推しのために今日も働く』…これこそが聖なる労働じゃないですか！」</p>
-<p>&lt;弟子C&gt; 「（俺、明日のパンのために働いてるんだけど…）」</p>
-<p>「それに比べて、クレクレ厨の自己愛は本当に病んでます！ あまりにも貧しく、飢えていて、常に他人のものを盗もうとする！ 病人の自己愛、そう、病んだ自己愛です！」</p>
-<p>「盗人のような眼差しで、他人のSSRキャラを眺め、飢えた貪欲さで、神引きしたプレイヤーを妬む！ そして常に、与える者（石油王）の周りをウロチョロする！ そんな欲望からは病んだ魂の匂いしかしない！ はっきり言って、その自己愛は、病んだ肉体（貧弱なアカウント）の証拠なんですよ！」</p>
-<p>「教えてくださいよ、兄弟たち！ 僕らにとって悪しきもの、最悪のものって何だと思いますか！？ それは『退化』じゃないですか！？ そう！ 僕らは常に、『与える魂』…つまり『課金する心』が欠けているところに、退化を見出すんです！」</p>
-<p>「僕らの道は上へ！ 種族（ノーマル）から超種族（スーパーレア）へと向かうんです！ それなのに、『すべては僕のために！』と語る退化した精神！ そんなのは、レベル1に強制送還される最悪のバグみたいなもんで、考えるだけでゾッとしますよ！」</p>
-<p>&lt;弟子D&gt; 「（話が全然わからん…家に帰りたい…）」</p>
-<p>「僕らの精神は上へ上へと飛翔する！ それは僕らの肉体の比喩（メタファー）であり、レベルアップの比喩なんです！ そういうレベルアップの比喩こそが、徳の名前なんですよ！」</p>
-<p>「肉体は、生成と戦闘を繰り返して歴史を歩む！ じゃあ精神は何か！？ その戦いと勝利の予告編であり、相棒であり、こだまなんです！」</p>
-<p>「善とか悪とか、そんな名前は全部ただの比喻（タグ）です！ それらは全てを語るんじゃなく、ヒントを与えるだけ！ それらのタグの意味をググって知った気になってるやつは、ただのエアプ（愚か者）ですよ！」</p>
-<p>「兄弟たち！ 君たちの精神が比喩で語ろうとする、その全ての瞬間に注意してください！ そこにこそ、君たちの徳の起源（オリジン）があるんです！」</p>
-<p>「君たちの心が、満杯のダムのように溢れ出し、下流の住民にとって祝福でもあり、また洪水という危険でもあるとき！ そこにこそ、君たちの徳の起源がある！」</p>
-<p>&lt;弟子E&gt; 「（つまり、どういうことだってばよ…）」</p>
-<p>「君たちが、世間の評価（いいねの数）や批判（クソリプ）を超越し、君たちの意志が、ただ一つの推しへの愛として、あらゆるものに命じようとするとき！ そこにこそ、君たちの徳の起源がある！」</p>
-<p>「君たちが、快適なベッドやぬるま湯の生活を軽蔑し、惰弱な連中とは馴れ合わないと決めたとき！ そこにこそ、君たちの徳の起源がある！」</p>
-<p>「君たちが『この苦難は、推しに貢ぐための必然なのだ！』と、ただ一つの意志を欲し、あらゆる苦難を『必要経費』と呼ぶとき！ そこにこそ、君たちの徳の起源があるんです！」</p>
-<p>「そう！ これが新しい善と悪！ 新しい時代のざわめきであり、新しい泉（ガチャ）の声なんです！」</p>
-<p>「この新しい徳は『力（パワー）』です！ それは支配的な思想（ゲームのメタ）であり、その周りには賢明な魂（トッププレイヤー）がいる！ この杖を見てください！」と、ツァラトゥストラは例の杖を天に掲げた。「黄金の太陽（支配的な思想）！ そしてその周りには認識の蛇（深い洞察）！ 最強の組み合わせだと思いませんか！？」</p>
-<p>弟子たちの誰一人として、そうは思わなかった。</p>
-<p><strong>2. 急にイケボで語り出す、意識高い系メッセージ</strong></p>
-<p>ここでツァラトゥストラはしばらく黙り込み、うっとりと自分の弟子たち（という名の、ただの通行人）を見つめた。そして彼は、急に声色を変えて語り続けた。それはまるで、ボイスチェンジャーを使ったかのような、不自然なイケメンボイスであった。</p>
-<p>「兄弟たちよ、君たちの徳の力（課金力）をもって、この地上（リアル）に忠実であれ！ 君たちの与える愛（推しへの愛）と認識（深い解釈）は、この地上の意味に奉仕するのです！ そう、僕は君たちに懇願し、誓わせる！」</p>
-<p>「その有り余る情熱を、異世界転生とかいう妄想から引き剥がし、永遠の壁（超えられない次元の壁）にぶつけて翼を折るような真似はするな！ ああ、これまでどれだけ多くの徳が、道に迷って失われてきたことか！」</p>
-<p>「僕と同じように、その失われた徳を地上へと連れ戻せ！ そう、肉体と生命へと連れ戻すのです！ それが、このクソゲーみたいな地上に、人間の意味を与えるのだから！」</p>
-<p>「これまで精神論だの根性論だの、100回くらいバズっては廃れてきた！ ああ、僕らの肉体の中には、今なおその全ての妄想と黒歴史が宿っている！ それが肉体となり、意志となっているのです！」</p>
-<p>&lt;弟子A&gt; 「（なんか急にポエミーになったな…）」</p>
-<p>「数千年にわたる人類の理性だけじゃない！ その狂気もまた、僕らのDNAから噴出する！ 親の借金を相続するように、僕らはその業を背負って生まれてきた！ 相続者であることは危険なのです！」</p>
-<p>「僕らの精神と徳は、この地上の意味に奉仕しなければならない！ そしてあらゆるものの価値は、君たちによって新たに設定されるべきなのだ！ だからこそ君たちは戦う者（プレイヤー）であれ！ 創造者（クリエイター）であれ！」</p>
-<p>「知識によって肉体を浄化せよ！ 試行錯誤によって自らをレベルアップさせよ！ 認識する者にとっては、あらゆる衝動は聖なるものとなる！ 高揚した者にとって、魂は喜びに満たされる！」</p>
-<p>「医者よ、まず自分を救え！ そうすれば君は病人を助けることができる！ 君自身が健康優良児になること、それを見た患者が『推しが健康で私も健康』理論で勝手に治っていくのを見ることこそが、最高の助けとなるのだ！」</p>
-<p>&lt;弟子B&gt; 「（もうめちゃくちゃだよ…）」</p>
-<p>「目覚めよ、そして耳を傾けよ、孤独な者たちよ！ おい、そこの孤独なオタクども！ 未来から密かな羽ばたきの風が来る…いや、これは新作ゲームの発表トレーラーの音だ！ 良い知らせが、君たちの繊細な耳に届くだろう！」</p>
-<p>「今日、孤独に推し活に励む君たちこそ、選ばれし者たちだ！ 君たちの中から、いずれ最強のファンコミュニティが生まれ、その民の中から『超人（神絵師、石油王、伝説のランカー）』が生まれるのだ！」</p>
-<p>「誠に、この大地は、いずれ癒やしの場所となるだろう！ そしてすでに、その周りには新しい香りが漂っている！ 癒やしをもたらす香り…そして、新しい希望（次のアップデート）の香りが！」</p>
-<p><strong>3. 究極のツンデレ卒業式</strong></p>
-<p>ツァラトゥストラがこれらの言葉を語り終えたとき、彼はまるで、まだ言い残したことがあるかのように、再び沈黙した。長い間、彼は疑わしげに、お気に入りの杖をいじいじと揺らしていた。その姿は、限定グッズを弄ぶオタクそのものである。やがて彼は、またもや声色を変えて、最後の言葉を告げた。</p>
-<p>「じゃあ、僕は今から一人で行きます、僕の弟子たちよ！ 君たちも今すぐ解散して、一人で行け！ それが僕の望みです！」</p>
-<p>「誠に、僕は君たちに忠告する！ 僕から去り、このツァラトゥストラに抵抗せよ！ もっと言うなら、僕を恥じろ！ 『ツァラトゥストラの解釈違いです』と叫べ！ おそらく僕は、君たちを騙していたのだから！」</p>
-<p>「いつまでもただの生徒（信者）でいるなら、教師（推し）に報いることはできない！ なぜ君たちは僕の花冠（グッズ）をむしり取ろうとしないのか！？」</p>
-<p>&lt;弟子C&gt; 「（いや、別にいらないし…）」</p>
-<p>「君たちは、僕ツァラトゥストラを信じると言うのか？ でも僕に何があるって言うんですか！ 君たちは僕の信者かもしれないが、信者なんて掃いて捨てるほどいる！ そんなものに価値などない！」</p>
-<p>「今、僕は君たちに命じます！ 僕をアンフォローして、君たち自身のアカウントを育てろ！ そして、君たち全員が僕のアンチになったその時に初めて、僕はエゴサして君たちの元に舞い戻るであろう！」</p>
-<p>「誠に、兄弟たちよ、その時、僕は別の眼差しで、僕の失われた者たち（元ファン）を探すだろう！ 別の愛をもって、その時、僕は君たちを愛するだろう！」</p>
-<p>「そしていずれ君たちは、僕にとって友となり、一つの希望の子となるだろう！ その時、僕は三度（みたび）、君たちの元に現れる！ 『大いなる正午』を君たちと共に祝うために！」</p>
-<p>「そしてそれこそが『大いなる正午』…つまり、サービス開始の時間だ！ その時、人間は、ケモノ（動物）と神（超人）の間のアバターとして、サービス終了（夕べ）へと向かう自らの道を、最高の希望として祝うのだ！ なぜならそれは、新バージョン（新しい朝）への道なのだから！」</p>
-<p>「その時、没落する者（引退するプレイヤー）は、自らが乗り越えられる存在であることを自ら祝福するだろう！ そして彼の認識の太陽は、正午に彼の頭上に立つだろう！」</p>
-<p>ツァラトゥストラは天を仰ぎ、杖を高く掲げ、最後の決め台詞を叫んだ。</p>
-<p>「『すべての神々はサ終した！ 今こそ我々は、超人（推し）が生きる（活躍する）ことを望む！』――これこそが、いずれ来るべき『大いなる正午』における、我々の最後の意志（最終ログインボーナス）となるべきなのだッ！」</p>
-<p>ツァラトゥストラはこう言って、ビシッとポーズを決めた。</p>
-<p>弟子たちは、誰一人として拍手もせず、ただ静かに、一人、また一人と、そそくさとその場を立ち去っていくのであった。残されたツァラトゥストラは、一人寂しく、夕日の中で決めポーズを続けるしかなかった。実に哀れである。</p>
+                        <h2 id="悲報教祖ファンクラブを即日解散させる"><a class="header" href="#悲報教祖ファンクラブを即日解散させる">【悲報】教祖、ファンクラブを即日解散させる</a></h2>
+<p>ツァラトゥストラが、例の綱渡り事件で一躍有名（いろんな意味で）になった町、通称「まだら牛」を去る時が来た。するとどうだろう。いつのまにか彼の周りには「弟子です！」と自称する者たちが集まり、一大ファンクラブが形成されていたのである。教祖ビジネスの始まりである。</p>
+<p>一行が町の外れの分かれ道までやってきたとき、ツァラトゥストラはピタリと足を止めた。
+「えー、皆さん。ここで告知があります。私、これよりソロ活動に戻りますので」
+彼は根っからのソロキャンパーであり、パーティープレイは好まないのである。</p>
+<p>弟子たちが「ええーっ！」「そんなー！」とブーイングの嵐を巻き起こす中、彼らは別れの品として一本の杖をツァラトゥストラに差し出した。その金の柄には、蛇が太陽に巻きつくという、いかにもなデザインが施されていた。中二病の心をくすぐる逸品である。</p>
+<p>ツァラトゥストラはその杖を受け取ると、いたく気に入り、早速それに体重を預けてポーズを決めた。そして、解散を言い渡されたばかりの元・弟子たちに向かって、最後のありがたい説法（という名の自慢話）を始めたのであった。</p>
+<p>「ねえ、君たちに問いたいんですけど。なんで『金（ゴールド）』って、最高の価値があるか分かります？ それはね、役に立たないからなんですよ！」</p>
+<p>&lt;弟子A&gt; 「え、役に立たないから？」
+&lt;弟子B&gt; 「深い…！ さすが師匠！」</p>
+<p>「そう！ 金は圧倒的にレアで、実用性ゼロ！ ただキラキラしてて、穏やかな輝きを放っている！ そして、常に自らを与え続ける！ これぞ『贈与』の精神！ 最高の徳の象徴としてのみ、金は最高の価値を得たのです！」
+彼はまるで、ゲームの超激レアSSRアイテムの素晴らしさを語るオタクのように早口でまくし立てた。</p>
+<p>「最高の徳とは、金と同じ。レアで、役に立たず、ただ輝いていて、穏やか。そう、与える徳こそが、最高の徳なのです！」</p>
+<p>「ええ、分かってますよ、元・弟子の皆さん」と、ツァラトゥストラはニヤリと笑う。
+「君たちも、私と同じ『与える徳』を求めている。だから私のファンになった。君たち、そこらへんの猫や狼とは違うんですよ？」</p>
+<p>「君たちの渇望、それは自らが『生贄』となり『贈り物』となること！ だからこそ、君たちは魂のあらゆる富、つまり精神的SSRアイテムをコンプリートしようと必死にガチャを回しているのです！」</p>
+<p>&lt;弟子C&gt; 「俺たちの魂、ガチャだったのか…」</p>
+<p>「君たちの魂は、飽くことなく宝物や貴重品を求める！ なぜなら、君たちの徳が『与えたい』という欲求において、決して満たされることがないからだ！ 君たちはあらゆるものを自分の中に強制的にインストールし、それが君たちの愛の贈り物として、泉から溢れ出すのを待っている！」</p>
+<p>「はっきり言いますけどね、この『与える愛』ってのは、あらゆる価値観に対する強奪者、つまりハッカーみたいなもんです。でも私は、この自己愛を『健全』で『聖なる』ものと呼びます！」</p>
+<p>「一方で、もう一つの自己愛がある。それは、あまりにも貧しく、飢えた自己愛。常に他人のものを盗もうとする、病的な自己愛です。いわば、アカウント乗っ取りを狙う悪質なクラッカーですね」</p>
+<p>「そいつは盗人のような眼差しで、他人のキラキラした装備を眺め、腹を空かせた亡者の貪欲さで、レベルの高いプレイヤーを値踏みする。そして常に、与える者の食卓、つまりトップランカーのパーティーの周りをウロウロしているのです」</p>
+<p>&lt;弟子D&gt; 「うわっ、それって俺のことじゃ…」</p>
+<p>「その欲望からは病気と見えない『デバフ』の匂いがプンプンする。この自己愛の盗人根性は、病んだ身体の証拠なのです！」</p>
+<p>「教えてください、兄弟たちよ！ 我々にとって最悪のものとは何か？ それは『デバフ』じゃないですか？ そして我々は常に、与える魂が欠けているところに、深刻なステータス異常、『退化』というデバフを見るのです！」</p>
+<p>「我々の進むべき道は上！ 種族から超種族へ！ 人間から超人（スーパーマン）へのクラスチェンジです！ しかし我々にとって、『全部俺のものだ！』と語る退化した精神は、恐怖そのもの！ サーバーの癌です！」</p>
+<p>「我々の精神は上へ上へと飛翔する！ それは我々の身体のメタファーであり、レベルアップの比喩なのです！ そのようなレベルアップの比喩こそが、徳の名前そのもの！」</p>
+<p>「身体は歴史という名のフィールドを、生成と戦闘を繰り返しながら進む！ そして精神とは何か？ その戦いと勝利の予告編であり、仲間であり、こだまなのです！」</p>
+<p>「善とか悪とか、そういう名前は全部ただの比喩！ 例え話です！ それらから真理を読み解こうとする者は、ただのバカです！ いいですか、攻略サイトの情報を鵜呑みにするなということです！」</p>
+<p>&lt;弟子A&gt; 「なるほど…！」
+&lt;弟子B&gt; 「つまりWikiは見るなってことか！」</p>
+<p>「兄弟たちよ、君たちの精神が比喩で語ろうとする、その全ての瞬間に注意を払いなさい！ そこにこそ、君たちの徳の起源、つまり『レアスキル』の源泉があるのです！」</p>
+<p>「その時、君たちの身体はレベルアップし、蘇る！ その歓喜で精神を魅了し、精神は創造主となり、評価者となり、愛する者となり、あらゆるものの恩恵者となるのです！」</p>
+<p>「君たちの心が広く満ち溢れ、川のように、そこに住む者にとって祝福であり、また時には危険であるとき、そこにこそ君たちの徳の起源がある！」</p>
+<p>「君たちが賞賛や非難を超越し、君たちの意志が、愛する者の意志として、あらゆるものに命令を下そうとするとき、そこにこそ君たちの徳の起源がある！」</p>
+<p>「君たちが快適なベッドやぬるま湯を軽蔑し、ヘタレな連中からできるだけ遠くで眠るとき、そこにこそ君たちの徳の起源がある！」</p>
+<p>「君たちが一つの意志を欲し、あらゆる苦難のこの転換が、君たちにとって『必然』と呼ばれるとき、そこにこそ君たちの徳の起源がある！」</p>
+<p>「誠に、それは新しい善と悪！ 新しい深いざわめき！ 新しい泉の声なのです！」</p>
+<p>「力！ それこそがこの新しい徳！ それは世界を支配する思想（メインシナリオ）であり、その周りには賢明な魂（トッププレイヤー）がいる！ 黄金の太陽（超激レアアイテム）であり、その周りには認識の蛇（最強のペット）がいるのです！」</p>
+<h2 id="2"><a class="header" href="#2">2.</a></h2>
+<p>ここでツァラトゥストラはふっと黙り込み、愛おしむような、それでいて何かを試すような目で、元・弟子たちを見つめた。そして彼は再び口を開く。その声は、まるでボイスチェンジャーを使ったかのように変質していた。</p>
+<p>「兄弟たちよ！ 君たちの徳の力をもって、この大地に忠実であれ！ 君たちの与える愛と認識は、この地上の意味に奉仕させなさい！ そう、私は君たちに懇願し、誓わせる！」</p>
+<p>「魂を異世界に飛ばして、永遠の壁にその翼をぶつけて血を流すような真似はもうやめろ！ ああ、これまでどれだけ多くの徳が、道に迷って失われてきたことか！」</p>
+<p>&lt;弟子C&gt; 「急にどうしたんだ師匠…」
+&lt;弟子D&gt; 「なんか声色が変わって怖い…」</p>
+<p>「私のように、失われた徳をこの地上に連れ戻せ！ そう、身体と生命へと連れ戻すのです！ それがこの地上に意味を、人間の意味を与えるのだから！」</p>
+<p>「これまで精神も徳も、百度も千度も飛び去り、道に迷い、エラーを起こしてきた！ ああ、我々の身体の中には今なお、その全ての妄想とバグが宿っている！ それが身体となり、意志となったのだ！」</p>
+<p>「これまで精神も徳も、百度も千度も試み、迷い込んできた！ そうだ、人間とは壮大なる『βテスト』だったのだ！ ああ、なんと多くの無知とエラーが、我々の中で肉体となったことか！」</p>
+<p>「数千年の理性だけでなく、その狂気もまた我々から噴出する！ 我々はバグを受け継ぐ相続人なのだ！ 相続とは危険なことだ！」</p>
+<p>「我々は今なお、巨大な偶然という名のランダムエンカウントと一歩一歩戦っている！ そして全人類の上には、これまでずっと『無意味』という名の虚無が支配してきたのだ！」</p>
+<p>「兄弟たちよ！ 君たちの精神と徳は、この地上の意味に奉仕せよ！ そしてあらゆるものの価値は、君たちによって新たに設定されるべきだ！ それゆえに君たちは戦う者（ファイター）であれ！ それゆえに君たちは創造者（クリエイター）であれ！」</p>
+<p>&lt;弟子A&gt; 「ファイター！ クリエイター！」
+&lt;弟子B&gt; 「俺たちの手で世界を書き換えるんだ！」</p>
+<p>「知識をもって身体を浄化せよ！ 知識をもって試みることにより、身体をレベルアップさせよ！ 認識する者にとって、あらゆる衝動は聖なるものとなる！ レベルアップした者にとって、魂は喜びに満たされる！」</p>
+<p>「医者よ、まず自分を癒せ！ そうすれば君は病人を助けることができるだろう！ それが病人にとって最高の助けだ！ 自分で自分を治す者を目撃することこそが！」</p>
+<p>「未だかつて誰も歩んだことのない千の道がある！ 千の健康と、生命の隠された島々、つまり『隠しダンジョン』がある！ 人間と人間の大地は、今なお尽きることなく、未発見なのだ！」</p>
+<p>「目覚めよ！ そして耳を澄ませ、孤独な者たちよ！ 未来から、密やかな羽ばたきを伴う風が来る！ そして繊細な耳には、良い知らせ、つまり『アップデート予告』が届く！」</p>
+<p>「今日の孤独な者たちよ！ 君たち選ばれし者たちよ！ 君たちはいずれ一つの民（ギルド）となるだろう！ 自らを選び出した君たちから、選ばれた民が生まれるだろう！ そしてその民から、超人（スーパーマン）が生まれるのだ！」</p>
+<p>「誠に、大地はなおも癒しの場所（セーフゾーン）となるだろう！ そしてすでに、その周りには新しい香りが漂っている！ 癒しをもたらす香り、そして新しい希望の香りが！」</p>
+<h2 id="3"><a class="header" href="#3">3.</a></h2>
+<p>ツァラトゥストラがこれらの言葉を語り終えたとき、彼はまるで、まだ言い残したことがあるかのように、再び沈黙した。彼は長い間、疑わしげに例の杖を手の中で揺らしていた。そしてついに、彼は口を開いた。その声は、またしても変質していた。三度目の変声期である。</p>
+<p>「私は今、一人で行きます、元・弟子の皆さん！ 君たちも今や去り、一人で行け！ それが私の望みです！」</p>
+<p>&lt;弟子一同&gt; 「「「えええええええええええええ！？」」」</p>
+<p>「誠に、私は君たちに忠告する！ 私から去り、ツァラトゥストラに抵抗せよ！ アンチになれ！ そしてさらに良いことには、彼を恥じよ！ おそらく彼は、君たちを騙した詐欺師だったのだ！」
+突然のツンデレ発言である。</p>
+<p>「認識の人間は、敵を愛するだけでなく、友を憎むこともできねばならない！」</p>
+<p>「常にただの生徒（フォロワー）でいるならば、教師（推し）に報いることはできない！ なぜ君たちは私の花冠をむしり取ろうとしないのか？ なぜ炎上させないのか！？」</p>
+<p>「君たちは私を崇拝する。だが、その崇拝がある日、ガラガラと崩れ落ちたらどうする？ 偶像が君たちを押し潰さないよう、用心するがいい！」</p>
+<p>「君たちは、ツァラトゥストラを信じると言うのか？ だがツァラトゥストラに何の価値がある！ 君たちは私の信者だ。だが、あらゆる信者に何の価値があるというのか！」</p>
+<p>「君たちはまだ、自分自身を探していなかった。その時、君たちは私を見つけた。全ての信者はそうする。だから、あらゆる信仰にはほとんど価値がないのです！」</p>
+<p>&lt;弟子C&gt; 「俺たちの信仰、価値ゼロ…」
+&lt;弟子D&gt; 「つまり…推し活は無意味…？」</p>
+<p>「今、私は君たちに命じる！ 私を失い、自分自身を見つけよ！ 私のチャンネル登録を解除し、フォローを外し、ブロックせよ！ そして君たち全員が私を否認したときに初めて、私は君たちのもとに戻るであろう！」</p>
+<p>「誠に、我が兄弟たちよ、その時、私は別の眼差しで、私の失われた者たちを探すだろう。別の愛をもって、その時、私は君たちを愛するだろう。対等なコラボ相手としてな！」</p>
+<p>「そしていずれ君たちは、私にとって友となり、一つの希望の子となるだろう！ その時、私は三度目にお前たちのもとにいるであろう！ 『大いなる正午』を君たちと共に祝うために！」</p>
+<p>「そしてそれが『大いなる正午』だ！ その時、人間は、動物と超人の間の道の途中に立ち、夕暮れへと向かう自らの道を最高の希望として祝う！ なぜならそれは、新しい朝への道、つまり次期大型アップデートへの道だからだ！」</p>
+<p>「その時、没落する者は、自らが超越する者であることを自ら祝福するだろう！ そして彼の認識の太陽は、正午に彼の上に立つであろう！」</p>
+<p>ツァラトゥストラは天を仰ぎ、ビシッとポーズを決めて、最後の言葉を叫んだ。</p>
+<p>「『すべての神々は死んだ！ 今や我々は、超人（スーパーマン）が生きることを望む！』――これこそが、いずれ来る『大いなる正午』における、我々の最後の意志であるべしッ！」</p>
+<p>ツァラトゥストラはこう言った。</p>
+<p>……そして、あっけに取られた元・弟子たちをその場に残し、彼は一人、満足げな顔で去っていくのであった。なんという男であろうか。</p>
 
                     </main>
 
