--- a/reborn_026_Zweiter_Theil.html
+++ b/reborn_026_Zweiter_Theil.html
@@ -175,37 +175,32 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h3 id="衝撃推し突然のファンクラブ解散宣言全員アンチになれ発言に信者たち大困惑"><a class="header" href="#衝撃推し突然のファンクラブ解散宣言全員アンチになれ発言に信者たち大困惑"><strong>【衝撃】推し、突然のファンクラブ解散宣言！「全員アンチになれ」発言に信者たち大困惑</strong></a></h3>
-<p>ツァラトゥストラは、彼のありがたいお言葉に熱心に耳を傾ける弟子たち（という名の、数少ない信者）を前に、満足げに頷いていた。市場での大スベり演説以来、彼の回りには物好きな人間が数人、集まるようになっていたのだ。</p>
-<p>（フフフ……やはり俺の『ぼくのかんがえたさいきょうの哲学』は、一部の選ばれた人間には理解できるのだな！）</p>
-<p>すっかりご満悦のツァラトゥストラであったが、彼は突如、感動的なフィナーレを迎えたかのような神妙な面持ちで、こう切り出した。</p>
-<p>「さて、兄弟たちよ！ これまで私のありがたい教えを聞いてくれて感謝します！ ですが、君たちとの馴れ合いごっこは、今日で終わりです！」</p>
-<p>&lt;弟子A&gt; 「えっ！？ ど、どういうことですか師匠！」
-&lt;弟子B&gt; 「俺たち、何か気に障ることでも……？」</p>
-<p>動揺する弟子たちを前に、ツァラトゥストラはビシッと指を突きつけ、さらに衝撃的な言葉を放つ。</p>
-<p>「君たちは、いつまで俺の金魚のフンでいるつもりですか！ 俺の言葉を『ありがたや〜』と拝んでるだけでは、永遠に蛆虫から進化できませんよ！」</p>
-<p>「だから、今日限りでこのファンクラブは解散！ 君たちに最後の課題を与えます！ それは――俺を否定することです！」</p>
-<p>&lt;弟子C&gt; 「ひ、否定！？」
-&lt;弟子D&gt; 「アンチになれってことですか！？ 無理ですって！」</p>
-<p>「いいや、なるのです！ 『ツァラトゥストラの思想はもう古い』とこき下ろし、『あいつの厨二病ポエム、今読むとマジで痛いなw』と嘲笑いなさい！ 君たち全員が、俺の完璧なアンチに生まれ変わったその時……！」</p>
-<p>ツァラトゥストラはそこで一度言葉を切り、天を仰いでうっとりとした表情を浮かべた。</p>
-<p>（要するに、自分の教えをただ鵜呑みにするイエスマンに飽きて、自分と対等にレスバできる論敵が欲しくなっただけである。実に面倒くさい男だ）</p>
-<p>「――そう、君たちが俺の教えを黒歴史として完全に葬り去ったその暁に！ 私、ツァラトゥストラは！ 再び君たちの元へ帰ってきましょう！」</p>
-<p>高らかに宣言するツァラトゥストラ。弟子たちはポカーンとしている。</p>
-<p>&lt;弟子A&gt; 「え、帰ってくるんですか！？」
-&lt;弟子B&gt; 「あれだけディスった後にどの面下げて会えばいいんですか！ 気まずすぎますよ！」</p>
-<p>「フン、心配無用です！ その時の私は、もはや今の私ではない！ アップデートを重ね、バグ修正を終えた『ツァラトゥストラ Ver.2.0』として降臨するのですから！」</p>
-<p>「そして、<strong>別の目</strong>で――そう、まるで初めて見るSSRキャラを鑑定するかのような目で、私のもとから巣立っていった『<strong>失われた者たち</strong>』（つまり君たち元信者のことだ！）を、もう一度探し出してあげましょう！」</p>
-<p>（失われた者、とは随分な言い草である。自分から追い出しておいて、この言い様だ）</p>
-<p>「そして！ その時こそ！ 私は君たちを<strong>別の愛</strong>で愛してあげます！」</p>
-<p>ツァラトゥストラは胸に手を当て、情熱的に語る。</p>
-<p>「今までの『師匠から弟子へ』といった、生ぬるい一方的な愛（ラブ）ではありません！ 『お前、俺がいなくてもちゃんと自分の足で立ってるじゃん……やるな……』といった、好敵手（ライバル）を認める、まったく新しい<strong>ツンデレ愛</strong>で！ 君たちを愛してやろうというのです！」</p>
-<p>&lt;弟子C&gt; 「ツンデレ愛……」
-&lt;弟子D&gt; 「なんか……前より性格が面倒くさくなってませんかね……」</p>
-<p>弟子たちの困惑をよそに、ツァラトゥストラは一人で深く頷き、満足げにマントを翻した。</p>
-<p>「では、さらばだ兄弟たちよ！ 健闘を祈ります！」</p>
-<p>そう言い残し、彼は一人、風のように去っていった。残された弟子たちは、ただ顔を見合わせ、首を傾げるばかりであった。</p>
-<p>（結局のところ、「俺のコピペじゃなくて、お前ら自身のオリジナルな哲学を創造しろ。そしたら、対等なオタク仲間として語り合ってやるぜ」という、承認欲求と自己顕示欲をこじらせた、クリエイター気質のおじさんの不器用なエールなのであった。伝わるわけがない）</p>
+                        <h2 id="第二部-伝説の賢者まさかのツンデレ構文で帰還を予告する"><a class="header" href="#第二部-伝説の賢者まさかのツンデレ構文で帰還を予告する">第二部 伝説の賢者、まさかのツンデレ構文で帰還を予告する</a></h2>
+<p>さて、市場での演説や綱渡り芸人の一件など、数々の伝説（と書いて「やらかし」と読む）を打ち立てたツァラトゥストラ。彼は自分の教え（という名のポエム）を聴衆に叩きつけ、満足げな表情で、一旦この場を去ることを決意したようである。</p>
+<p>彼はビシッと指を天に突きつけ、最後のありがたいお言葉を皆に授けることにした。</p>
+<p>「いいですか、皆さん！ 私が一旦ここを去った後、君たちが私の教えを完全に忘れ、なんなら『ツァラトゥストラとかいう奴、マジで痛かったよなwww』とアンチ活動に勤しむようになったその時！ その時こそ、私は再び君たちの元へ帰ってきましょう！」</p>
+<p>&lt;群衆A&gt; 「え、何そのツンデレ構文」
+&lt;群衆B&gt; 「俺たちがディスったら戻ってくるってこと？ 面倒くさい彼氏かよ」</p>
+<p>ツァラトゥストラは、そんな野次など聞こえないフリをして、さらに恍惚とした表情で続ける。もはや自分の世界に完全に浸っている。</p>
+<p>「まことに！ その時、私は全く新しいセーブデータで、いや、全く新しい眼（まなこ）で、私を見失った迷える子羊たち（つまり君たち）を探し出してあげます！ 私のありがたい教えから落伍した君たちを、です！」</p>
+<p>&lt;群衆C&gt; 「うわー、上から目線がエベレスト級！」
+&lt;群衆D&gt; 「勝手に俺たちを『失われた者』認定するのやめてもらえませんか」
+&lt;群衆E&gt; 「探さないでくださいって言ったらどうなるんだろ」</p>
+<p>彼は天を仰ぎ、両手を広げ、クライマックスとばかりに高らかに宣言した。</p>
+<p>「そして！ 今とは全く違う、新たな愛（アガペー）の形で、君たちを愛してあげましょうッ！ バージョン2.0の愛、とでも言いますかな！ フハハハハ！ ありがたく思うがいい！」</p>
+<p>&lt;群衆A&gt; 「愛のアップデート宣言とか、もうお腹いっぱいです…」
+&lt;群衆B&gt; 「ていうか、今の愛も別にいらないです…」</p>
+<p>こうしてツァラトゥストラは、壮大な『俺がいなくなってからが本当の始まり』宣言を一方的に叩きつけ、満足げに去っていったのであった。要は、また山に引きこもって一人で悦に入るだけである。残された人々は、ただただポカンとしていた。</p>
+<h2 id="ツァラトゥストラ与えすぎちゃう徳について語る"><a class="header" href="#ツァラトゥストラ与えすぎちゃう徳について語る">ツァラトゥストラ、与えすぎちゃう徳について語る</a></h2>
+<p>（場面は変わり、ツァラトゥストラが弟子のような者たちに語りかけている）</p>
+<p>ツァラトゥストラは、自分のファンクラブ会員（数名）を前に、ドヤ顔で語っていた。</p>
+<p>「つまりですね、私が一度君たちの元を去るのは、君たちのためなのですよ。私がいると、君たちはいつまでも私に甘えて、自分の頭で考えなくなるでしょう？ だから、一度私を否定しなさい、と。そういうことなのです」</p>
+<p>と、さも深イイ話のように語っているが、その目は少しも笑っていない。</p>
+<p>「君たちが私のアンチになり、私の教えをボロクソにこき下ろすようになったら、それは君たちが自立した証拠。その時、私は『第二形態』となって帰還し、新しい愛で君たちを包み込んであげます。どうです？ 私のこの与えすぎるほどの徳、分かりましたか？」</p>
+<p>弟子の一人がおずおずと手を挙げた。
+「あの、ツァラトゥストラ様…その『新しい愛』って、具体的にはどんな…？」</p>
+<p>「フッ…それは、帰還した時のお楽しみ、ですよ」</p>
+<p>そう言ってウインクするツァラトゥストラ。弟子たちは、一抹の不安を覚えながらも、とりあえず頷くしかなかったのであった。前途多難である。</p>
 
                     </main>
 
