--- a/reborn_029_Von_den_Mitleidigen.html
+++ b/reborn_029_Von_den_Mitleidigen.html
@@ -175,65 +175,64 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h3 id="炎上物乞い不要論-ツァラトゥストラの過激思想が大バズり"><a class="header" href="#炎上物乞い不要論-ツァラトゥストラの過激思想が大バズり"><strong>【炎上】物乞い不要論！？ ツァラトゥストラの過激思想が大バズり！</strong></a></h3>
-<p>ツァラトゥストラの演説は、もはや誰にも止められない。市場の空気は完全に彼に支配されていた。……悪い意味で。</p>
-<p>やがて、群衆の中から嘲笑まじりのヤジが飛んだ。</p>
-<p>「見ろよ、ツァラトゥストラを！ あいつ、俺たちの間をまるで獣の群れの中を歩いてるみたいじゃねえか？」</p>
-<p>その言葉に、周囲はドッと沸いた。しかしツァラトゥストラは、内心で鼻で笑いながらこう反論する。</p>
-<p>（フン……逆だ、逆！ お前ら凡人が、俺みたいな認識する者から見れば「赤ら顔で騒ぐだけの獣」なんだよ！）</p>
-<p>だが、彼は大人なので口には出さない。その代わり、少し悲しげな表情を浮かべて、再び説法を再開した。この男、人心掌握（のつもり）にも長けているのである。</p>
-<p>「皆さん……今、獣のようだと言われました。そうかもしれません。ですが、認識する者にとって、人間とは何か？ それは、しばしば恥じ入らねばならない存在なのです」</p>
-<p>「おお、我が友よ！ 人間の歴史とは何か！ それは『恥の歴史』なのです！ 黒歴史ノートの積み重ね、それが人類史だ！」</p>
-<p>&lt;群衆A&gt; 「俺の黒歴史ノートがなんだって？」
-&lt;群衆B&gt; 「いきなり壮大な話になったな」</p>
-<p>「だからこそ！ 高貴なる者、つまり俺のような人間は、他人を恥じ入らせないように細心の注意を払うのです！ 特に、苦しんでいる人の前では、自分の恵まれた状況を恥じる！ これがマナーでしょうが！」</p>
-<p>「だから俺は嫌いなんだ！ 『可哀想な人』に同情することで、優越感に浸って悦に入ってる偽善者どもが！ あいつらには『恥』という概念が決定的に欠けている！」</p>
-<p>「もし！ もし仮に、この俺が誰かに同情することがあるとしても、それを大声で言いふらしたりはしない！ やるなら遠くから、気づかれないようにやるのが粋ってもんでしょうが！」</p>
-<p>&lt;群衆C&gt;「ツンデレかよ」
-&lt;群衆D&gt;「『別にアンタのためにやったんじゃないんだからね！』ってやつだろ」</p>
-<p>「むしろ同情されそうになったら、顔を隠して逃げ出すね、俺は！ 皆さんもそうすべきです！ 安っぽい同情は、プライドをズタズタにする猛毒なんですよ！」</p>
-<p>「ああ、我が運命よ！ どうか俺の周りには、苦悩を知らないポジティブな人間だけを集めてくれ！ 俺の有り難い知恵（ハチミツ）と食事を分かち合える、そういうレベルの高い連中だけをな！」</p>
-<p>「言っておきますが、俺は苦しむ人に対して、これまでも色々と善行を施してきましたよ？ でもね、それ以上に、俺自身が人生を楽しむことを学んだ時の方が、結果的にもっと良い行いができた気がするんです！」</p>
-<p>「人間が生まれてこの方、決定的に足りていないものがある！ それは『喜び』だ！ 人生をエンジョイする能力が低すぎる！ これこそが、唯一の『原罪』と言えるでしょう！」</p>
-<p>&lt;群衆E&gt;「なんか自己肯定感高い説教が始まった」</p>
-<p>「我々がもっと心から人生を楽しむことを学べば、他人を傷つけたり、悪意を抱いたりすることも忘れるはずなんです！ だから俺は、苦しむ人を助けた後は、その手を念入りに洗う！ そして、その記憶ごと魂を拭い去るんです！」</p>
-<p>「なぜなら！ 苦しんでいる人を見た時、俺はその人の『恥』……つまり、『同情されるような状況に陥っていること』自体を、自分のことのように恥じてしまうからだ！ そして、そんな相手を助けた時、俺は彼のプライドを著しく傷つけてしまったのではないかと、自己嫌悪に陥る！」</p>
-<p>ちびまる子ちゃんのト書き（心の声）：「要するに、繊細すぎて面倒くさい性格なのである」</p>
-<p>「大きな恩義は感謝どころか、復讐心を生むってことを知らないんですか！？ 『奢ってやったんだから言うこと聞けよ』みたいな恩着せがましい態度のせいで、後輩に裏切られる先輩、いるでしょ？ そういうことです！ そして、小さな善行も、いつまでも恩に着せられたら、心を蝕む虫になるんですよ！」</p>
-<p>「『受け取ることに謙虚であれ！ そして、与えられたという事実で己を際立たせよ！』――これは、与えるものを持たない貧しい人たちへの、俺からのアドバイスです」</p>
-<p>「だが俺は、与える側の人間だ！ 友には友人として、喜んで与えよう。だが、見知らぬ者や貧しい者は、俺の木から勝手に実を摘んで食うがいい。その方が、お互い恥ずかしくなくて済むだろう？」</p>
-<p>&lt;群衆A&gt;「何様だよ」
-&lt;群衆B&gt;「自分のこと『木』だと思ってんのか…」</p>
-<p>「というか、物乞いは完全に廃止されるべきです！ マジで！ ああいう人たちに、施しを与えるのも、与えないのも、どっちもイライラするだけでしょうが！」</p>
-<p>群衆はドン引きである。この男、急に過激なことを言い出した。</p>
-<p>「罪人とか、悪しき良心とかも同じです！ 信じてください、我が友よ！ 良心の呵責なんてものは、人に『噛みつく』ことしか教えない、卑屈な感情なんですよ！」</p>
-<p>「だが、本当に最悪なのは『小さな思想』だ！ はっきり言って、しょうもない小悪党になる方が、しょうもない思想に染まるより百万倍マシだ！」</p>
-<p>「『小さな悪意への喜びが、大きな悪事を防ぐ』とか言う奴がいますけどね、そんなところでケチケチすんな！ 悪事を働くならデカくやれ！」</p>
-<p>「悪しき行いってのは、腫瘍みたいなもんです。痒いし、気になるし、最後には破裂する。でも、それは正直に『見ろ、俺は病気だ』と語っている。正直なんですよ」</p>
-<p>「でも『小さな思想』は違う。あれはカビだ。ジメジメと這い回り、どこにでも生えて、気づいた頃には全身が腐って萎びてしまう！ 存在自体がバグなんです！」</p>
-<p>&lt;群衆C&gt;「例えが独特すぎる」</p>
-<p>「だから！ もし君が悪魔に取り憑かれているのなら、俺からこの言葉を授けよう！ 『汝の悪魔を大きく育てよ！ 汝にもなお、偉大さへの道がある！』と！」</p>
-<p>&lt;群衆D&gt;「出たーーー！！厨二ポエムーー！！」
-&lt;群衆E&gt;「痛い痛い痛い！ こっちが恥ずかしくなってきた！」</p>
-<p>「ああ、兄弟たちよ！ 人は互いについて知りすぎている！ だから、人間と一緒に生きるのは難しい！ なぜなら、沈黙することがあまりにも難しいからだ！」</p>
-<p>「そして、我々が最も不公平になるのは、嫌いな相手に対してじゃない。むしろ、どうでもいい、全く関係のない相手に対してなんです」</p>
-<p>「だが、もし君に苦しんでいる友がいるなら、その苦しみのための『安息の場』になってやれ。ただし！ それはフカフカのベッドであってはならない！ 硬い寝台、野戦用のベッドのようなものであれ！ その方が、最終的に彼のためになる！」</p>
-<p>ちびまる子ちゃんのト書き（心の声）：「こんな友人は、正直いらない」</p>
-<p>「そして、もし友が君に悪事を働いたなら、こう言うんだ。『君が俺にしたことは許そう。だが、君が君自身にしたその行いを、この俺がどうして許せるだろうか！』と！」</p>
-<p>「すべての『偉大な愛』は、許しや憐憫すらも超越する！ わかるか！？」</p>
-<p>「人は自分の心をしっかり掴んでおけ！ ちょっと油断しただけで、頭がおかしくなっちまうぞ！」</p>
-<p>「ああ、この世界で、憐憫を抱く偽善者たちの間で起こった愚行以上の愚行があったか！？ 彼らの愚かな同情が生み出した苦悩以上の苦悩があったか！？ 断じてない！」</p>
-<p>「憐憫を超えられない、すべての愛する者たちに災いあれ！」</p>
-<p>ツァラトゥストラは天を仰ぎ、恍惚の表情で叫んだ。</p>
-<p>「かつて悪魔が俺にこう言った！ 『神にも地獄がある。それは人間への愛だ』と！」</p>
-<p>「そして最近、こうも聞いた！ 『神は死んだ。人間への憐れみによって、神は死んだのだ』と！」</p>
-<p>市場は完全に静まり返っていた。もはやツッコミを入れる気力すら、誰にも残っていない。</p>
-<p>「だから憐憫には気をつけろ！ そこから重い雲がやってくる！ 俺にはわかる！ 天気の兆候がな！」</p>
-<p>「だが、この言葉も心に刻め！ すべての偉大な愛は、その憐憫のすべてを超越している！ なぜなら、愛するものを、さらにその先へと――『創造』しようと欲するからだ！」</p>
-<p>「『私自身を我が愛に捧げ、我が隣人を私自身のように』――すべての創造者の言葉はこうだ！」</p>
-<p>「そして、すべての創造者は――厳格なのである！」</p>
-<p>ツァラトゥストラは、ビシッとポーズを決めた。
-しかし、彼の視線の先にいた群衆は、一人、また一人と静かにその場を去り始めていたのであった。</p>
+                        <h2 id="同情する者たちについてあるいはかわいそうって言ってる自分が好きなだけの奴らマジ卍"><a class="header" href="#同情する者たちについてあるいはかわいそうって言ってる自分が好きなだけの奴らマジ卍">同情する者たちについて、あるいは「かわいそう」って言ってる自分が好きなだけの奴ら、マジ卍</a></h2>
+<p>我が友よ、諸君の親愛なるこのツァラトゥストラに対し、心ないヤジが浴びせられた。「見ろよ、ツァラトゥストラを！ あいつ、俺たちの間をまるで動物園の猛獣エリアを散歩するみたいに歩いてやがるぜ？」</p>
+<p>しかし、その表現はもっと的確にこう言うべきでしょう。「真理を認識せし者（つまり俺）は、一般人の間を、まるで獣の間を歩くかのように進むのだ」と。</p>
+<p>というか、真理を知る者（俺）にとって、人間そのものが「すぐ顔を赤らめる、恥ずかしがり屋の珍獣」みたいなもんなんですよ。</p>
+<p>彼に何が起こったのかって？ それは、彼が君たちの存在そのものに対して、しばしば「うわぁ…」と恥じらわねばならなかったからではないでしょうかねぇ？</p>
+<p>おお、我が友よ！ 認識する者（俺）はこう語る。「恥！ 恥！ また恥！ これこそが人類の黒歴史である！」と！</p>
+<p>&lt;群衆A&gt; 「なんか壮大なこと言い出したぞ」
+&lt;群衆B&gt; 「こいつ、さっきから俺たちのことディスってない？」</p>
+<p>それゆえに、高貴なる者（俺のことです）は、他者を恥じ入らせないよう、自らを律するのです。彼は何よりも、苦しんでいる人の前で「うわ、この状況、俺がいるの気まずいな…」と自らに恥を課すのです。デリケートなんですよ、こっちは。</p>
+<p>（と、誰もが「お前が一番デリカシーないだろ」と心の中でツッコんだ）</p>
+<p>真に、私は奴らが嫌いです。他人に同情することで恍惚の表情を浮かべる、あの慈悲深き者たちが。奴らには決定的に「恥」という概念が欠けている！</p>
+<p>もし私が誰かに同情せざるを得ないとしても、それをわざわざ口に出したりはしません。そして、もし同情するなら、なるべく遠くから、気づかれないようにやります。ストーカーじゃないですよ？ 配慮です。</p>
+<p>私はまた、相手に「あ、こいつ俺に同情してるな」と認識される前に、サッと顔を隠して逃げ去ることを好みます。そして我が友よ、君たちにもそうすることを命じます！</p>
+<p>我が運命が、君たちと同じように、常に悩みなき者たちを我が道へと導き、そして私に希望と食事とハチミツ（俺の有り難い知恵のこと）を共有させてくれる者たちを導いてくれますように！</p>
+<p>&lt;群衆C&gt; 「ハチミツの話、まだ引っ張るんだ…」</p>
+<p>真に、私は苦しむ者たちに対し、あれこれと良いことをしてきました。しかし、私がより良く「歓ぶ」ことを学んだ時、常にそれ以上の善行を為したように思われたのです。</p>
+<p>人間が誕生して以来、人間はあまりにも歓んでこなかった！ 我が兄弟たちよ、これこそが我らの唯一の原罪なのです！</p>
+<p>そして、我らがもっと歓ぶことを学べば、他人を傷つけたり、悪意を抱いたりすることを、すっかり忘れてしまうでしょう。</p>
+<p>だから私は、苦しむ者を助けた手を念入りに洗うのです。そして、魂までもゴシゴシと拭い去るのです。</p>
+<p>なぜなら、私が苦しむ者を「苦しんでいる」と見た時、私はその者の「恥」のために、自分自身が恥ずかしくなったからです。そして、私が彼を助けた時、私は彼のプライドをズタズタに傷つけてしまったのです！</p>
+<p>&lt;群衆D&gt; 「考えすぎだろ…」
+&lt;群衆E&gt; 「こいつ、めんどくせぇ…」</p>
+<p>大きな恩義は感謝を生みません。むしろ「いつか見てろよ…」という復讐心を生むのです。そして、小さな善行が忘れられずにいると、それはいつまでもチクチクと心を食い荒らす虫けらとなるのです。</p>
+<p>「受け取ることに控えめであれ！ 受け取ることで相手を際立たせよ！」――このように、私は与えるものを持たない人々に助言します。</p>
+<p>しかし、私は与える者（ギバー）です。友として友に、喜んで与えましょう。ですが、見知らぬ人や貧しい人たちは、勝手に私の木から果実を摘み取っていくがいい。その方が、恥ずかしくなくて済むでしょうから。</p>
+<p>（と、ツァラトゥストラはあたかも自分の庭に知恵の果実が実る木でもあるかのように語った。もちろん、そんなものはない）</p>
+<p>しかし、乞食は完全に廃止されるべきです！ 真に、彼らに与えるのも、与えないのも、どっちもイライラする！</p>
+<p>そして、罪人や罪悪感に苛まれる者たちも同様です！ 我が友よ、信じなさい。良心の呵責なんてものは、ネチネチと自分を噛みつくことを教え込むだけです。</p>
+<p>だが、最悪なのは「小さな思想」です。真に、ちまちまと小さく考えるくらいなら、ドカンとでかい悪事を働く方がまだマシです！</p>
+<p>&lt;群衆A&gt; 「えぇ！？ 犯罪教唆！？」
+&lt;群衆B&gt; 「おい、誰か憲兵呼んでこい！」</p>
+<p>確かに君たちは言うでしょう。「小さな悪意へのささやかな喜びは、多くの大きな悪事をしなくて済むようにする」と。しかし、そんなところで節約してはいけません。</p>
+<p>悪しき行いとは、腫瘍のようなものです。それは痒く、掻きむしりたくなり、そして最後には破裂する――それは正直にこう語るのです。</p>
+<p>「見よ、私は病である」と。これこそが悪しき行いの持つ正直さです。</p>
+<p>しかし、小さな思想は、まるでカビです。それは這い、身をかがめ、どこにも存在しないかのように振る舞う――そして気づいた時には、全身が小さなカビのために腐り、萎びてしまうのです。</p>
+<p>（例えがことごとく汚い、と聴衆は思った）</p>
+<p>だが、悪魔に取り憑かれた者には、私はこの言葉を耳元で囁きましょう。「汝の悪魔（ダークサイド）を大きく育てよ！ 汝にもなお、偉大さへの道は残されているのだ！」と――</p>
+<p>&lt;群衆C&gt; 「出た！ 厨二病！」
+&lt;群衆D&gt; 「こいつ、自分の世界に入ってるぞ…」</p>
+<p>ああ、我が兄弟たちよ！ 人は皆、互いについて知りすぎています！ そして、多くの者が我々にとってガラス張りですが、それゆえに我々が彼らを完全に理解できるわけではないのです。</p>
+<p>人間と共に生きるのは難しい。なぜなら、沈黙することがあまりにも難しいからです。</p>
+<p>そして、我々が最も不公平であるのは、我々が嫌悪する相手に対してではありません。我々が全くもって無関心な相手に対してなのです。</p>
+<p>だが、もし君に苦しむ友がいるならば、その苦しみのための安息の場となりなさい。しかし、それはあたかも硬い寝台、野戦用のベッドのようなものでなければなりません。そうすれば、君は彼に最も良く役立つでしょう。</p>
+<p>そして、もし友が君に悪事を働いたならば、こう言いなさい。「君が僕にしたことは許そう。だが、君がそれを君自身にしてしまったこと――それを、この僕がどうして許せようか！」</p>
+<p>（と、ツァラトゥストラは天を仰ぎ、悲劇の主人公のようなポーズを決めた）</p>
+<p>すべての偉大な愛は、こう語るのです。それは、許しや憐憫といった安っぽい感情をも乗り越えると。</p>
+<p>人は自らの心をしっかりと掴んでおくべきです。なぜなら、それを野放しにすれば、いかに早く頭がおかしくなってしまうことか！</p>
+<p>ああ、この世界において、憐憫を抱く者たちの間で起こった以上の愚行がどこにあったでしょうか？ そして、この世界において、憐憫を抱く者たちの愚行が生み出した以上の苦悩がどこにあったでしょうか？</p>
+<p>憐憫という感情を超えた高みを持たぬ、すべての愛する者たちに災いあれ！</p>
+<p>&lt;群衆E&gt; 「もう何が言いたいのか全然わからん…」</p>
+<p>かつて悪魔は私にこう語ったのです。「神にもまた地獄がある。それは、人間への彼の愛である」と。</p>
+<p>そして最近、私は彼がこの言葉を語るのを聞きました。「神は死んだ。人間への彼の憐憫によって、神は死んだのである」と。――</p>
+<p>（シーン…と静まり返る市場。人々は顔を見合わせている）</p>
+<p>それゆえ、憐憫には用心しなさい！ そこからなお、人々の上に重苦しい雲が立ち込めるでしょう！ 真に、私は天候の兆候を理解しているのです！</p>
+<p>だが、この言葉をも心に留めなさい。すべての偉大な愛は、そのすべての憐憫を超えている。なぜなら、それは愛するものをなお――「創造」しようと欲するからです！</p>
+<p>「私自身を我が愛に捧げ、我が隣人を私自身のように」――すべての創造者（クリエイター）たちの言葉はこうです。</p>
+<p>しかし、すべての創造者（クリエイター）たちは、厳格なのです。――</p>
+<p>ツァラトゥストラはこう語った。</p>
 
                     </main>
 
