--- a/reborn_030_Von_den_Priestern.html
+++ b/reborn_030_Von_den_Priestern.html
@@ -175,61 +175,50 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h3 id="悲報聖職者ガチ勢に遭遇陰キャ賢者の悪口が止まらない"><a class="header" href="#悲報聖職者ガチ勢に遭遇陰キャ賢者の悪口が止まらない"><strong>【悲報】聖職者（ガチ勢）に遭遇、陰キャ賢者の悪口が止まらない</strong></a></h3>
-<p>ツァラトゥストラが市場での演説（という名の大事故）を終え、弟子たち（いつの間にかついてきた物好きな連中）を引き連れて次の町へ向かっていた時のことである。</p>
-<p>前方から、黒いローブを身にまとった一団が、静かにこちらへ歩いてくるのが見えた。司祭たちである。その場の空気が、スッと重くなる。</p>
-<p>ツァラトゥストラは弟子たちに目配せし、シーッと人差し指を口に当てて、こう囁いた。</p>
-<p>「皆さん、静かに。あれは司祭たちです。たとえ彼らが私のアンチであろうとも、ここは穏便にいきましょう。バトルは厳禁、武器（口論）は鞘に収めておくべきです」</p>
-<p>彼は平静を装っているが、その目は完全に「うわ、面倒くさい古参プレイヤーの一団に遭遇した…」と語っていた。</p>
-<p>「彼らの中にも、ある意味で英雄的な人はいるのです。彼らの多くは、苦しみすぎた。あまりにも多くの苦行クエストをこなしすぎた結果、他者を苦しめることでしか自分の存在価値を見出せなくなってしまった、哀れな人たちなのです」</p>
-<p>&lt;弟子A&gt; 「（なんかもう悪口が始まってないか…？）」</p>
-<p>「彼らは邪悪な敵です。特に、あの謙虚さを装った態度ほど、復讐心に満ちたものはありません。そして、彼らにうかつに喧嘩を売ると、こちらの精神まで汚染されます。関わらないのが一番です」</p>
-<p>「しかし、ですね。私の血は彼らの血と縁続きなのです。元をたどれば、同じサーバーの出身みたいなものですから。ですから、私の血が、彼らの血の中においてもリスペクトされることを望みます。……まあ、向こうは私を破門したんですけどね！」</p>
-<p>最後の最後で本音がダダ漏れである。</p>
-<p>一行が司祭たちとすれ違い、その姿が見えなくなった後、ツァラトゥストラは急に「うぐっ…！」と胸を押さえて苦しみだした。</p>
-<p>&lt;弟子B&gt; 「ツァラトゥストラ様！？ 大丈夫ですか！？」</p>
-<p>しかし、彼は数秒で復活すると、天を仰いで語り始めた。その苦痛は、どうやら持病の「アンチへの憎悪が再発する病」だったらしい。</p>
-<p>「ああ、私はこの司祭たちを哀れみます！ 彼らは私のセンスに全く合わない！ まあ、私が人間社会に戻ってきてからというもの、そんな些細なことはどうでもよくなりましたが！」</p>
-<p>どの口が言うのか。</p>
-<p>「しかし、私は彼らと共に苦しみ、そして今も苦しんでいる！ 彼らは囚人です！ 烙印を押された者たちなのです！ 彼らが『救い主』と呼ぶ伝説のプレイヤーが、彼らをガチガチの規約で縛り付けてしまったのです！」</p>
-<p>「偽りの価値観（クソみたいなゲームバランス）！ 妄想の言葉（意味不明なアップデート告知）！ ああ、誰か彼らを、あの『救い主』という名のクソ運営から救い出してくれればいいのに！」</p>
-<p>&lt;仮想コメント&gt; 「出たー！ 運営批判！」</p>
-<p>「かつて彼らは、荒れ狂うネットの海を漂流しながら、ある島に上陸すれば救われると信じていました。しかし見よ！ それは島ではなく、眠れる巨大レイドボスだったのです！」</p>
-<p>「偽りの価値観と妄想の言葉。これらは我々人間にとって最悪のモンスターです。その腹の中では、運命という名の次のアップデートが、ただ静かに眠り、待ち続けているのです」</p>
-<p>「しかし、ついにそれは目覚め、腹の上で呑気にギルドハウスを建てていた者たちを、根こそぎ食らい尽くし、飲み込むのです！」</p>
-<p>「ああ、この司祭たちが建てたギルドハウスを見てください！ 彼らは自分たちの、甘ったるいお香の匂いが充満した洞窟を『教会』と呼んでいます！」</p>
-<p>「ああ、この偽りの照明（サイリウム）！ この淀んだ空気！ ここでは、魂がその高みへと飛翔することなど許されません！ 天井、低いですからね！」</p>
-<p>&lt;仮想コメント&gt; 「物理的な問題だった」</p>
-<p>「それどころか、彼らの信仰はこう命じるのです。『罪人どもよ、ひざまずいてこのクソ長い階段を上ってこい！』と。真に、私ならエレベーターを設置しますね」</p>
-<p>「まったく、私は彼らの、あの敬虔ぶった歪んだ目を見るくらいなら、もっと堂々と恥知らずな人間を見ている方がマシです」</p>
-<p>「一体誰が、こんな薄暗い洞窟と苦行の階段なんてものを創り出したのか？ それは、光の世界から身を隠し、青く澄み渡る空を恥じた、根暗な連中ではありませんか？」</p>
-<p>「そして、いつの日か、澄み渡る空が、壊れた天井から再び差し込み、廃墟となった壁の草や赤いケシ（雑草）の上に降り注ぐ時！ その時こそ、私はこの神の家（だった場所）へと、再び心を向けてもいいでしょう。まあ、リフォーム代によりますが」</p>
-<p>&lt;仮想コメント&gt; 「結局カネかよw」</p>
-<p>「彼らは、自分たちに都合が悪く、苦痛を与えるものを『神』と呼びました。そして正直に言って、彼らの崇拝には多くの英雄的な性質がありました。認めましょう。あの苦行は、常人には真似できません」</p>
-<p>「ですが、彼らは人間を十字架に磔にすることでしか、自分たちの神を愛する方法を知らなかったのです！ なんというヤンデレ愛！」</p>
-<p>「彼らは死体として生きようと考え、自分たちの死体を黒いローブで覆い隠した。彼らの言葉からは、今でも死体安置所の不快な香りがプンプンします」</p>
-<p>「そして、彼らの近くに住む者は、まるで黒い沼の近くに住むようなものです。そこからは、ヒキガエルが、その甘ったるい声で延々と歌を歌っているのです。Discordのボイチャで愚痴を垂れ流す連中のように」</p>
-<p>「彼らは私に、もっとマシな歌を歌うべきです。そうすれば、私も彼らの『救い主』を信じることを学んであげましょう。彼の弟子たちは、もっと救われた顔をすべきです！ みんな顔が死んでるじゃないか！」</p>
-<p>&lt;仮想コメント&gt; 「顔採用w」</p>
-<p>「私は彼らが裸であるのを見たい。アバターじゃなくて、ありのままの姿を見せろと。なぜなら、美しさ（圧倒的な真理）だけが、真の懺悔を説くことができるからです。あんなに着込んで悲しみを覆い隠した姿で、一体誰を説得できるというのですか！」</p>
-<p>「まったく、彼らの『救い主』自身、自由で開かれた第七天国（最高のサーバー環境）から来たわけではないのです！ 真に、彼ら自身、認識という名の絨毯（最高のスペックのPC）の上を歩んだことすらないのです！」</p>
-<p>「あの『救い主』たちの精神は、バグだらけでした。しかし、彼らはその全てのバグに、『神の仕様』という名の妄想を上書きして誤魔化したのです！」</p>
-<p>「彼らの精神は、憐憫という名の感情の海で溺れました。そして、彼らが同情心でパンパンに膨れ上がり、溢れかえる時、常に大きな愚かさ（クソみたいな判断）がその上にプカプカと浮かんでいたのです」</p>
-<p>「彼らは熱心に、そして大声で叫びながら、自分たちの信者（羊の群れ）を一本の橋の上へと駆り立てました。まるで未来へ続く道がそれ一本しかないかのように！ 真に、これらの羊飼い（ギルマス）たちも、まだ羊（一般プレイヤー）の中に属していたのです！」</p>
-<p>&lt;仮想コメント&gt; 「ギルマスも所詮はプレイヤー」</p>
-<p>「これらの羊飼いたちは、小さな精神（狭い視野）と広大な魂（無駄にデカいプライド）を持っていました。しかし兄弟たちよ、これまでで最も広大だった魂でさえ、なんと小さな国だったことでしょう！」</p>
-<p>「彼らは自分たちが歩んだ道に、血の印を書き記しました。そして彼らの愚かさは、『血によって真理は証明されるのだ！』と教えたのです。この攻略法のために何人もの仲間が犠牲になったんだ、だから正しいんだ、と」</p>
-<p>「しかし、血は真理の最悪の証人です。血は、最も清らかな教えでさえ、妄想と心の憎悪へと毒するのです。要するに、ただの無能の証明です」</p>
-<p>「そして、もし誰かが自分の教えのために火の中を歩む（アカウントを犠牲にする）としても、それが何を証明するというのですか！ 真に、自分自身の内なる炎から、自分自身の教えが生まれることの方が、よっぽど重要なのです！」</p>
-<p>「蒸し暑い心（熱すぎる情熱）と冷たい頭（冷静な思考）。この二つが合致する時、突風、すなわち『救い主』と呼ばれるカリスマプレイヤーが生まれるのです」</p>
-<p>「しかし、兄弟たちよ！ これまでにも、民衆が『救い主』と呼んだ、これらの心を奪う突風よりも、はるかに偉大で高貴な生まれの者たちが存在したのです！」</p>
-<p>「そして、兄弟たちよ！ もし君たちが本当に自由への道を見つけたいのであれば、すべての『救い主』たちよりも偉大な者たちから、さらに救われる必要があるのです！ つまり、私についてきなさいということです！」</p>
-<p>最後にちゃっかり自分を宣伝するツァラトゥストラ。</p>
-<p>「未だかつて、『超人』は存在しませんでした。私は、これまでで最大と言われた人間も、最小の人間も、両方とも裸で見てきました」</p>
-<p>「彼らは、まだ互いにあまりにも似すぎています。真に、私が見出した最大の人間でさえ……あまりにも、人間的すぎたのです！」</p>
-<p>ツァラトゥストラはそう語り終えると、ビシッとポーズを決めた。その顔は、全人類の真理を自分だけが知っていると確信しきった、最高のドヤ顔であった。</p>
-<p>&lt;弟子C&gt; 「（あの、ツァラトゥストラ様……さっきから独り言が全部声に出てますし、顔がすごいことになってますけど……）」</p>
-<p>弟子は、そっと目を逸らしたのであった。</p>
+                        <h2 id="司祭とかいうガチ宗教勢について"><a class="header" href="#司祭とかいうガチ宗教勢について">司祭とかいうガチ宗教勢について</a></h2>
+<p>ある日のこと、ツァラトゥストラは彼の熱心なフォロワー（弟子）たちに、そっと合図を送ると、コソコソとこう語り始めた。まるで、ヤバい陰謀論でも打ち明けるかのように。</p>
+<p>「皆さん、いいですか。あそこにいるのが『司祭』と呼ばれる人たちです。ぶっちゃけ、僕の思想とは真逆の敵なんですけど、まあまあ、ここは穏便にいきましょう。レスバを仕掛けるのは禁止です。剣は鞘に収めておいてください」</p>
+<p>と、自分はレスバ大好きなくせに、弟子には自制を求めるツァラトゥストラであった。</p>
+<p>「彼らの中にも、まあ、英雄的な人はいるんですよ。多くは、そりゃあもう、めちゃくちゃ苦しんできた人たちです。だからこそ、その反動で他人を苦しめようとしちゃうんですよねぇ。困ったもんです」</p>
+<p>「彼らは邪悪な敵です。特に、彼らの『謙遜』ほどタチの悪いものはありません。『私なんて、取るに足らない存在です…』とか言ってるやつほど、内心メラメラと復讐の炎を燃やしているんですよ！ そして、そういう人にうっかり喧嘩を売ると、こっちまで汚れちゃうんで、スルー推奨です」</p>
+<p>「とはいえ、僕の血も、彼らの血と繋がってはいるんですけどね。僕のご先祖様を辿れば、ああいうのにハマってた人もいたかもしれないし。なので、一応、彼らの血の中に流れる僕の血の分だけは、リスペクトしておこうと思います（超上から目線）」</p>
+<p>一行が司祭たちの横を通り過ぎた後、ツァラトゥストラは急に「うっ…」と胸を押さえて苦しみだした。しかし、その苦痛は長くは続かず、彼はすぐに弟子たちに向き直って語り始めた。どうやら、言いたいことが我慢できなくなったらしい。</p>
+<p>「あーもう無理！ やっぱりあの人たち、見てるだけでメンタルやられるんですけど！ 彼ら、本当に哀れですよ。僕の趣味にも全く合いませんし。まあ、僕がこの10年ぶりに人間社会に戻ってきて以来、そんな個人的な趣味なんて、些細なことですけどね！」</p>
+<p>「でも、僕は彼らと共に苦しみ、そして苦しんできたんです！ 彼らは僕にとって、囚われの身であり、烙印を押された奴隷なんです！ 彼らが『救い主』と呼んでいる“推し”に、ガッチガチに束縛されてるんですよ！」</p>
+<p>「『偽りの価値観』と『妄想の言葉』っていう鎖にね！ ああ、誰か彼らをその『救い主』とかいうヤバい推しから救い出してあげてくれませんかねぇ！？」</p>
+<p>&lt;弟子A&gt; 「（さっきスルー推奨って言ってたのに、めっちゃディスるじゃん…）」</p>
+<p>「彼ら、かつては荒れ狂う海（人生）を漂流しながら、どこか安全な島に上陸できるって信じてたんですよ。でも見てくださいよ！ その島だと思ってた場所、実は眠っている巨大な怪物の背中だったんです！」</p>
+<p>「『偽りの価値観』と『妄想の言葉』。これこそが、我々人類にとって最悪の怪物です。その怪物の腹の中では、運命がぐっすり眠って、出番を待っているんです」</p>
+<p>「でも、そいつはついに目を覚まし、自分の背中の上で呑気に家を建ててた連中を、食らい尽くし、飲み込んじまうんです！」</p>
+<p>「ああ、見てくださいよ、あの司祭たちが建てた小屋（コミュニティ）を！ 彼らは自分たちの甘ったるい匂いが充満した洞窟を、『教会』とか呼んでるんですよ。ちゃんちゃらおかしいですよね！」</p>
+<p>「ああ、この偽りの光！ この淀んだ空気！ こんな場所じゃ、魂（ポテンシャル）がその高みへと飛び立つことなんて、絶対に許されませんよ！」</p>
+<p>&lt;弟子B&gt; 「うわー、あの人、熱入ってきたな…」</p>
+<p>「それどころか、彼らの信仰はこう命じるんです。『罪人どもよ、ひざまずいてこの階段を登ってこい！』ってね。ドMにも程があるでしょ！」</p>
+<p>「正直言って、僕は彼らの、あの恥と敬虔さで歪んだ目を見るくらいなら、もっと堂々とした恥知らずを見てる方がマシですね」</p>
+<p>「一体誰が、あんな洞窟と懺悔の階段なんてものを作り出したんでしょうか？ それは、身を隠して、一点の曇りもない青空を見ることを恥じていたような、根暗な引きこもりたちじゃないですか？ （僕とは違うタイプの、ね！）」</p>
+<p>「そして、いつかその教会のぶ厚い天井がぶっ壊れて、澄み切った空が覗き込み、壊れた壁際に生えた雑草や赤いケシの花に光が降り注ぐ時が来たら…その時になって初めて、僕はあの神の家とやらに、もう一度心を向けてあげてもいいですけどね（超絶上から目線）」</p>
+<p>「彼らは、自分たちに逆らい、苦痛を与えるものを『神』と呼んだんです。マジでウケますよね。まあ、正直に言って、その崇拝っぷりには、ちょっと英雄的な気概も感じなくはないですけど」</p>
+<p>&lt;弟子C&gt; 「（ツンデレかよ…）」</p>
+<p>「そして、彼らは自分たちの神を愛する方法を、人間を十字架に磔にすること以外に知らなかったんですよ！ 愛が重すぎる！」</p>
+<p>「彼らは生ける屍として生きようと決めて、自分たちの体を黒く塗りつb…じゃなくて、黒い服で覆い隠したんです。彼らの言葉からは、いまだに死体安置所のイヤ〜な臭いがプンプンしてくるんですよね」</p>
+<p>「彼らの近くに住むのは、真っ黒な池のそばに住むようなもんです。そこからは、ヒキガエルが甘ったるい声で歌う歌が聞こえてくる…それが彼らの祈りの歌ですよ」</p>
+<p>「もっとマシな歌を歌ってほしいもんですね。そうすれば、僕も彼らの『救い主』とやらを信じることを学んであげますよ。彼の弟子たちも、もっと救われた顔をして見せるべきです！ 全然救われてないじゃん！」</p>
+<p>「僕は彼らが裸であるのを見たい。なぜなら、美しさだけが、人に心からの反省を促すからです。あんな覆い隠された悲しみで、一体誰を説得できるっていうんですか！」</p>
+<p>&lt;弟子D&gt; 「急に裸とか言い出したぞ、この人…」</p>
+<p>「断言しますけど、彼らの『救い主』自身、本当の自由と、自由の第七天国（最上階のVIPルーム）から来たわけじゃないんですよ！ 真に、彼ら自身も、認識の絨毯（最高の知恵）の上を歩いたことなんて一度もないんです！」</p>
+<p>「あの『救い主』たちの精神（OS）は、欠陥（バグ）だらけだったんです。でも、彼らはその全ての欠陥（バグ）に、自分たちの妄想、すなわち彼らが『神』と呼んだ都合のいい代物（パッチ）を当てて誤魔化したんですよ」</p>
+<p>「彼らの精神は、『憐憫』という名の沼に溺れてしまった。そして、彼らが憐憫でブクブクに膨れ上がって溢れ出す時、その水面にはいつも、一つの巨大な愚かさ（壮大な勘違い）がプカプカと浮かんでいたんです」</p>
+<p>「彼らは熱心に、そして叫びながら、自分たちの信者の群れを一本の橋の上へと駆り立てました。『未来へ続く道はこれしかないんだー！』ってね。笑わせますよね！ 断言しますが、これらの羊飼いたちも、まだまだ羊の群れの一員にすぎなかったんですよ！」</p>
+<p>「これらの羊飼いたちは、小さな精神（メモリ）と広大な魂（ストレージ）を持っていました。しかし、兄弟たちよ！ よーく考えてみてください。これまでで最も広大だとされてきた魂でさえ、なんとちっぽけな国（サーバー）だったことでしょう！」</p>
+<p>&lt;弟子E&gt; 「例えがどんどんIT寄りになってきてる…」</p>
+<p>「彼らは自分たちが歩んだ道に、血で印を書き記しました。そして彼らの愚かさ（バグだらけの思想）は、『血によって真理は証明されるのだ』と教えたんです」</p>
+<p>「しかし、言わせてもらいます！ 血は、真理の最悪の証人です！ 血は、最も清らかな教えでさえ、妄想と心の憎悪へと変えてしまう毒なんです！」</p>
+<p>「それに、もし誰かが自分の教えのために火の中に飛び込んだとして、それが一体何を証明するっていうんですか！ 真に重要なのは、自分自身の内なる炎から、自分自身の教えを生み出すことでしょうが！」</p>
+<p>「蒸し暑い心（熱狂的な感情論）と、冷たい頭（冷静な思考の欠如）。この二つが合致する時、突風が生まれる。それこそが、彼らが『救い主』と呼ぶものの正体です！」</p>
+<p>「真に、民衆が救い主と呼んでもてはやした、これらの心を奪う突風なんかよりも、もっと偉大で高貴な生まれの人たちが存在しました。そして兄弟たちよ、もし君たちが本当に自由への道を見つけたいのであれば、あらゆる『救い主』どもから、さらに救われる必要があるのです！」</p>
+<p>「未だかつて、『超人』は存在しませんでした。僕はこれまで、最大の人間も、最小の人間も、両方とも裸で見てきましたからね」</p>
+<p>「彼らはまだ、互いにあまりにも似すぎている。真に、僕が今まで見た中で最も偉大だとされる人間でさえ、あまりにも人間臭すぎましたね！」</p>
+<p>と、ツァラトゥストラは、全てを知り尽くしたかのようなドヤ顔で、壮大な一人語りを締めくくったのであった。</p>
 
                     </main>
 
