--- a/reborn_007_Von_den_Verächtern_des_Leibes.html
+++ b/reborn_007_Von_den_Verächtern_des_Leibes.html
@@ -175,44 +175,39 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h3 id="4-肉体こそが至高-陰キャ哲学オタク意識高い系を論破する"><a class="header" href="#4-肉体こそが至高-陰キャ哲学オタク意識高い系を論破する"><strong>4. 肉体こそが至高！ 陰キャ哲学オタク、意識高い系を論破する</strong></a></h3>
-<p>ツァラトゥストラは、綱渡り芸人が慌てて準備を始めたのを横目に、さらに演説のボルテージを上げていく。どうやら彼は、群衆の注目が自分（と、自分の有り難い哲学）に集まっていると、本気で信じているようである。</p>
-<p>（フフフ……僕の言葉の力、恐るべし……！ さあ、次はどいつらを啓蒙してやろうか……）</p>
-<p>彼の視線は、市場の隅で腕を組み、いかにも「俺たちは他の愚民とは違う」というオーラを放つ、痩せぎすで顔色の悪いインテリ集団に向けられた。</p>
-<p>「そこの！ 肉体を蔑むインテリ気取りの皆さん！ 今から君たちに、とっておきの真実を告げてあげましょう！ あ、別に君たちに僕の哲学を学び直せとか、宗旨替えしろとか、そんな面倒なことは言いません。ただ、一言。――さっさと自分の身体に別れを告げて、黙って消え失せろ！」</p>
-<p>&lt;群衆A&gt; 「うわ、過激！」
-&lt;群衆B&gt; 「あの人たち、なんか怒らせることしたっけ？」</p>
-<p>「『私は身体であり、魂である』……と、子どもは素直に語ります。そうでしょう？ なぜ我々も、子どものように正直に語ってはならないのでしょうかねぇ？」</p>
-<p>ツァラトゥストラは一旦そこで言葉を切り、うっとりとした表情で天を仰ぐ。</p>
-<p>「しかし！ 我々のような『目覚めた者』、つまり『知る者』はこう言うのです！ **『私は、全身全霊これ身体（からだ）！ それ以外のナニモノでもない！』**と！ 君たちがありがたがっている『魂』なんてものは、身体っていう超高性能ハードウェアにおける、ただのラベル（名称）に過ぎないんですよ！」</p>
-<p>「身体こそが『偉大なる理性』！ 一つの意味を持つ多様性（マルチタスク・プロセッサー）！ 戦争と平和（ファイアウォールとOSアップデート）！ 群れと牧者（サーバーとクライアント）なのです！」</p>
-<p>「君たちが『精神（スピリット）』とか呼んでる、そのちっぽけな理性！ それも結局は、君たちの身体の道具（ガジェット）にすぎません！ 『偉大なる理性』である身体様が、暇つぶしに弄ぶ、ちっぽけなオモチャなんですよ！」</p>
-<p>&lt;インテリ集団A&gt; 「な、なんだと……我々の知性をオモチャ呼ばわりか！」
-&lt;インテリ集団B&gt; 「失敬な！ 我々の精神活動こそが人間を人間たらしめているのだ！」</p>
-<p>「君たちは『私（ワタシ）』と言い、その言葉を誇りに思っている！ だがしかし！ 君たちが断固として信じようとしない、もっと偉大な存在がある！ それが君たちの身体と、その『偉大なる理性』だ！ そいつは『私（ワタシ）』なんてイチイチ言わない。ただ、<strong>『私（ワタシ）』を動かす（・・・・）</strong>。クールでしょう？」</p>
-<p>「感覚が感じること、精神が認識すること、それ自体にゴールなんてありません。でも感覚と精神は、さも自分たちが最終ゴールであるかのように君たちを騙そうとする。まったく、虚栄心の塊ですね！」</p>
-<p>「感覚と精神は、しょせん道具であり、遊び道具（ガジェット）！ その背後には、さらに『自己（セルフ）』が存在するのです！ 『自己』は、感覚という名のカメラを使い、精神という名のマイクで音を拾う！ 君の意識（ワタシ）は、ただのインターフェースにすぎないんですよ！」</p>
-<p>&lt;群衆C&gt; 「セルフ……？」「自己啓発セミナーが始まったぞ」</p>
-<p>「『自己』は常に耳を傾け、探求する！ 比較し、克服し、征服し、破壊する！ そう、それこそが支配者！ 君の意識（ワタシ）を意のままに操る、真の支配者なのだ！」</p>
-<p>「君たちの思考や感情の背後にはね、私の兄弟よ、強力な支配者、未知の賢者が立っているのです。そいつの名は『自己』！ それは君の身体の中に住んでいる。いや、君の身体そのものが、その賢者なのだ！」</p>
-<p>――もはや何を言っているのか、ツァラトゥストラ本人も分かっているか怪しい。</p>
-<p>「君たちの身体の中には、君たちが絞り出した最高の知恵よりも、もっと多くの理性があるんですよ！ なんなら、君の身体が『この最高の知恵、今必要だわー』って思うから、君は必死で考えるんです！ 全部、身体サマのおかげなんですよ、分かります！？」</p>
-<p>「君の意識（ワタシ）が『うおお！俺、天才的なこと思いついた！』ってドヤ顔で跳ね回ってるとき、君の身体（自己）は『はいはい、ワロスワロス。それ俺が仕向けたんだけどな』って鼻で笑ってるんですよ！」</p>
-<p>&lt;群衆D&gt; 「性格悪いな、そいつ…」
-&lt;群衆E&gt; 「俺の身体、そんなこと考えてたのか…」</p>
-<p>「『自己』が君の意識（ワタシ）に言うんです。『おい、ここで苦しめ』と！ すると君は苦しんで、『どうすればこの苦しみから逃れられるんだー！』って必死で考える！ まさにそれこそが、『自己』が君に考えさせるための策略なのです！」</p>
-<p>「『自己』が君の意識（ワタシ）に言うんです。『おい、ここで喜べ』と！ すると君は喜んで、『どうすればもっと頻繁に喜べるかなー！』って必死で考える！ まさにそれこそが、『自己』が君に考えさせるための策略なのです！」</p>
-<p>ツァラトゥストラは再び、例のインテリ集団にビシッと指を突きつけた。</p>
-<p>「だーかーらー！ 肉体蔑視者の皆さん！ 君たちが蔑むこと、それ自体が、君たちの身体（自己）が作り出した『尊重』から生まれてるって、まだ分からないんですか！？ 価値とか意志とか、そういう概念を創造（クリエイト）した大元は、君たちの身体（自己）なんですよ！」</p>
-<p>「創造する『自己』は、自らのために『尊重』と『蔑視』を創り、自らのために『歓喜』と『苦悩』を創った！ 創造する身体は、自らの意志を実現するための手先として、君たちの『精神』を創ったんです！」</p>
-<p>「君たちはその愚かさと蔑みの中で、身体をコケにしてるつもりでしょうが、結局は君たちの『自己』に仕えているだけの哀れな奴隷なんですよ！ しかもハッキリ言わせてもらうと、君たちの『自己』はもう死にたがっている！ 生から背を向けているんです！」</p>
-<p>&lt;インテリ集団A&gt; 「なっ……！ 我々の自己が死を望んでいるだと！？」</p>
-<p>「そうですよ！ 君たちの身体（自己）は、もはや最も好むこと、すなわち『自らを超えて創造（クリエイト）すること』ができなくなってしまった！ それが唯一の情熱だったのに、もう手遅れだ！ だから君たちの『自己』は滅び去ろうとしている！ そして、だからこそ君たちは肉体蔑視者になったんですよ！ なぜなら、君たちはもう、自分自身を超えて何かを創造（クリエイト）することができないからだ！」</p>
-<p>「君たちが今、この生と地上にブチ切れているのは、それが理由だ！ 君たちのその斜に構えた蔑みの目には、隠しようもない『嫉妬』が燃えている！ 本当は、生き生きと創造（クリエイト）している奴らが羨ましくて仕方ないんでしょう！？」</p>
-<p>ツァラトゥストラは、完全に論破したと確信し、勝利の笑みを浮かべた。</p>
-<p>「言っておきますが、私は君たちのようなオワコンの道は歩みません！ 君たちは、私が目指す『超人』への架け橋にすらなれない！ ただの障害物（モブキャラ）だ！」</p>
-<p>――ツァラトゥストラは、ビシッと天に指を突きつけ、そう言い放ったのであった。</p>
-<p>市場は、そのあまりに一方的で、かつ難解な演説に、ただただ静まり返っていた。</p>
+                        <h2 id="悲報意識高い系肉体をディスりすぎて逆に本体ラスボスから見放されるの巻"><a class="header" href="#悲報意識高い系肉体をディスりすぎて逆に本体ラスボスから見放されるの巻">【悲報】意識高い系、肉体をディスりすぎて逆に本体（ラスボス）から見放されるの巻</a></h2>
+<p>さて、市場での演説が華麗にスベり、綱渡り芸人に話題を全部持っていかれた我らがツァラトゥストラさん。しかし、彼の心は折れていなかった。むしろ、燃料が投下されたかのように、さらに哲学トークのエンジンが温まっていたのである。この男、逆境に強いのか、ただ空気が読めないだけなのか。</p>
+<p>彼は次に、いかにも「俗世の快楽には興味ありません」みたいな顔をして、青汁でも飲んでいそうな禁欲主義者、いわゆる「肉体蔑視者」たちに目をつけた。そして、彼らに向かって、またしても唐突に語りかけ始めたのである。</p>
+<p>「どーもー、肉体蔑視者（アンチ・ボディ）の皆さん！ 君たちに、僕から言いたいことがあるんです。別に、僕の教えに従って考えを改めろとか、今日から筋トレしろとか、そんなことは言いません。ただ、一言だけ。君たちは、さっさとその肉体に『今までお世話になりました！』って別れを告げて、黙っててくれませんかね？」</p>
+<p>&lt;ネット民A&gt; 「出たｗｗｗいきなり喧嘩腰ｗｗｗ」
+&lt;ネット民B&gt; 「アンチ・ボディは草」</p>
+<p>「『僕はカラダであり、魂でもあるんだよね』って、子どもは平気で言いますよね。なんで、君たちはそんな風に素直に言えないんですか？ あ？」</p>
+<p>「でも、僕みたいな『目覚めちゃった人』、つまり『知ってる人』はこう言います。『俺は、全身全霊、100%肉体（ボディ）である！ それ以外の何者でもない！』とね。君たちがありがたがってる『魂（ソウル）』なんてのは、その肉体（ボディ）に付属してる何かの機能に付けられた、ただのカッコつけたタグ名（ラベル）に過ぎないんですよ！」</p>
+<p>「君たちの肉体（ボディ）こそが、実は『偉大なる理性（グレート・マザーボード）』なんです。一つの意味（目的）を持つ多様なパーツ（メモリ、CPU、グラボ）の集合体。あるときは戦争（筋トレ）し、あるときは平和（休息）を求める。それは群れ（細胞全体）であり、牧者（司令塔）でもあるんです！」</p>
+<p>「で、君たちが『精神（スピリット）』とか呼んでる、そのちっぽけな理性。兄弟よ、それも君たちの肉体（ボディ）の道具にすぎません。偉大なる理性（グレート・マザーボード）から見れば、ちっちゃなツール、マウスやキーボードみたいなもんですよ。遊び道具なんです！」</p>
+<p>&lt;ネット民C&gt; 「PCの例え、オタク特有で好き」
+&lt;ネット民D&gt; 「つまり俺の精神はロジクールの安物マウス…？」</p>
+<p>「君たちは『私（I）』と言って、その言葉を誇らしげに掲げますよね。でもね、君たちが信じようとしない、もっと偉大な存在があるんですよ。それが、君たちの肉体（ボディ）とその『偉大なる理性（グレート・マザーボード）』です。そいつは『私』なんて言いません。ただ黙って『私』を動かす（・・・・）んです！」</p>
+<p>「感覚が感じること、精神が認識すること。それ自体が最終ゴールじゃないんです。でも、感覚と精神は、君たちに『俺たちが最終ゴールだから！』って必死に説得してくる。まったく、虚栄心の塊ですよ、あいつらは」</p>
+<p>「感覚と精神は、あくまで道具であり、遊び道具。その背後には、さらに『自己（ザ・セルフ）』が存在するんです。真のプレイヤーですよ。その『自己』は、感覚という名の目（カメラ）を使って探し、精神という名の耳（マイク）を使って聞き耳を立てているんです」</p>
+<p>「『自己』は常に聞いて、探している。比較し、乗り越え、征服し、破壊する。そいつこそが支配者であり、君たちのちっぽけな『私』の、さらにその上の支配者（マスター）なんです！」</p>
+<p>&lt;ネット民-E&gt; 「俺の背後にマスターがいたのか…」
+&lt;ネット民F&gt; 「中二病が中二病を語る地獄」</p>
+<p>「君たちの思考や感情の背後にはね、兄弟よ、強力な支配者、未知の賢者がいるんです。そいつの名前は『自己』。君たちの肉体の中に住んでいて、ていうか、君たちの肉体そのものが『自己』なんです！」</p>
+<p>「君たちの肉体の中には、君たちが持つ最高の知恵よりも、もっと多くの理性（ロジック）が詰まってる。そもそも、君たちの肉体が、なぜ君たちのその『最高の知恵』とやらを必要としているのか、誰が知ってるっていうんですか？ 全部、肉体の都合なんですよ！」</p>
+<p>「君たちの『自己』は、君たちの『私』とそのプライド高き跳躍を笑ってますよ。『思考のジャンプだの飛行だの、それが俺にとって何だって言うんだ？』ってね。『そんなもん、俺の目的にたどり着くための、ただの回り道だ。俺は「私」を操る手綱であり、そのコンセプトを囁くプロンプターにすぎん』と、そう自分に語っているんです」</p>
+<p>「『自己』が『私』に言うんです。『ここで痛みを感じろ！』と。すると『私』は苦しんで、『どうすればもう苦しまなくて済むんだ？』って必死に考える。ほらね、まさにそのために、『私』は考えるように仕向けられてるんですよ！」</p>
+<p>&lt;ネット民G&gt; 「完全に運営の手のひらの上じゃん」</p>
+<p>「『自己』が『私』に言うんです。『ここで喜びを感じろ！』と。すると『私』は喜んで、『どうすればもっと頻繁に喜べるんだ？』って必死に考える。ほらね、まさにそのために、『私』は考えるように仕向けられてるんですよ！」</p>
+<p>「肉体蔑視者の皆さん、一言いいですか。君たちが『肉体なんて下劣だ！』って蔑むこと、それ自体が君たちの『尊重』を生み出してるんですよ。一体、何が『尊重』で、何が『蔑視』で、何に『価値』があって、何を『意志』とするか、それを創造（クリエイト）したのは誰だと思います？」</p>
+<p>「創造主である『自己』ですよ！ そいつが自分自身のために、尊重と蔑視を創り、喜びと苦悩を創ったんです。創造する肉体（ボディ）が、自らの意志の手先として、精神（スピリット）を創り出したんです！」</p>
+<p>「君たちのその愚かさや蔑視の中にあっても、肉体蔑視者の皆さん、君たちは君たちの『自己』に仕えちゃってるんですよ。言っておきますけどね、君たちの『自己』自身が、もう死にたがってるんです。生から背を向けてるんです」</p>
+<p>&lt;ネット民H&gt; 「え、俺のマスター死にたがってんの！？」</p>
+<p>「そいつはもう、自分が一番好きなこと、つまり『自分自身を超えて創造（クリエイト）すること』ができないんです。それが一番好きなことで、全情熱だったのに。でも、もう手遅れ。だから、君たちの『自己』は滅び去ろうとしているんですよ、肉体蔑視者の皆さん」</p>
+<p>「君たちの『自己』が滅びに向かっているから、君たちは肉体蔑視者になったんです！ だって、もう自分を超えて創造（クリエイト）することができないんですから！」</p>
+<p>「だから君たちは今、生とこの地上にブチ切れてる。君たちのその蔑みの、歪んだ眼差しの奥には、自覚なき嫉妬があるんですよ。創造（クリエイト）できる者たちへのね！」</p>
+<p>「というわけで！ 僕は君たちの道は行きませんよ、肉体蔑視者の皆さん！ 君たちは僕にとって、『超人（スーパーマン）』への橋（ブリッジ）にはなれませんので！ 残念でした！」</p>
+<p>ツァラトゥストラは、ビシッと指を突きつけ、そう言い放ったのであった。周りに誰もいなかったが、彼の心の中では万雷の拍手が鳴り響いていたに違いない。まことに、めでたい男である。</p>
 
                     </main>
 
