--- a/reborn_011_Vom_Baum_am_Berge.html
+++ b/reborn_011_Vom_Baum_am_Berge.html
@@ -175,65 +175,55 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h3 id="厨二病意識高い系青年ガチ勢おじさんにエンカウントして病むあるある"><a class="header" href="#厨二病意識高い系青年ガチ勢おじさんにエンカウントして病むあるある"><strong>【厨二病】意識高い系青年、ガチ勢おじさんにエンカウントして病む【あるある】</strong></a></h3>
-<p><strong>4. 山の木陰でポエムを詠う</strong></p>
-<p>ツァラトゥストラは、市場での華麗なる演説（ただし、誰にも聞いてもらえなかった）の後、満足げに町を散策していた。彼の目は、例の綱渡りショーの最中に、そそくさと人混みから離れていった一人の若者をロックオンしていた。</p>
-<p>（フン、俺様の有り難いお言葉から逃げるとは、さてはアンチだな？ それとも、俺の放つオーラに気圧されたか？ どっちにしろ、俗物めが）</p>
-<p>完全に被害妄想である。</p>
-<p>その日の夜、ツァラトゥストラは「まだら牛」とかいう、なんとも言えないネーミングセンスの町を取り囲む山々を一人で散歩していた。（なぜ『まだら牛』なんだ…？ センスが壊滅的すぎるだろ…）などと、町の名前にまで心の中でケチをつけながら歩いていると、見よ！ あの若者を発見したではないか！</p>
-<p>若者は一本の木にもたれかかり、死んだ魚のような目で谷を眺めていた。いかにも「俺、今、世界と自分について悩んでます」的なエモい雰囲気を醸し出している。</p>
-<p>（チャンス！）</p>
-<p>ツァラトゥストラは、獲物を見つけた肉食獣のごとく、音もなく若者に忍び寄った。そして、若者がもたれかかっている木に、まるで旧知の友人に触れるかのようにそっと手を置き、唐突に語りかけた。完全に不審者である。</p>
-<p>「もし私が…この木をこの手で揺さぶろうとしても、それは不可能でしょうな…」</p>
-<p>若者「（ビクッ！？）」</p>
-<p>突然すぐそばからおっさんの声が聞こえ、若者の肩が跳ねた。</p>
-<p>「しかし！ 我々には見えざる風（インビジブル・ウィンド）が、この木を苦しめ、意のままにねじ曲げる！ そう！ 我々は目に見えない手によってこそ、最も激しくねじ曲げられ、苦しめられる運命（さだめ）にあるのですッ！」</p>
-<p>若者は驚いて飛び上がり、声の主を見た。
-「げっ、ツァラ様！？ なんでここに！？ まさに今、あなたのこと考えてたんですけど！？」</p>
-<p>エスパーかよ、と若者の顔に書いてある。ツァラトゥストラは、待ってましたとばかりにドヤ顔で答えた。</p>
-<p>「フッ…なぜ驚くのです？ 人間とは、木と同じなのですから」</p>
-<p>「高みへ！ 光あふれる場所へと手を伸ばそうとすればするほど！ その根はより強く大地へ！ 下へ！ 暗闇へ！ 深淵へ！ ――すなわち、『悪』へと伸びていくのですよッ！」</p>
-<p>「悪へ！？ そうだ、悪へ！」
-若者は雷に打たれたように叫んだ。「ど、どうしてアンタに俺の心がわかるんだ！？ 俺の抱える闇（ダークネス）を、なぜ見抜くことができたんですか！？」</p>
-<p>ツァラトゥストラはニヤリと口角を上げ、こう言った。
-「フフフ…ある魂というものは、まず持ち主がそれを『発明』しない限り、決して他人に見抜かれることはないのですよ」</p>
-<p>（要は、お前が自分で『俺、病んでるわー』って意識したから、俺にもわかっただけだ、バーカ）という心の声がダダ漏れである。</p>
-<p>「そうです！ 悪へ！」若者は再び叫んだ。もはやパニック状態である。</p>
-<p>「アンタの言う通りだ、ツァラトゥストラ！ 俺、もっと上に行こう、もっとスゴい人間になろうって思ってから、もう自分のことが信じられないんスよ！ しかも、周りの誰も俺を信じてくれない！ これ、一体どういうことなんですか！？」</p>
-<p>「俺、変わりすぎなんですよ！ 昨日の俺が、今日の俺を『ダッサ！』って全否定してくる！ 成長の階段を駆け上がろうとして、しょっちゅう踏み外してズッコケる！ どの段差も俺を受け入れてくれねぇ！」</p>
-<p>「やっとの思いで高みに着いたら、そこには誰もいない！ ポツンと一人！ 孤独の冷気が俺を凍えさせる！ 俺、一体てっぺんで何がしたかったんだっけ…？」</p>
-<p>「俺の中の『あいつらを見返してやりたい』っていう軽蔑と、『もっとスゴくなりたい』っていう憧れが、日に日にデカくなっていくんスよ！ 上に行けば行くほど、下にいる連中を『ザコが…』って見下しちまう！ そんな自分が一番嫌いなのに！ 一体、俺は高みで何を求めてるんだ！？」</p>
-<p>「必死に登ってる姿を、自分で『キモッ！』って笑っちまう！ ハァハァ言ってる息遣いもダサい！ 空を飛んでるヤツら（マジの鳥）にさえ嫉妬する！ あーもう！ 高みにいるって、マジで疲れるんスよ！」</p>
-<p>ここで若者は言葉を失い、うなだれた。完全に心が折れている。ツァラトゥストラは、そんな若者の横で、再び木を眺めながらポエムを再開した。人の話を聞いているようで聞いていない。</p>
-<p>「この木は…山頂に孤独に立っている。人間や動物なんぞ、遥か下に見下ろしてな」</p>
-<p>「そして、もしこの木が喋ろうとしても、それを理解できる者は誰もいないでしょう。それほど高く、伸びてしまったのですから」</p>
-<p>「今、この木は待っている…ひたすらに待ち続けている…。一体、何を待っているのか？ それは雲の玉座にあまりにも近い。おそらく…天から放たれる最初の『稲妻』を待っているのでしょうなァ！」</p>
-<p>ツァラトゥストラが言い終えるやいなや、若者は激しい身振りで叫んだ。
-「そうだ！ ツァラトゥストラ、アンタは真実を語っている！ 俺は高みを目指した時から、心のどこかで『誰か俺をぶっ壊してくれ！』って願ってたんだ！ アンタこそが、俺が待っていた『稲妻』だったんだ！」</p>
-<p>「見ろよ！ アンタが現れてから、俺のちっぽけなプライドなんてズタボロだ！ アンタへの嫉妬が！ 憧れが！ 俺を破壊したんだあああああ！」</p>
-<p>そう言って、若者は子どものように激しく泣きじゃくった。面倒くさいやつである。ツァラトゥストラは、やれやれといった感じで若者の肩に腕を回し、一緒に歩き始めた。</p>
-<p>そして、しばらく二人で歩いた後、ツァラトゥストラの有り難い説法タイムが始まった。</p>
-<p>「心が引き裂かれそうですな。あなたのその目、言葉以上にあなたの危険（ヤバさ）を私に物語っていますよ」</p>
-<p>「あなたはまだ、自由ではない。いまだ『自由』を探し求めているにすぎない。その探求が、あなたを夜も眠れないほどの過労状態にしているのです」</p>
-<p>「あなたは自由な高みへと向かおうとし、あなたの魂はキラキラした星々に憧れている。しかし！ あなたの中にいる悪い衝動（ダーク・インパルス）もまた、『自由』を渇望している！」</p>
-<p>「あなたの心の中の荒ぶる野良犬どもが、自由を求めて吠えている！ あなたの理性が『もう真面目に生きるのはやめだ！』と全ての牢獄をぶっ壊そうとする時、そいつらは地下室で歓喜の雄叫びをあげるのです！」</p>
-<p>&lt;若者の心の声&gt; （野良犬…？ 地下室…？ このおっさんの比喩、いちいち物騒だな…）</p>
-<p>「あなたはまだ私にとって、自由を夢見る囚人だ。ああ、そういう囚人の魂は、賢くはなるが、同時に狡猾で悪辣にもなる」</p>
-<p>「解放された精神は、まず自分自身を浄化（デトックス）せねばなりません。多くの牢獄の記憶と、心の腐敗物がまだあなたの中に残っている。その濁った目を、まずは洗浄する必要があるのです」</p>
-<p>「ええ、私はあなたの危険性を知っています。しかし！ 我が愛と希望にかけて、あなたに誓いましょう！ あなたの愛と希望を、投げ捨ててはなりませんぞ！」</p>
-<p>「あなたはまだ自分が『高貴』であると感じている。そして、あなたをウザいと思い、悪意の眼差しを送る他の連中もまた、あなたのことを『高貴なやつだ』と感じている。知っておくがいい。ガチ勢というものは、いつだってエンジョイ勢の邪魔になるものなのですよ」</p>
-<p>&lt;ネット民A&gt; 「出たｗ ガチ勢とエンジョイ勢の対立煽りｗ」
-&lt;ネット民B&gt; 「古戦場から逃げるな」</p>
-<p>「いわゆる『善人』にとっても、高貴な者は邪魔な存在です。そして、たとえ彼らがあなたのことを『良い人だね』と褒める時でさえ、それはあなたを厄介払いしたいだけなのです」</p>
-<p>「高貴な者は、新しい価値を創造し、新しい徳を生み出そうとする。対して『善人』は、古いものを望み、古いものが守られることだけを望む。要は、アップデートを拒む老害ですな」</p>
-<p>「しかし！ 高貴な者にとっての本当の危険は、『善人』になることではない！ 斜に構えたクソリプ野郎や、嘲笑するだけの傍観者、あるいは何でもかんでもぶっ壊そうとする破壊者（バーサーカー）になることです！」</p>
-<p>「ああ、私は知っていますよ。かつて抱いた最高の希望を失った、元・高貴な者たちをね。そして今、彼らはあらゆる高尚な希望を『そんなの綺麗事だ』と中傷している」</p>
-<p>&lt;若者の心の声&gt; （うわっ…耳が痛い…）</p>
-<p>「今や彼らは、短い快楽の中で厚かましく生き、その日暮らしの目標しか持たない。『精神もまた快楽である（考えるのだるいし、エモいのが一番っしょ）』――彼らはそう言った。その瞬間、彼らの精神の翼はへし折られたのです。今やそれは地を這いずり回り、他人の揚げ足取りをしながら汚れていく」</p>
-<p>「かつて彼らは『英雄（ヒーロー）』になろうと考えていた。今や彼らはただの『女好き（プレイボーイ）』だ。英雄という言葉は、彼らにとって悲しみと恐怖の対象でしかない」</p>
-<p>「しかし！ 我が愛と希望にかけて、あなたに誓う！ あなたの魂の中にいる『主人公（ヒーロー）』を、決して捨ててはなりませんぞ！」</p>
-<p>「あなたの最高の希望（ハイエスト・ホープ）を、聖なるものとして守り抜けッ！」</p>
-<p>――ツァラトゥストラは、ビシッとポーズを決めてそう語った。若者は、あまりの熱量に圧倒され、ただただ涙と鼻水を垂れ流しながら、コクコクと頷くことしかできなかったのであった。</p>
+                        <h2 id="意識高い系こじらせ青年ガチ勢にエンカウントする"><a class="header" href="#意識高い系こじらせ青年ガチ勢にエンカウントする">意識高い系こじらせ青年、ガチ勢にエンカウントする</a></h2>
+<p>ツァラトゥストラの目は、明らかに自分を避けている一人の若者をロックオンしていた。
+（ふーん、僕のことチラチラ見てるくせに、いざとなると逃げるタイプか。面倒くさそうだな……）
+そんなことを考えながら、彼がその晩、町「まだら牛」を囲む山道を一人で散歩していると、見よ、案の定その若者がいた。若者は木にもたれて座り込み、死んだ魚のような目で谷を眺めている。完全に病んでいる。</p>
+<p>ツァラトゥストラは、まるで獲物を見つけた蛇のようにヌルリと近づき、若者がもたれている木にそっと手を触れ、ポツリと語りかけた。</p>
+<p>「この木をですね、僕がこの手で物理的に揺さぶろうとしても、まあ無理ゲーなんですよね」</p>
+<p>しかし、と彼は続ける。</p>
+<p>「僕たちには見えない『病み』という名の風が、この木を苦しめ、好きなようにひん曲げている。そう、僕たち人間を一番ズタボロにするのって、いつだって目に見えない『何か』なんですよ」</p>
+<p>その言葉に、若者は「ビクッ！」と肩を揺らし、弾かれたように立ち上がった。
+「なっ……！ ツァラトゥストラさんの声が聞こえる……！ まさに今、あなたのことを考えていたのに！」</p>
+<p>ツァラトゥストラは内心（そりゃ僕が話しかけたからだろ）と思いつつも、ドヤ顔で答えた。
+「なぜそんなに驚くのですか？ ……まあ、人間なんて木と同じようなものですからね」</p>
+<p>「高みへ、光へと手を伸ばそうとすればするほど、その根っこはより強く大地へ、下へ、暗闇へ、深淵へ――つまり『悪（ダークサイド）』へと伸びていくんですよ」</p>
+<p>「そ、そうだ、悪（ダークサイド）へ！」若者は叫んだ。「ど、どうしてあなたは俺の魂（ソウル）を見抜くことができたんですか！？」</p>
+<p>ツァラトゥストラはフッと口角を上げて微笑んだ。
+「ある種の魂（ソウル）はですね、まず自分でそれをゼロから作り上げないと、決して見抜くことはできないものなんですよ（キリッ）」</p>
+<p>「悪（ダークサイド）へ！ そうだ！」若者は再び叫んだ。もはや完全にツァラトゥストラのペースである。</p>
+<p>「あなたの言う通りだ、ツァラトゥストラさん！ 俺、意識高くなって高みを目指そうとしてから、もう自分のことが信じられないんです！ 自己肯定感がダダ下がりで！ しかも誰も俺を信じてくれない！ これって一体どういうことなんですかね！？」</p>
+<p>「俺、変化が速すぎて！ 昨日の俺が今日の俺を全否定してくるんです！ 登山の途中で階段を二段飛ばしするみたいに！ でも、どの階段も『お前みたいな奴に踏まれてたまるか』って言ってくるんすよ！」</p>
+<p>「で、やっと高みに着いたと思ったら、いつも俺一人！ 誰も話しかけてこないし、孤独の冷気で凍え死にそうだし！ 俺、一体こんな場所で何を求めてるんすかね！？」</p>
+<p>「俺の『下々の者への軽蔑』と、『さらなる高みへの憧れ』が、日に日にデカくなっていくんすよ！ 登れば登るほど、下にいる奴らを『雑魚が…』って見下しちまう！ そんな自分が嫌なのに、もっと上に行きたい！ 俺は一体、高みで何をしたいんだ！？」</p>
+<p>「俺、自分が山を登ったり、つまずいたりするのを、どれだけ恥じてるか！ ハァハァ言ってる自分の息遣いを、どれだけ笑ってるか！ 空を飛んでる奴らを、どれだけ憎んでるか！ あーもう！ 高みにいるの、マジで疲れたんすよ！」</p>
+<p>ここで若者は言葉を詰まらせ、うつむいてしまった。ツァラトゥストラは、そんな彼がもたれていた木をじっと見つめ、再び語り始めた。</p>
+<p>「この木は、山の中で孤独に立っています。人間や動物なんかよりも、ずっと高く、そびえ立っている」</p>
+<p>「そして、もしこの木が喋ろうとしても、誰もその言葉を理解できないでしょうね。それほど高く、伸びてしまったのですから」</p>
+<p>「今、この木は待っている。ひたすら待っている。……一体、何を待っているんでしょうかね？ 雲の玉座にあまりにも近い場所に住んでいる。おそらく、自分を打ち砕く『最初の稲妻』を待っているんじゃないですか？」</p>
+<p>ツァラトゥストラがこれを語り終えると、若者はまるで感電したかのように激しく身震いし、叫んだ。
+「そうだ、ツァラトゥストラさん、あなたの言う通りだ！ 俺は高みを目指した時から、自分の『没落』を望んでいたんだ！ そして、あなたが、俺が待ち望んでいた稲妻（サンダー）だったんだ！ 見てくださいよ、あなたが現れてから、俺はもう何者でもなくなっちまった！ あなたへの嫉妬が、俺を破壊したんだ！」
+――若者はそう言って、子どものように激しく泣きじゃくった。</p>
+<p>（うわ、面倒くさいことになった……）
+ツァラトゥストラは内心舌打ちしつつも、優しく彼の腕を取り、一緒に歩き始めた。まったく、お人好しである。</p>
+<p>そして、しばらく二人で黙って歩いた後、ツァラトゥストラは静かにカウンセリングを始めた。</p>
+<p>「僕の心が、張り裂けそうですよ。君の言葉以上に、君のその目が、君のヤバさを物語っていますからね」</p>
+<p>「君はまだ、自由じゃありません。自由を探し求めているだけです。その探求のせいで、夜も眠れず、疲れ切っている」</p>
+<p>「君は自由な高みへと行こうとして、君の魂は星々に焦がれている。しかし、君の中にいる『悪い衝動』たちもまた、自由を渇望しているんですよ」</p>
+<p>「君の心の中にいる『荒ぶる野良犬（ワイルド・ドッグス）』たちが、自由を求めて地下室で大喜びで吠えているのが聞こえます。君の理性が『全ての牢獄をぶっ壊せ！』と努力している時にね」</p>
+<p>「君はまだ僕にとって、自由を夢見る囚人です。ああ、そういう囚人の魂ってのは、賢くはなりますが、同時に狡猾で、性根も腐っていくんですよ」</p>
+<p>「解放された精神は、まだ自分を浄化しなきゃいけない。たくさんの牢獄の記憶と、腐ったヘドロがまだ君の中に残っている。君のその目も、まだ綺麗にしなくちゃいけません」</p>
+<p>「ええ、僕は君の危険性を知っています。しかし、僕の愛と希望にかけて君に誓います。君の愛と希望を、投げ捨ててはいけません！」</p>
+<p>「君はまだ自分が『高貴』だと感じている。そして、君にイラついて、悪意の視線を送ってくる他の連中もまた、君を『高貴』だと感じている。知っておくといいですよ。高貴な人間ってのは、いつだって皆の邪魔者なんです」</p>
+<p>「たとえ良い人たちにとってさえ、高貴な者は邪魔なんです。そして、彼らが君を『良い人だね』と呼ぶ時でさえ、それは君を煙たがって、どこかへ追いやろうとしているだけなんですよ」</p>
+<p>「高貴な者は、新しい価値を創造し、新しい徳を作ろうとする。でも、良い人たちは古いものを望み、古いものが守られることを望むんです」</p>
+<p>「しかし、高貴な者の本当の危険は、彼が良い人になることじゃありません。厚かましいイキり野郎になること、他人を嘲笑する者になること、そして、破壊神になることです」</p>
+<p>「ああ、僕は知っていますよ。最高の希望を失ってしまった、高貴な者たちの成れの果てをね。そして今、彼らはあらゆる高尚な希望をディスっている」</p>
+<p>「今、彼らは刹那的な快楽の中でイキり散らして生きている。その日暮らしで、もはや何の目標も持っていなかった」</p>
+<p>「『精神もまた快楽（ウェーイ）っしょ！』――彼らはそう言いました。その瞬間、彼らの精神の翼はポッキリ折れた。今、それは地面を這いずり回り、汚いものをかじって汚しているだけです」</p>
+<p>「かつて彼らは英雄（ヒーロー）になろうと考えていた。今や彼らはただの好色な者（パリピ）です。英雄なんてものは、彼らにとって悲しみであり、恐怖でしかない」</p>
+<p>「しかし、僕の愛と希望にかけて、もう一度君に誓います。君の魂の中にいる英雄（ヒーロー）を、捨ててはならない！ 君の最高の希望（ベスト・ホープ）を、神聖に保つのです！」</p>
+<p>――ツァラトゥストラは、こう語ったのであった。</p>
 
                     </main>
 
