--- a/reborn_013_Vom_Krieg_und_Kriegsvolke.html
+++ b/reborn_013_Vom_Krieg_und_Kriegsvolke.html
@@ -175,59 +175,49 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h3 id="炎上必至引きこもり賢者軍人に向かって戦争最高と叫ぶ"><a class="header" href="#炎上必至引きこもり賢者軍人に向かって戦争最高と叫ぶ"><strong>【炎上必至】引きこもり賢者、軍人に向かって「戦争最高！」と叫ぶ</strong></a></h3>
-<p>市場の片隅でポツンと一人、演説をぶちかましてスベり倒したツァラトゥストラ。しかし彼の鋼のメンタルは、そんなことでは一切へこたれない。彼は次に、市場の警備か何かで詰めていた、いかにもガタイのいい兵士の一団に目をつけた。</p>
-<p>（フン…脳筋どもめ。だが、奴らにも俺の深遠な哲学を授けてやらねばなるまい。これも賢者たる俺の責務…！）</p>
-<p>かくして、全く頼まれてもいないのに、ツァラトゥストラは兵士たちの方へずんずんと歩いていき、新たな説法を開始した。完全にヤバい奴である。</p>
-<p>「そこの兵隊さんたち！ ちょっといいですかね！？」</p>
-<p>突然話しかけられ、兵士たちは訝しげな顔でツァラトゥストラを見る。</p>
-<p>&lt;兵士A&gt; 「あ？ なんだテメェ」
-&lt;ツァラ&gt; 「いやあ、素晴らしい肉体！ 日々の鍛錬の賜物ですな！ ……ところで、君たちって、馴れ合いのヌルい関係はお嫌いでしょう？」</p>
-<p>&lt;兵士B&gt; 「はあ？」</p>
-<p>「我々はですね、最高のライバル（敵）に手加減されるなんてまっぴらごめんですし、マジでリスペクトしてる相手（心底愛する者）にも容赦されたいなんて思わない！ そうでしょう！？ だから、この私が！ 君たちに！ 真実を語って差し上げますよ！」</p>
-<p>もはや、相手の同意を得る前に「そうでしょう！？」と決めつけるのが彼のスタイルである。</p>
-<p>「戦争における我が兄弟（ブラザー）たちよ！ 私は君たちを心から愛している！ なぜなら私も君たちと同じ、常に何かと戦う者（ファイター）だからです！ そして！ 私は君たちの最良の敵（ライバル）でもある！ だから聞け！ この私の真実の言葉を！」</p>
-<p>&lt;群衆A&gt; 「うわ、今度は軍人さんに絡み始めたよ」
-&lt;群衆B&gt; 「あの人、マジで命知らずだな…」</p>
-<p>「わかりますよ、ええ、わかりますとも。君たちの心の中にある、ドス黒い憎悪と嫉妬！ 他の奴が手柄を立てた時の、あの腸が煮えくり返るような気持ち！ ……でもね、君たちはそんな感情を恥じるほど、ちっぽけな存在じゃないはずだ！ むしろ、そんな感情を抱いている自分を恥じないくらい、デカい男になりなさい！」</p>
-<p>兵士たちはドン引きである。</p>
-<p>「もし君たちが、私のような『認識の聖者』、つまり真理を悟った賢者（ハイレベルプレイヤー）になれないとしても、心配はいりません！ せめて、その聖者の道を切り開く先駆者、つまり『軍人』でありなさい！ そう、君たちは聖者への道を切り拓く、いわば先遣隊（アヴァンギャルド）なのです！」</p>
-<p>&lt;兵士C&gt; 「なんか知らんが、俺たちすごく格下に見られてないか？」</p>
-<p>「私はね、多くの『兵士』を見かけます。だが、心から『軍人』と呼べる存在にはなかなか出会えない！ 君たちが着ているその服は『制服』と呼ばれていますが…願わくば、それが君たちの貧弱な内面を隠すための『偽服（コスプレ）』でないことを祈りますよ！」</p>
-<p>痛いところを突かれたのか、数人の兵士がカチンときた顔をする。</p>
-<p>「君たちは常に敵を探し求める者であれ！ 己の敵を！ そして君たちの中には、一目見ただけで『こいつ、気に食わねえ！』と本能的に憎悪を抱く、そういう才能の持ち主もいるでしょう！」</p>
-<p>「探し求めた敵と、己の思想（推し）のために戦うのです！ そして、もし君たちの思想が敗れたとしても、問題ない！ その誠実さこそが、敗北を超えた勝利の雄叫びを上げるのですから！」</p>
-<p>&lt;群衆C&gt; 「オタクがよく言うやつだ！ 『負けたけど、俺たちの推しが一番尊い！』みたいな！」</p>
-<p>「君たちは平和を、次の戦争（イベント）への準備期間として愛するべきです！ そして、長い平和より、短い平和をこそ愛しなさい！ 準備期間が長すぎるとダレるでしょう？」</p>
-<p>「私は君たちに、汗水たらして働く『労働』は勧めません！ 『闘争』を勧めます！ 私は君たちに、安穏とした『平和』は勧めません！ 『勝利』を勧めます！ 君たちの労働とは闘争であり、君たちの平和とは勝利そのものであるべきなのです！」</p>
-<p>「弓矢を持っている時だけ、人は黙っていられる。武器がなければ、口先だけのクソみたいな言い争いをするだけだ。君たちの平和は、常に次なる勝利のためにあるべきなのです！」</p>
-<p>&lt;兵士A&gt; 「おい、こいつ何言ってんだ…？ 俺たちに喧嘩を売ってるのか？」
-&lt;兵士B&gt; 「いや、なんか…褒めてるのか…？ よくわからん…」</p>
-<p>「よく『正義のためなら戦争も許される』とか言う奴らがいますよね？ ちゃんちゃらおかしい！ 私は君たちに言おう！ 『善き戦争』こそが、あらゆる大義を聖なるものにするのだと！」</p>
-<p>逆張りの極みである。</p>
-<p>「戦争と勇気は、そこらへんの博愛主義（隣人愛）なんかより、よっぽど多くの偉大なことを成し遂げてきた！ 君たちの安っぽい同情（憐憫）じゃない！ 君たちの『勇気』こそが、これまで不幸な者たちを救ってきたのです！」</p>
-<p>「何が善いことか、ですって？ 簡単ですよ。『勇敢であること』が善いのです。イマドキの若い女の子たちに言わせれば、『善いことって、エモくて、同時に尊いことなんだ』ってことですよ！」</p>
-<p>急に若者に媚びたような口調になるツァラトゥストラ。兵士たちの眉間のシワがさらに深くなる。</p>
-<p>「君たちは『無情だ』と非難されることがあるかもしれない。しかし！ 君たちの心は真実であり、私は君たちがその熱い心を隠そうとする、そのシャイな部分（心の温かさの恥）を愛している！」</p>
-<p>「君たちは、感情が高ぶって我を忘れること（満ち潮）を恥じるかもしれない。だが、他の連中は、感情が冷めきっていること（引き潮）を恥じるべきなのだ！」</p>
-<p>&lt;群衆D&gt; 「なんか急にポエミーになったぞ…」
-&lt;群衆E&gt; 「このおっさん、情緒不安定すぎない？」</p>
-<p>「なんだい、君たちは自分の見た目が醜いとでも思っているのか？ ならば兄弟たちよ！ 『崇高さ』という名のオーラをその身に纏いたまえ！ それは醜さを覆い隠す、最高の外套（マント）となるだろう！」</p>
-<p>「そして、君たちの魂がレベルアップして偉大になるとき、それは傲慢（いせい）になる。君たちの崇高さの中には、悪意が宿るのだ。フッ…私にはわかる。君たちのことがね」</p>
-<p>「悪意の中では、強者と弱者は出会う。だが彼らは互いを理解できない。フフフ…私には、わかるのだよ」</p>
-<p>もはや、誰にもわからない世界に一人で浸っている。</p>
-<p>「君たちが憎むべきは、尊敬できる好敵手だけだ！ 軽蔑すべき雑魚（ザコ）を相手にするな！ 君たちは己の敵を誇りに思うべきだ！ そうすれば、敵の成功もまた、君たちの成功となるのだから！」</p>
-<p>「反抗――それは奴隷に許された高貴さだ。だが君たちのようなエリートは、『服従』することにこそ高貴さを見出したまえ！ 君たちが下す命令そのものが、より大いなるものへの服従であれ！」</p>
-<p>「善き軍人にとっては、『お前は～すべし』という命令の言葉は、『私は～したいなぁ』なんていう生ぬるい願望より、よっぽど心地よく響くはずだ！ そして、君たちが愛する全てのものは、まず君たち自身に命じさせなさい！」</p>
-<p>&lt;兵士C&gt; 「こいつ…さてはドMだな…？」</p>
-<p>「そして！ 君たちの最高の思想は！ この私に命じさせなさい！ ――いいか、よく聞け！ その思想とは、『人間は、乗り越えられるべき存在である！』ということだ！」</p>
-<p>出た！ いつものやつ！</p>
-<p>「故に！ 服従と戦争の生を生きよ！ 長生きすることに何の意味がある！？ どの戦士が手加減されることを望むというのだね！？」</p>
-<p>「私は君たちを容赦しない！ なぜなら！ 私は君たちを心底から愛しているからだ、戦争における我が兄弟たちよッ！！」</p>
-<p>ツァラトゥストラはビシッとポーズを決め、満足げな表情を浮かべた。</p>
-<p>一方、兵士たちは顔を見合わせ、一人が代表してこう呟いた。</p>
-<p>「……なあ、こいつ、公務執行妨害でしょっ引くか？」</p>
-<p>ツァラトゥストラの熱弁は、誰の心にも全く響いていなかったのであった。</p>
+                        <h2 id="炎上上等レスバこそが人類を次のステージへ導くのだ"><a class="header" href="#炎上上等レスバこそが人類を次のステージへ導くのだ">炎上上等！レスバこそが人類を次のステージへ導くのだ！</a></h2>
+<p>市場の群衆にドッと笑われ、一瞬フリーズするツァラトゥストラ。彼の顔はみるみるうちに赤くなり、プルプルと小刻みに震え始めた。
+（こ、この俗物どもが……！俺の崇高な『超人』思想のありがたみが分からんとは！）
+完全に逆ギレである。彼は咳払いを一つすると、仕切り直してさらにヤバい演説を始めた。</p>
+<p>「フン……！ どうやら君たちのような平和ボケした一般人には、高尚な話は早すぎたようですね！ よろしい、ならば戦争だ！ もっと君たちにも分かりやすい『闘争』の話をしてやろうじゃありませんか！」</p>
+<p>&lt;群衆A&gt; 「え、逆ギレ？」
+&lt;群衆B&gt; 「さっきと言ってることが180度違うんだが…」</p>
+<p>「我々は！ 我々の最高の敵（ライバル）から手加減されることなど望まない！ そして、我々がガチで推している者たちからも、馴れ合いの同情など欲しくはない！ だから聞け！ これが真実（ガチ）の言葉だ！」</p>
+<p>「我が戦友（とも）たちよ！ そう、そこにいる君たち全員だ！ 私は君たちを心底から愛している！ 私は君たちと同じゲーマーであり、常にそうであった！ そして同時に、私は君たちの最良のアンチでもある！ だからこそ、真実を語ってやるのだ！」</p>
+<p>地の文：市場にいる買い物客たちを、勝手に戦友認定するおじさん。周りはドン引きである。</p>
+<p>「私は知っている！ 君たちの心に渦巻く、あのドス黒い憎悪と嫉妬の炎を！ 『あいつの装備、俺よりレアじゃん…』とか、『なんであいつだけ“推し”にリプもらえてんだ…』とか！ 君たちは、そんな嫉妬心を無くせるほど人間ができていない！ だからこそ！ その醜い感情を恥じるな！ むしろその嫉妬心を誇れるくらい、偉大なオタクになるのです！」</p>
+<p>&lt;群衆C&gt; 「なんか急にオタクに説教し始めたぞ」
+&lt;群衆D&gt; 「俺の心の闇を的確に抉ってくるのやめてほしい」</p>
+<p>「もし君たちが、悟りの聖者（トップランカー）になれないのなら、せめてその尖兵（アタッカー）であれ！ 彼らこそ、聖者への道を切り開く先駆者（アーリーアダプター）なのだから！」</p>
+<p>「私は多くの兵士（プレイヤー）を見る。願わくば、そこに多くの軍人（ガチ勢）を見たいものだ！ 君たちが着ているその『制服（量産型ファッション）』！ 願わくば、それが君たちの無個性な内面を隠すための『制服（カモフラージュ）』でないことを！」</p>
+<p>「常に敵を探し求める者であれ！ そう、君だけの敵（アンチ）を！ そして一目見ただけで『こいつ、気に食わん！』と燃え上がれる相手を見つけるのです！」</p>
+<p>「君たちは自分の敵を探し、自分の戦争（レスバ）をしろ！ 己の思想（推しカプ）のために戦うのです！ そして、もしそのレスバに負けたとしても、君たちの誠実さ（ガチ愛）こそが勝利の雄叫びを上げるだろう！」</p>
+<p>&lt;群衆E&gt; 「この人、絶対SNSで毎日誰かと喧嘩してるタイプだ…」</p>
+<p>「平和を愛せだと？ 笑わせるな！ 平和など、次の戦争（大型アップデート）への準備期間にすぎない！ 長い平和（凪節）より、短い平和（イベント周回）を愛するのです！」</p>
+<p>「私は君たちに労働（日課）を勧めない！ 闘争（ランクマッチ）を勧める！ 私は君たちに平和（和解）を勧めない！ 勝利（論破）を勧める！ 君たちの労働は闘争であり、君たちの平和は勝利でなければならない！」</p>
+<p>「弓矢（スマホ）を持っている時だけ、人は静かでいられる。それ以外は、おしゃべり（クソリプ）と口論（レスバ）に明け暮れるだけだ！ 君たちの平和とは、完全勝利の先にあるのだ！」</p>
+<p>地の文：要するに、レスバに勝つまでスマホを手放すな、と言っている。とんでもないおじさんである。</p>
+<p>「『正義のためなら戦争も許される』だと？ 違う！ 断じて違う！ 『良質な戦争（面白いレスバ）』こそが、どんなクソみたいな大義名分（言い分）をも聖なるものに変えるのだ！」</p>
+<p>「戦争と勇気は、隣人愛（なかよしこよし）なんぞより、よっぽど多くの偉大なことを成し遂げてきた！ 君たちの憐れみ（同情リプ）じゃない！ 君たちの勇気（クソリプへの反論）こそが、これまで不幸な者たちを救ってきたのだ！」</p>
+<p>&lt;群衆A&gt; 「もう何言ってるか全然わかんない」
+&lt;群衆B&gt; 「つまり、喧嘩しろってこと？」</p>
+<p>「何が良いことか、ですって？ 勇敢であること、それが良いことだ！ そこらの女子高生にでも言わせてみろ！ 『良いことって、マジ尊くて、しかもエモいことじゃね？』ってな！」</p>
+<p>「君たちは『無慈悲な人だ』と言われるかもしれない。だが、君たちの心（推しへの愛）は本物だ！ 私は、君たちがその熱い想いを恥じらう姿をこそ愛する！ 君たちは自分の満ち潮（テンションMAX）を恥じ、他の連中は自分の引き潮（飽き）を恥じるのだ！」</p>
+<p>「君は醜いか？ ならば聞け、兄弟よ！ 崇高なるもの、すなわち『醜さを吹き飛ばすほどの圧倒的なオーラ』をその身に纏うのです！ それが醜いものの外套（ファッション）だ！」</p>
+<p>「そして、君たちの魂が偉大になるとき、それは傲慢になる！ その崇高さの中には悪意が宿る！ 私には分かる！ 悪意の中でこそ、強者と弱者は出会うのだ！ だが互いに理解はしない！ 私には分かる！」</p>
+<p>地の文：さっきから「私には分かる」を連発しているが、本当に分かっているかは甚だ疑問である。</p>
+<p>「君たちは、憎むべき敵を持つべきだ！ 軽蔑すべき雑魚を相手にするな！ 汝の敵を誇れ！ そうすれば、敵の成功（バズり）もまた、君の成功（燃料）となるのだ！」</p>
+<p>「反抗――それは奴隷（エンジョイ勢）における気高さだ。だが君たちガチ勢の気高さは、服従にあるべきだ！ 君たちの命令そのものが、絶対的な服従であれ！」</p>
+<p>「優れた軍人（ゲーマー）にとっては、『～すべし（運営からの指令）』という言葉より、『我は～したい（これが俺のプレイスタイルだ）』という言葉の方が心地よい。そして、君が愛する全てのものを、まず君自身に命じさせるのだ！」</p>
+<p>「君たちの生への愛は、君たちの最高の希望への愛であれ！ そして、君たちの最高の希望とは、生の最高の思想であるべきだ！」</p>
+<p>「しかし！ その最高の思想は、この私が命じてやろう！ ――それは、『人間は、乗り越えられるべきものである』ということだ！」</p>
+<p>&lt;群衆C&gt; 「出た！いつものやつ！」
+&lt;群衆D&gt; 「天丼芸かよ！」</p>
+<p>「故に！ 服従と戦争の生を生きよ！ 長生きすることに何の意味がある！ どの戦士（ゲーマー）が、運営からのナーフ（弱体化）を容赦してくれと願うだろうか！」</p>
+<p>ツァラトゥストラは天を仰ぎ、恍惚の表情で叫んだ。</p>
+<p>「私は君たちを容赦しない！ なぜなら私は！ 君たちを心底から愛しているからだ、我が戦友（とも）たちよッ！」</p>
+<p>――ツァラトゥストラはこう言った。
+ビシッとポーズを決めるツァラトゥストラ。しかし、市場の空気は完全に凍りつき、カラスの鳴き声だけが虚しく響き渡るのであった。</p>
 
                     </main>
 
