--- a/reborn_016_Von_der_Keuschheit.html
+++ b/reborn_016_Von_der_Keuschheit.html
@@ -175,41 +175,38 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h3 id="4-都会はつらいよ-陰キャ賢者の純潔講座"><a class="header" href="#4-都会はつらいよ-陰キャ賢者の純潔講座"><strong>4. 都会はつらいよ！ 陰キャ賢者の純潔（）講座</strong></a></h3>
-<p>さて、ツァラトゥストラの演説は、綱渡り芸人への前フリだと勘違いされ、市場の群衆から盛大にスルーされたわけだが、本人は全く気付いていない。むしろ、自分の深遠な思想に人々が静まり返っているとさえ思っている。ポジティブシンキングの化身である。</p>
-<p>彼はなおも語り続ける。今度のテーマは「純潔」について。人々のざわめきをBGMに、彼は一人、悦に入っていた。</p>
-<p>「フン……やはり僕は森を愛していますね。それに比べて、この都会とやらは生きるのが実にしんどい。なぜなら、そこにはあまりにも多くの……その……発情期の獣みたいな人たちが多すぎるからです！」</p>
-<p>&lt;群衆A&gt; 「え、ディスられた？」
-&lt;群衆B&gt; 「俺たち獣だってさ」</p>
-<p>「ハッキリ言わせてもらいましょう！ 色仕掛けで迫ってくる女性の夢を見るくらいなら、通り魔に背中を刺される方がよっぽどマシです！」</p>
-<p>もはやただの女性恐怖症である。</p>
-<p>「そして、そこの男たち！ 君たちを見ているとよく分かりますよ。その目は雄弁に語っている！ 君たちはこの地上において、女性とイチャつくこと以上の幸福を知らない！ 脳内ピンク色か！」</p>
-<p>「君たちの魂の底にはヘドロが溜まっている！ そして万が一、そのヘドロが知性を持ってしまったら……目も当てられない！ ただの厄介者じゃないか！」</p>
-<p>「いっそ動物のように本能のままに生きるなら、まだマシだったでしょう！ しかし、動物には『無垢』という最強のパラメータが備わっているのです！ 君たちはそれすら持たない、中途半端な存在だ！」</p>
-<p>&lt;群衆C&gt; 「さっきから悪口しか聞こえないんだが」
-&lt;群衆D&gt; 「なんか俺、全否定されてる？」</p>
-<p>「だからと言って、私が君たちに『感覚を全て殺せ』と勧めているとでも？ 違います！ 私が勧めるのは『感覚の無垢』！ ピュアな感性を取り戻せと言っているのです！」</p>
-<p>「私が君たちに『純潔』を勧めるとでも？ とんでもない！ 純潔など、一部のガチ勢にとっては美徳かもしれませんが、多くの凡人にとっては、ほとんど悪徳でしかないのですよ！」</p>
-<p>「ほら、そこにいる君たち！ 無理して禁欲生活送ってません？ でもね、その抑圧された性欲という名の飢えたメス犬が、君たちのやる事なす事すべてを、羨望の眼差しでジーーーッと見つめているんですよ！ 『いいなー、楽しそうだなー』ってね！」</p>
-<p>「どんなに高尚なフリをしても！ どんなにクールな精神を装っても！ 君たちの心の奥底では、その獣（メス犬）が『キーーーッ！ 羨ましい！』と不協和音を奏でているのです！ 隠したって無駄ですよ！」</p>
-<p>&lt;群衆E&gt; 「メス犬…？ 急にどうした？」</p>
-<p>「そして、その飢えたメス犬が、肉体的なご馳走（おあずけされたアレやコレ）を拒否された時、いかに巧妙に『精神的なオヤツ』をねだるか知っていますか！？ 『肉がダメなら、せめて精神のひとかけらでも……』と、アート鑑賞だの、悲劇の物語だのに姿を変えて、君たちの心をしゃぶり尽くそうとするのです！」</p>
-<p>「君たち、悲劇とか、心が張り裂けそうな物語とか、大好きでしょう？ でも言わせてもらおう！ 私は君たちのその『感動』とやらを、全く信用していない！」</p>
-<p>「君たちはあまりにも残酷な目をしている！ 苦しんでいる人たちを、どこか淫らな目で見ているじゃないか！ その『可哀想に』という感情……それ、本当に『憐憫』ですか？ 『憐憫』という高尚なコスプレをした、君たちのサディスティックな性癖がダダ漏れになっているだけではないのですか！？」</p>
-<p>&lt;群衆A&gt; 「うわ、こいつ人の心を読むのか！？」
-&lt;群衆B&gt; 「なんか図星で気まずい…」</p>
-<p>「ついでに、こんな例え話もくれてやろう！ かつて、悪魔を追い払おうとした聖職者たちが、その潔癖さゆえに、逆に悪魔に取り憑かれて豚の中に入っていったという話がある！ 潔癖すぎるのも考えものなんですよ！」</p>
-<p>「純潔を保つのが無理ゲーな人には、ハッキリと『やめとけ』と忠告すべきです！ それが地獄への片道切符――魂がヘドロと性欲にまみれる、破滅への道とならないようにね！」</p>
-<p>ツァラトゥストラは、ここで一息つき、ニヤリと笑った。</p>
-<p>「おや？ 私が今、何か汚れた事柄について語っているように聞こえましたか？ いいえ、こんなものは私にとって最悪のことではありません」</p>
-<p>「真に恐ろしいのは、真実が汚れていることではない。それが『浅薄』であることです！ 物事を分かっている人間は、深みのない水たまりにわざわざ足を踏み入れたりはしないのです！」</p>
-<p>&lt;群衆C&gt; 「話が…話が全然わからん…！」</p>
-<p>「ですが、ご安心を！ まことに、根源から純潔な者たちも存在するのです！ 彼らは心が広く、君たちよりもずっと楽しそうに、そして豊かに笑う！」</p>
-<p>「彼らは『純潔』なんていう堅苦しい概念そのものを笑い飛ばし、そしてこう問うのです！ 『え、純潔って何？ 新しいスイーツ？』ってね！」</p>
-<p>「純潔なんて、ある意味、愚かなことじゃないですか。しかし、この愚かさは我々が求めて手に入れたものではない。向こうから勝手にやってきた、招かれざる客のようなものなのです」</p>
-<p>「我々はこの客に、宿と心を提供してやった。今や、そいつは我々の心に住み着いている。……まあ、本人が望むだけ、好きなだけ居座らせてやればいいじゃないですか！」</p>
-<p>――ツァラトゥストラは、ドヤ顔でそう語りきった。
-市場の群衆は、あまりに突飛な結論にポカンとし、ただただ綱渡り芸人が準備を終えるのを待つばかりであった。</p>
+                        <h2 id="説教タイム童貞よ純潔を語る前に己のドス黒い欲望と向き合え"><a class="header" href="#説教タイム童貞よ純潔を語る前に己のドス黒い欲望と向き合え">【説教タイム】童貞よ、純潔を語る前に己のドス黒い欲望と向き合え！</a></h2>
+<p>ツァラトゥストラは、市場の喧騒から少し離れた場所で、再びおもむろに語り始めた。彼の周りには、綱渡り芸人のショーが終わってもなお、このヤバいおじさんの次なる奇行を見届けようという野次馬が、そこはかとなく集まっていた。</p>
+<p>「皆さん、ちょっといいですか！ 僕は森が大好きなんです！ 逆に、都会はマジで無理！ 生きてるだけでMPがゴリゴリ削られるんですよ。なぜなら、あそこには……あまりにも多くの『発情期の獣』たちがいるからです！」</p>
+<p>（また始まったよ、このおじさんの説教が……。しかも導入が下手すぎる）と、天の声が聞こえた気がしたが、ツァラトゥストラは気にしない。</p>
+<p>「ハッキリ言って、マッチングアプリでヤリモク女の『会いたいな♡』っていう空虚なメッセージを受け取るくらいなら、凶悪な殺人鬼が出てくるデスゲームに参加して即死する方が、まだマシだと思いませんか！？」</p>
+<p>&lt;群衆A&gt; 「思わねえよ！」
+&lt;群衆B&gt; 「例えのクセが強すぎるだろ！」</p>
+<p>「そして、そこの男たち！ 君たちのその濁った目！ その目は雄弁に語っていますよ！ 『この世で一番素晴らしいこと、それはカワイイ女の子とベッドインすることだ』とね！ それ以外、何も考えてないでしょう！」</p>
+<p>「君たちの魂の奥底には、ヘドロが溜まっていますよ！ そして最悪なのは、そのヘドロが『俺、ちょっと賢いんで』みたいな感じで、小難しい理屈をこね始めた時です！ もう、目も当てられない！」</p>
+<p>「いっそのこと、完全に動物として生きているなら、まだマシだったでしょう！ 動物には、一点の曇りもない『無垢』がありますからね！ 彼らはただ、本能に従うのみ！」</p>
+<p>&lt;群衆C&gt; 「なんか俺たち、動物以下って言われてないか？」</p>
+<p>「だからと言って、私は君たちに『そのムラムラする感覚を全て消し去れ！』と説教するつもりはありません。むしろ逆です！ 私がオススメするのは、その感覚の『無垢』を取り戻すことなんです！」</p>
+<p>「私が君たちに『純潔』を勧めるとでも？ 言っておきますが、純潔がある人にとっては最高の『徳』ですがね、多くの人にとっては、ほとんど『最悪の呪い』なんですよ」</p>
+<p>「そういう人たちは、確かに自制します。禁欲生活を送るでしょう。しかし！ 彼らの心の中で飼われている『淫欲』という名の雌犬が、彼らのやる事なす事すべてを、ヨダレを垂らしながら羨望の眼差しで見つめているんです！」</p>
+<p>&lt;群衆D&gt; 「雌犬…？ なんの話だ？」
+&lt;群衆E&gt; 「こいつの頭の中どうなってんだ…」</p>
+<p>「彼らがどんなに高尚な徳を積もうと！ どんなにクールな精神を装おうと！ この飢えた獣（雌犬）とその不協和音は、ストーカーのようについて回るんです！」</p>
+<p>「そして、この『淫欲』という名の雌犬が、どれほど狡猾か知っていますか！？ 肉体という名の『お肉』を与えられないと分かった瞬間、今度は『精神的な繋がりが欲しいワン…』とか言って、精神性という名の『高級ドッグフード』をねだってくるんですよ！ なんて卑しい！」</p>
+<p>「君たちは悲劇とか、心が張り裂けそうになる物語が好きですか？ しかし、言わせてもらおう！ 私は君たちのその『感動ポルノ好き』な雌犬を、まったく信用していません！」</p>
+<p>&lt;群衆A&gt; 「感動ポルノって言うな！」</p>
+<p>「君たちは、あまりにも残酷な目をしている。苦しんでいる人たちを、いやらしい目で見て興奮しているだけでしょう。君たちのそのドスケベな好奇心が、『憐憫』という名の高尚なドレスを着て変装しているだけじゃないんですか！？」</p>
+<p>「ついでに、このありがたーい譬え話も授けてあげましょう。世の中には、自分の中の悪魔を追い払おうと必死になった結果、その過程で自らが『豚』、つまり悪魔そのものになってしまった人たちが、少なくないんですよ！」</p>
+<p>&lt;群衆B&gt; 「それ、特大ブーメランじゃね？」</p>
+<p>「もし君にとって『純潔』を守ることが苦しいのなら、今すぐやめなさい！ それは地獄への片道切符です！ 魂がヘドロと性欲にまみれた、哀れなモンスターになるだけですからね！」</p>
+<p>「私が汚い話をしているとでも？ いいえ、そんなことは私にとって最悪のことではありません。本当に最悪なのは、真実が『浅い』ことです。認識する者、つまり賢者は、真実が語られているその水たまりが、汚れているからではなく、足首までしかないほど『浅い』から、そこに入るのを嫌がるんですよ！」</p>
+<p>&lt;群衆C&gt; 「話が急に哲学的になったぞ…！ついていけねえ！」</p>
+<p>「まことに、この世には、根源から純潔な者たちがいます。彼らは心が優しく、君たちよりも朗らかに、そして豊かに笑う、真の陽キャです」</p>
+<p>「彼らは『純潔』ということについてさえ笑い飛ばし、そしてこう問うのです。『え？ 純潔？ 何それ美味しいの？』とね！」</p>
+<p>「純潔は愚かなことかって？ いやいや、でもこの『愚かさ』は、我々が望んで手に入れたものじゃない。向こうから勝手にやって来たんですよ」</p>
+<p>「我々はこの招かれざる客に、宿と心を提供した。まあ、泊めてやったわけです。今、それは我々のところに住み着いている。――それが望むだけ、好きなだけ長く居座らせてやればいいんじゃないですかね！」</p>
+<p>ツァラトゥストラはかく語りき。</p>
+<p>（結局、ものすごく適当な結論で締めくくった。このおじさんは、本当にそれでいいと思っているのだろうか）</p>
 
                     </main>
 
